@@ -5,9 +5,12 @@
  */
 package org.geoserver.cluster.hazelcast.web;
 
-import com.hazelcast.core.Cluster;
+import static org.geoserver.web.util.WebUtils.IsWicketCssFileEmpty;
+
+import com.hazelcast.cluster.Cluster;
+import com.hazelcast.cluster.Member;
 import com.hazelcast.core.HazelcastInstance;
-import com.hazelcast.core.Member;
+import java.io.Serial;
 import java.net.InetSocketAddress;
 import java.util.ArrayList;
 import java.util.List;
@@ -22,6 +25,20 @@ import org.geoserver.web.GeoServerApplication;
 
 public class NodeInfoDialog extends Panel {
 
+    private static final boolean isCssEmpty = IsWicketCssFileEmpty(NodeInfoDialog.class);
+
+    @Override
+    public void renderHead(org.apache.wicket.markup.head.IHeaderResponse response) {
+        super.renderHead(response);
+        // if the panel-specific CSS file contains actual css then have the browser load the css
+        if (!isCssEmpty) {
+            response.render(org.apache.wicket.markup.head.CssHeaderItem.forReference(
+                    new org.apache.wicket.request.resource.PackageResourceReference(
+                            getClass(), getClass().getSimpleName() + ".css")));
+        }
+    }
+
+    @Serial
     private static final long serialVersionUID = -6118539402031076763L;
 
     public NodeInfoDialog(String id) {
@@ -31,42 +48,37 @@ public class NodeInfoDialog extends Panel {
         Member m = hz.getCluster().getLocalMember();
         InetSocketAddress address = m.getSocketAddress();
 
-        add(new Label("groupName", hz.getConfig().getGroupConfig().getName()));
+        add(new Label("groupName", hz.getConfig().getClusterName()));
         add(new Label("ip", address.getAddress().getHostAddress()));
         add(new Label("host", address.getHostName()));
         add(new Label("port", String.valueOf(address.getPort())));
 
-        add(
-                new WebMarkupContainer("cluster")
-                        .add(
-                                new ListView<Member>("members", new MembersDetachableModel()) {
-                                    private static final long serialVersionUID = 1L;
+        add(new WebMarkupContainer("cluster").add(new ListView<>("members", new MembersDetachableModel()) {
+            @Serial
+            private static final long serialVersionUID = 1L;
 
-                                    @Override
-                                    protected void populateItem(ListItem<Member> item) {
-                                        Member m = item.getModelObject();
-                                        InetSocketAddress address = m.getSocketAddress();
-                                        String ip = address.getAddress().getHostAddress();
-                                        int port = address.getPort();
-                                        String local = m.localMember() ? " (this)" : "";
+            @Override
+            protected void populateItem(ListItem<Member> item) {
+                Member m = item.getModelObject();
+                InetSocketAddress address = m.getSocketAddress();
+                String ip = address.getAddress().getHostAddress();
+                int port = address.getPort();
+                String local = m.localMember() ? " (this)" : "";
 
-                                        item.add(
-                                                new Label(
-                                                        "label",
-                                                        String.format("%s:%d%s", ip, port, local)));
-                                    }
-                                }));
+                item.add(new Label("label", "%s:%d%s".formatted(ip, port, local)));
+            }
+        }));
     }
 
     private static class MembersDetachableModel extends LoadableDetachableModel<List<Member>> {
+        @Serial
         private static final long serialVersionUID = 1L;
 
         @Override
         protected List<Member> load() {
             HazelcastInstance hz = getHazelcast();
             Cluster c = hz.getCluster();
-            List<Member> members = new ArrayList<Member>(c.getMembers());
-            return members;
+            return new ArrayList<>(c.getMembers());
         }
     }
 
