@@ -4,13 +4,14 @@
  */
 package org.geoserver.ogcapi.v1.dggs;
 
-import static org.geoserver.ogcapi.MappingJackson2YAMLMessageConverter.APPLICATION_YAML_VALUE;
-import static org.geoserver.ogcapi.OpenAPIMessageConverter.OPEN_API_MEDIA_TYPE_VALUE;
+import static org.geoserver.ogcapi.SwaggerJSONAPIMessageConverter.OPEN_API_MEDIA_TYPE_VALUE;
 import static org.geoserver.ows.util.ResponseUtils.buildURL;
 import static org.geotools.dggs.gstore.DGGSStore.RESOLUTION;
+import static org.springframework.http.MediaType.APPLICATION_YAML_VALUE;
 
 import io.swagger.v3.oas.models.OpenAPI;
 import java.io.IOException;
+import java.io.Serializable;
 import java.math.BigInteger;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -51,24 +52,30 @@ import org.geoserver.wfs.request.FeatureCollectionResponse;
 import org.geoserver.wfs.request.GetFeatureRequest;
 import org.geoserver.wfs.request.Query;
 import org.geoserver.wms.WMS;
+import org.geotools.api.data.DataAccess;
+import org.geotools.api.feature.Feature;
+import org.geotools.api.feature.simple.SimpleFeatureType;
+import org.geotools.api.feature.type.AttributeDescriptor;
+import org.geotools.api.feature.type.FeatureType;
+import org.geotools.api.filter.Filter;
+import org.geotools.api.filter.FilterFactory;
+import org.geotools.api.filter.PropertyIsEqualTo;
 import org.geotools.dggs.DGGSInstance;
 import org.geotools.dggs.Zone;
+import org.geotools.dggs.datastore.DGGSStoreFactory;
+import org.geotools.dggs.gstore.DGGSFeatureSource;
 import org.geotools.dggs.gstore.DGGSStore;
 import org.geotools.factory.CommonFactoryFinder;
 import org.geotools.referencing.crs.DefaultGeographicCRS;
 import org.geotools.util.logging.Logging;
 import org.geotools.xsd.EMFUtils;
 import org.locationtech.jts.geom.Coordinate;
+import org.locationtech.jts.geom.Geometry;
 import org.locationtech.jts.geom.GeometryFactory;
 import org.locationtech.jts.geom.Point;
 import org.locationtech.jts.geom.Polygon;
 import org.locationtech.jts.io.ParseException;
 import org.locationtech.jts.io.WKTReader;
-import org.opengis.feature.simple.SimpleFeatureType;
-import org.opengis.feature.type.AttributeDescriptor;
-import org.opengis.filter.Filter;
-import org.opengis.filter.FilterFactory2;
-import org.opengis.filter.PropertyIsEqualTo;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -78,17 +85,13 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseBody;
 
 /** Implementation of OGC API - DGGS */
-@APIService(
-        service = "DGGS",
-        version = "1.0.1",
-        landingPage = "ogc/dggs/v1",
-        serviceClass = DGGSInfo.class)
+@APIService(service = "DGGS", version = "1.0.1", landingPage = "ogc/dggs/v1", serviceClass = DGGSInfo.class)
 @RequestMapping(path = APIDispatcher.ROOT_PATH + "/dggs/v1")
 public class DGGSService {
 
     static final Logger LOGGER = Logging.getLogger(DGGSService.class);
 
-    static final FilterFactory2 FF = CommonFactoryFinder.getFilterFactory2();
+    static final FilterFactory FF = CommonFactoryFinder.getFilterFactory();
 
     public static final String CORE = "http://www.opengis.net/spec/ogcapi-dggs-1/1.0/conf/core";
 
@@ -99,8 +102,8 @@ public class DGGSService {
     /**
      * This is used for time support, default time and time filtering.
      *
-     * <p>TODO: dimension support should be factored out of WMS and moved to a class in gs-main,
-     * then the dependency to gs-wms can be removed.
+     * <p>TODO: dimension support should be factored out of WMS and moved to a class in gs-main, then the dependency to
+     * gs-wms can be removed.
      */
     private final WMS wms;
 
@@ -119,6 +122,11 @@ public class DGGSService {
         return gs.getService(DGGSInfo.class);
     }
 
+    public DGGSInfo getServiceInfo() {
+        // required for DisabledServiceCheck class
+        return getService();
+    }
+
     @GetMapping(name = "getLandingPage")
     @ResponseBody
     @HTMLResponseBody(templateName = "landingPage.ftl", fileName = "landingPage.html")
@@ -130,18 +138,14 @@ public class DGGSService {
     @ResponseBody
     @HTMLResponseBody(templateName = "conformance.ftl", fileName = "conformance.html")
     public ConformanceDocument conformance() {
-        List<String> classes = Arrays.asList(CORE);
+        List<String> classes = List.of(CORE);
         return new ConformanceDocument(DISPLAY_NAME, classes);
     }
 
     @GetMapping(
             path = {"openapi", "openapi.json", "openapi.yaml"},
             name = "getApi",
-            produces = {
-                OPEN_API_MEDIA_TYPE_VALUE,
-                APPLICATION_YAML_VALUE,
-                MediaType.TEXT_XML_VALUE
-            })
+            produces = {OPEN_API_MEDIA_TYPE_VALUE, APPLICATION_YAML_VALUE, MediaType.TEXT_XML_VALUE})
     @ResponseBody
     @HTMLResponseBody(templateName = "api.ftl", fileName = "api.html")
     public OpenAPI api() throws IOException {
@@ -158,25 +162,18 @@ public class DGGSService {
     @GetMapping(path = "collections/{collectionId}", name = "describeCollection")
     @ResponseBody
     @HTMLResponseBody(templateName = "collection.ftl", fileName = "collection.html")
-    public CollectionDocument collection(@PathVariable(name = "collectionId") String collectionId)
-            throws IOException {
+    public CollectionDocument collection(@PathVariable(name = "collectionId") String collectionId) throws IOException {
         FeatureTypeInfo ft = getFeatureType(collectionId);
-        CollectionDocument collection = new CollectionDocument(gs, ft);
-
-        return collection;
+        return new CollectionDocument(gs, ft);
     }
 
-    /**
-     * Returns the feature type for the specified collection, checking it's a valid DGGS collection
-     */
+    /** Returns the feature type for the specified collection, checking it's a valid DGGS collection */
     protected FeatureTypeInfo getFeatureType(String collectionId) throws IOException {
         // single collection
         FeatureTypeInfo featureType = getCatalog().getFeatureTypeByName(collectionId);
         if (featureType == null) {
             throw new ServiceException(
-                    "Unknown collection " + collectionId,
-                    ServiceException.INVALID_PARAMETER_VALUE,
-                    "collectionId");
+                    "Unknown collection " + collectionId, ServiceException.INVALID_PARAMETER_VALUE, "collectionId");
         }
         if (!isDGGSType(featureType)) {
             throw new ServiceException(
@@ -187,6 +184,25 @@ public class DGGSService {
         return featureType;
     }
 
+    protected String getZoneColumnName(String collectionId) throws IOException {
+        AttributeDescriptor descriptor = getZoneColumnDescriptor(collectionId);
+        if (descriptor == null) {
+            throw new ServiceException(
+                    "Collection " + collectionId + " does not expose a zone id attribute",
+                    ServiceException.INVALID_PARAMETER_VALUE,
+                    "collectionId");
+        }
+        return descriptor.getLocalName();
+    }
+
+    protected AttributeDescriptor getZoneColumnDescriptor(String collectionId) throws IOException {
+        FeatureTypeInfo featureType = getFeatureType(collectionId);
+        // At this point we know it's a DGGS store
+        DGGSStore<?> dggsStore = (DGGSStore<?>) featureType.getStore().getDataStore(null);
+        DGGSFeatureSource<?> source = dggsStore.getDGGSFeatureSource(featureType.getNativeName());
+        return source.getZoneIdAttribute();
+    }
+
     /**
      * Returns true if the feature type is associated to a DGGSStore
      *
@@ -195,7 +211,12 @@ public class DGGSService {
      */
     public static boolean isDGGSType(FeatureTypeInfo featureType) {
         try {
-            return featureType.getStore().getDataStore(null) instanceof DGGSStore;
+            DataAccess<? extends FeatureType, ? extends Feature> datastore =
+                    featureType.getStore().getDataStore(null);
+            if (LOGGER.isLoggable(Level.FINER)) {
+                LOGGER.finer("Datastore for " + featureType + " is " + datastore);
+            }
+            return datastore instanceof DGGSStore;
         } catch (Exception e) {
             // stores that are not working are rather common, log at finer level
             LOGGER.log(Level.FINER, "Failed to grab store for " + featureType);
@@ -208,29 +229,26 @@ public class DGGSService {
     @DefaultContentType(OGCAPIMediaTypes.GEOJSON_VALUE)
     public FeaturesResponse zones(
             @PathVariable(name = "collectionId") String collectionId,
-            @RequestParam(name = "startIndex", required = false, defaultValue = "0")
-                    BigInteger startIndex,
+            @RequestParam(name = "startIndex", required = false, defaultValue = "0") BigInteger startIndex,
             @RequestParam(name = "limit", required = false) BigInteger limit,
-            @RequestParam(name = "resolution", required = false, defaultValue = "0")
-                    Integer resolution,
+            @RequestParam(name = "resolution", required = false, defaultValue = "0") Integer resolution,
             @RequestParam(name = "datetime", required = false) DateTimeList datetime,
             @RequestParam(name = "bbox", required = false) String bbox,
             @RequestParam(name = "geom", required = false) String wkt,
             @RequestParam(name = "zones", required = false) String zones,
             @RequestParam(name = "properties", required = false) String properties,
-            @RequestParam(
-                            name = "f",
-                            required = false,
-                            defaultValue = OGCAPIMediaTypes.GEOJSON_VALUE)
-                    String format)
+            @RequestParam(name = "f", required = false, defaultValue = OGCAPIMediaTypes.GEOJSON_VALUE) String format)
             throws Exception {
         // handle possible geometry filters
+        AttributeDescriptor zoneId = getZoneColumnDescriptor(collectionId);
         DGGSGeometryFilterParser geometryParser =
-                new DGGSGeometryFilterParser(FF, getDGGSInstance(collectionId));
+                new DGGSGeometryFilterParser(FF, getDGGSInstance(collectionId), Geometry.class, zoneId);
         geometryParser.setBBOX(bbox);
         geometryParser.setGeometry(wkt);
         geometryParser.setZoneIds(zones, resolution);
 
+        FeatureTypeInfo ft = getFeatureType(collectionId);
+        Integer imposedResolution = getImposedResolution(ft);
         // build the request in a way core WFS machinery can understand it
         return runGetFeature(
                 collectionId,
@@ -241,26 +259,39 @@ public class DGGSService {
                 format,
                 request -> {
                     // add the resolution hint
-                    if (resolution != null) {
-                        request.setViewParams(
-                                Collections.singletonList(
-                                        Collections.singletonMap(
-                                                DGGSStore.VP_RESOLUTION,
-                                                String.valueOf(resolution))));
-                        Filter resolutionFilter =
-                                FF.equals(FF.property(RESOLUTION), FF.literal(resolution));
-                        mixFilter(request, resolutionFilter);
-
-                        Filter geometryFilter = geometryParser.getFilter();
-                        if (geometryFilter != null && geometryFilter != Filter.INCLUDE) {
-                            mixFilter(request, geometryFilter);
+                    if (imposedResolution != null) {
+                        boolean sameRes = imposedResolution.equals(resolution);
+                        if (!sameRes) {
+                            LOGGER.warning("The underlying datastore has a fixed resolution of "
+                                    + imposedResolution
+                                    + ", excluding the requested resolution of "
+                                    + resolution);
                         }
+                        Filter resolutionFilter = sameRes ? Filter.INCLUDE : Filter.EXCLUDE;
+                        mixFilter(request, resolutionFilter);
+                    } else {
+                        request.setViewParams(Collections.singletonList(
+                                Collections.singletonMap(DGGSStore.VP_RESOLUTION, String.valueOf(resolution))));
+                        Filter resolutionFilter = FF.equals(FF.property(RESOLUTION), FF.literal(resolution));
+                        mixFilter(request, resolutionFilter);
+                    }
+                    Filter geometryFilter = geometryParser.getFilter();
+                    if (geometryFilter != null && geometryFilter != Filter.INCLUDE) {
+                        mixFilter(request, geometryFilter);
                     }
                 },
-                collectionName ->
-                        "ogc/dggs/collections/"
-                                + ResponseUtils.urlEncode(collectionName)
-                                + "/zones");
+                collectionName -> "ogc/dggs/v1/collections/" + ResponseUtils.urlEncode(collectionName) + "/zones");
+    }
+
+    private static Integer getImposedResolution(FeatureTypeInfo ft) {
+        Map<String, Serializable> connectionParams = ft.getStore().getConnectionParameters();
+        Object fixedResolution;
+        Integer imposedResolution = null;
+        if (connectionParams.containsKey(DGGSStoreFactory.RESOLUTION.key)
+                && ((fixedResolution = connectionParams.get(DGGSStoreFactory.RESOLUTION.key)) != null)) {
+            imposedResolution = Integer.parseInt(fixedResolution.toString());
+        }
+        return imposedResolution;
     }
 
     void mixFilter(GetFeatureRequest request, Filter mix) {
@@ -273,8 +304,7 @@ public class DGGSService {
         }
     }
 
-    private void customizeByFormat(Query query, FeatureTypeInfo ft, String format)
-            throws IOException {
+    private void customizeByFormat(Query query, FeatureTypeInfo ft, String format) throws IOException {
         if (DGGSJSONMessageConverter.DGGS_JSON_MIME.equals(format)
                 && query.getPropertyNames().isEmpty()) {
             // TODO: add support for complex features
@@ -291,20 +321,16 @@ public class DGGSService {
     @GetMapping(path = "collections/{collectionId}/neighbors", name = "getNeighbors")
     @ResponseBody
     @DefaultContentType(OGCAPIMediaTypes.GEOJSON_VALUE)
+    @SuppressWarnings("PMD.CloseResource") // managed by the store
     public FeaturesResponse neighbors(
             @PathVariable(name = "collectionId") String collectionId,
             @RequestParam(name = "zone_id") String zoneId,
             @RequestParam(name = "properties", required = false) String properties,
-            @RequestParam(name = "startIndex", required = false, defaultValue = "0")
-                    BigInteger startIndex,
+            @RequestParam(name = "startIndex", required = false, defaultValue = "0") BigInteger startIndex,
             @RequestParam(name = "limit", required = false) BigInteger limit,
             @RequestParam(name = "datetime", required = false) DateTimeList datetime,
             @RequestParam(name = "distance", required = false, defaultValue = "1") int distance,
-            @RequestParam(
-                            name = "f",
-                            required = false,
-                            defaultValue = OGCAPIMediaTypes.GEOJSON_VALUE)
-                    String format)
+            @RequestParam(name = "f", required = false, defaultValue = OGCAPIMediaTypes.GEOJSON_VALUE) String format)
             throws Exception {
         if (distance <= 0)
             throw new APIException(
@@ -318,14 +344,16 @@ public class DGGSService {
                     "Neighboring distance exceeds maximum value: " + maxNeighborDistance,
                     HttpStatus.BAD_REQUEST);
         }
-        PropertyIsEqualTo neighborFilter =
-                FF.equals(
-                        FF.function(
-                                "neighbor",
-                                FF.property("zoneId"),
-                                FF.literal(zoneId),
-                                FF.literal(distance)),
-                        FF.literal(true));
+        AttributeDescriptor zoneDescriptor = getZoneColumnDescriptor(collectionId);
+        String zoneIdColumn = zoneDescriptor.getLocalName();
+        DGGSInstance<?> dggs = getDGGSInstance(collectionId);
+        PropertyIsEqualTo neighborFilter = FF.equals(
+                FF.function(
+                        "neighbor",
+                        FF.property(zoneIdColumn),
+                        dggs.getZoneLiteral(zoneDescriptor, zoneId),
+                        FF.literal(distance)),
+                FF.literal(true));
         return runGetFeature(
                 collectionId,
                 datetime,
@@ -336,44 +364,39 @@ public class DGGSService {
                 request -> {
                     mixFilter(request, neighborFilter);
                 },
-                collectionName ->
-                        "ogc/dggs/collections/"
-                                + ResponseUtils.urlEncode(collectionName)
-                                + "/neighbors");
+                collectionName -> "ogc/dggs/v1/collections/" + ResponseUtils.urlEncode(collectionName) + "/neighbors");
     }
 
     @GetMapping(path = "collections/{collectionId}/zone", name = "getZone")
     @ResponseBody
     @DefaultContentType(OGCAPIMediaTypes.GEOJSON_VALUE)
     @HTMLResponseBody(templateName = "zone.ftl", fileName = "zone.html")
+    @SuppressWarnings("PMD.CloseResource") // managed by the store
     public FeaturesResponse zone(
             @PathVariable(name = "collectionId") String collectionId,
             @RequestParam(name = "zone_id") String zoneId,
             @RequestParam(name = "datetime", required = false) DateTimeList datetime,
             @RequestParam(name = "properties", required = false) String properties,
-            @RequestParam(
-                            name = "f",
-                            required = false,
-                            defaultValue = OGCAPIMediaTypes.GEOJSON_VALUE)
-                    String format)
+            @RequestParam(name = "f", required = false, defaultValue = OGCAPIMediaTypes.GEOJSON_VALUE) String format)
             throws Exception {
-        FeaturesResponse response =
-                runGetFeature(
-                        collectionId,
-                        datetime,
-                        properties,
-                        null,
-                        null,
-                        format,
-                        request -> {
-                            mixFilter(
-                                    request, FF.equals(FF.property("zoneId"), FF.literal(zoneId)));
-                        },
-                        collectionName ->
-                                "ogc/dggs/collections/"
-                                        + ResponseUtils.urlEncode(collectionName)
-                                        + "/zones/"
-                                        + ResponseUtils.urlEncode(zoneId));
+        AttributeDescriptor zoneDescriptor = getZoneColumnDescriptor(collectionId);
+        String zoneIdColumn = zoneDescriptor.getLocalName();
+        DGGSInstance<?> dggs = getDGGSInstance(collectionId);
+        FeaturesResponse response = runGetFeature(
+                collectionId,
+                datetime,
+                properties,
+                null,
+                null,
+                format,
+                request -> {
+                    mixFilter(
+                            request, FF.equals(FF.property(zoneIdColumn), dggs.getZoneLiteral(zoneDescriptor, zoneId)));
+                },
+                collectionName -> "ogc/dggs/v1/collections/"
+                        + ResponseUtils.urlEncode(collectionName)
+                        + "/zones/"
+                        + ResponseUtils.urlEncode(zoneId));
 
         response.addLink(getParentsLink(collectionId, zoneId));
         response.addLink(getChildrenLink(collectionId, zoneId));
@@ -387,14 +410,11 @@ public class DGGSService {
         params.put("f", "text/html");
         params.put("zone_id", zoneId);
         reflectDatetime(params);
-        String url =
-                buildURL(
-                        APIRequestInfo.get().getBaseURL(),
-                        "ogc/dggs/collections/"
-                                + ResponseUtils.urlEncode(collectionId)
-                                + "/parents",
-                        params,
-                        URLMangler.URLType.SERVICE);
+        String url = buildURL(
+                APIRequestInfo.get().getBaseURL(),
+                "ogc/dggs/v1/collections/" + ResponseUtils.urlEncode(collectionId) + "/parents",
+                params,
+                URLMangler.URLType.SERVICE);
         Link link = new Link(url, "parents", "text/html", "Zone parents");
         link.setClassification("parents");
         return link;
@@ -415,15 +435,13 @@ public class DGGSService {
         reflectDatetime(params);
         params.put(
                 "resolution",
-                String.valueOf(getDGGSInstance(collectionId).getZone(zoneId).getResolution() + 1));
-        String url =
-                buildURL(
-                        APIRequestInfo.get().getBaseURL(),
-                        "ogc/dggs/collections/"
-                                + ResponseUtils.urlEncode(collectionId)
-                                + "/children",
-                        params,
-                        URLMangler.URLType.SERVICE);
+                String.valueOf(
+                        getDGGSInstance(collectionId).getZoneFromString(zoneId).getResolution() + 1));
+        String url = buildURL(
+                APIRequestInfo.get().getBaseURL(),
+                "ogc/dggs/v1/collections/" + ResponseUtils.urlEncode(collectionId) + "/children",
+                params,
+                URLMangler.URLType.SERVICE);
         Link link = new Link(url, "children", "text/html", "Zone immediate children");
         link.setClassification("children");
         return link;
@@ -435,51 +453,46 @@ public class DGGSService {
         params.put("zone_id", zoneId);
         params.put("distance", "1");
         reflectDatetime(params);
-        String url =
-                buildURL(
-                        APIRequestInfo.get().getBaseURL(),
-                        "ogc/dggs/collections/"
-                                + ResponseUtils.urlEncode(collectionId)
-                                + "/neighbors",
-                        params,
-                        URLMangler.URLType.SERVICE);
+        String url = buildURL(
+                APIRequestInfo.get().getBaseURL(),
+                "ogc/dggs/v1/collections/" + ResponseUtils.urlEncode(collectionId) + "/neighbors",
+                params,
+                URLMangler.URLType.SERVICE);
         Link link = new Link(url, "neighbors", "text/html", "Zone immediate neighbors");
         link.setClassification("neighbors");
         return link;
     }
 
-    DGGSInstance getDGGSInstance(String collectionId) throws IOException {
+    DGGSInstance<?> getDGGSInstance(String collectionId) throws IOException {
         FeatureTypeInfo featureType = getFeatureType(collectionId);
-        DGGSStore dggsStore = (DGGSStore) featureType.getStore().getDataStore(null);
+        DGGSStore<?> dggsStore = (DGGSStore<?>) featureType.getStore().getDataStore(null);
         return dggsStore.getDGGSFeatureSource(featureType.getNativeName()).getDGGS();
     }
 
     @GetMapping(path = "collections/{collectionId}/children", name = "getChildren")
     @ResponseBody
     @DefaultContentType(OGCAPIMediaTypes.GEOJSON_VALUE)
+    @SuppressWarnings("PMD.CloseResource") // managed by the store
     public FeaturesResponse children(
             @PathVariable(name = "collectionId") String collectionId,
             @RequestParam(name = "zone_id") String zoneId,
             @RequestParam(name = "properties", required = false) String properties,
-            @RequestParam(name = "startIndex", required = false, defaultValue = "0")
-                    BigInteger startIndex,
+            @RequestParam(name = "startIndex", required = false, defaultValue = "0") BigInteger startIndex,
             @RequestParam(name = "limit", required = false) BigInteger limit,
-            @RequestParam(name = "resolution", required = false) Integer resolution,
+            @RequestParam(name = "resolution") Integer resolution,
             @RequestParam(name = "datetime", required = false) DateTimeList datetime,
-            @RequestParam(
-                            name = "f",
-                            required = false,
-                            defaultValue = OGCAPIMediaTypes.GEOJSON_VALUE)
-                    String format)
+            @RequestParam(name = "f", required = false, defaultValue = OGCAPIMediaTypes.GEOJSON_VALUE) String format)
             throws Exception {
-        PropertyIsEqualTo childFilter =
-                FF.equals(
-                        FF.function(
-                                "children",
-                                FF.property("zoneId"),
-                                FF.literal(zoneId),
-                                FF.literal(resolution)),
-                        FF.literal(true));
+        AttributeDescriptor zoneDescriptor = getZoneColumnDescriptor(collectionId);
+        String zoneIdColumn = zoneDescriptor.getLocalName();
+        DGGSInstance<?> dggs = getDGGSInstance(collectionId);
+        PropertyIsEqualTo childFilter = FF.equals(
+                FF.function(
+                        "children",
+                        FF.property(zoneIdColumn),
+                        dggs.getZoneLiteral(zoneDescriptor, zoneId),
+                        FF.literal(resolution)),
+                FF.literal(true));
         return runGetFeature(
                 collectionId,
                 datetime,
@@ -490,33 +503,28 @@ public class DGGSService {
                 request -> {
                     mixFilter(request, childFilter);
                 },
-                collectionName ->
-                        "ogc/dggs/collections/"
-                                + ResponseUtils.urlEncode(collectionName)
-                                + "/children");
+                collectionName -> "ogc/dggs/v1/collections/" + ResponseUtils.urlEncode(collectionName) + "/children");
     }
 
     @GetMapping(path = "collections/{collectionId}/parents", name = "getParents")
     @ResponseBody
     @DefaultContentType(OGCAPIMediaTypes.GEOJSON_VALUE)
+    @SuppressWarnings("PMD.CloseResource") // managed by the store
     public FeaturesResponse parents(
             @PathVariable(name = "collectionId") String collectionId,
             @RequestParam(name = "zone_id") String zoneId,
             @RequestParam(name = "datetime", required = false) DateTimeList datetime,
             @RequestParam(name = "properties", required = false) String properties,
-            @RequestParam(name = "startIndex", required = false, defaultValue = "0")
-                    BigInteger startIndex,
+            @RequestParam(name = "startIndex", required = false, defaultValue = "0") BigInteger startIndex,
             @RequestParam(name = "limit", required = false) BigInteger limit,
-            @RequestParam(
-                            name = "f",
-                            required = false,
-                            defaultValue = OGCAPIMediaTypes.GEOJSON_VALUE)
-                    String format)
+            @RequestParam(name = "f", required = false, defaultValue = OGCAPIMediaTypes.GEOJSON_VALUE) String format)
             throws Exception {
-        PropertyIsEqualTo parentFilter =
-                FF.equals(
-                        FF.function("parents", FF.property("zoneId"), FF.literal(zoneId)),
-                        FF.literal(true));
+        AttributeDescriptor zoneDescriptor = getZoneColumnDescriptor(collectionId);
+        String zoneIdColumn = zoneDescriptor.getLocalName();
+        DGGSInstance<?> dggs = getDGGSInstance(collectionId);
+        PropertyIsEqualTo parentFilter = FF.equals(
+                FF.function("parents", FF.property(zoneIdColumn), dggs.getZoneLiteral(zoneDescriptor, zoneId)),
+                FF.literal(true));
         // another filter to help implementation that cannot optimize out the above call
         return runGetFeature(
                 collectionId,
@@ -528,10 +536,7 @@ public class DGGSService {
                 request -> {
                     mixFilter(request, parentFilter);
                 },
-                collectionName ->
-                        "ogc/dggs/collections/"
-                                + ResponseUtils.urlEncode(collectionName)
-                                + "/parents");
+                collectionName -> "ogc/dggs/v1/collections/" + ResponseUtils.urlEncode(collectionName) + "/parents");
     }
 
     public FeaturesResponse runGetFeature(
@@ -546,8 +551,7 @@ public class DGGSService {
             throws IOException {
         // build the request in a way core WFS machinery can understand it
         FeatureTypeInfo ft = getFeatureType(collectionId);
-        GetFeatureRequest request =
-                GetFeatureRequest.adapt(Wfs20Factory.eINSTANCE.createGetFeatureType());
+        GetFeatureRequest request = GetFeatureRequest.adapt(Wfs20Factory.eINSTANCE.createGetFeatureType());
         Query query = request.createQuery();
         query.setTypeNames(Arrays.asList(new QName(ft.getNamespace().getURI(), ft.getName())));
         if (properties != null) {
@@ -563,13 +567,12 @@ public class DGGSService {
         requestCustomizer.accept(request);
 
         // run it
-        FeaturesGetFeature gf =
-                new FeaturesGetFeature(gs.getService(WFSInfo.class), getCatalog()) {
-                    @Override
-                    protected String getItemsPath(String collectionName) {
-                        return pathBuilder.apply(collectionName);
-                    }
-                };
+        FeaturesGetFeature gf = new FeaturesGetFeature(gs.getService(WFSInfo.class), getCatalog()) {
+            @Override
+            protected String getItemsPath(String collectionName) {
+                return pathBuilder.apply(collectionName);
+            }
+        };
         gf.setFilterFactory(FF);
         FeatureCollectionResponse response = gf.run(request);
 
@@ -578,15 +581,14 @@ public class DGGSService {
         return new FeaturesResponse(request.getAdaptee(), response);
     }
 
-    protected Filter buildDateTimeFilter(FeatureTypeInfo ft, DateTimeList dateTimeList)
-            throws IOException {
+    protected Filter buildDateTimeFilter(FeatureTypeInfo ft, DateTimeList dateTimeList) throws IOException {
         DimensionInfo time = ft.getMetadata().get(ResourceInfo.TIME, DimensionInfo.class);
         if (time == null) return Filter.INCLUDE;
         if (dateTimeList == null || dateTimeList.isEmpty()) {
             dateTimeList = new DateTimeList();
             dateTimeList.add(wms.getDefaultTime(ft));
         }
-        return wms.getTimeElevationToFilter(dateTimeList, null, ft);
+        return wms.getDimensionFilter(dateTimeList, null, ft, null);
     }
 
     private BigInteger getLimit(BigInteger limit) {
@@ -599,42 +601,37 @@ public class DGGSService {
     @ResponseBody
     @DefaultContentType(OGCAPIMediaTypes.GEOJSON_VALUE)
     @HTMLResponseBody(templateName = "zone.ftl", fileName = "zone.html")
+    @SuppressWarnings("PMD.CloseResource") // managed by the store
     public FeaturesResponse point(
             @PathVariable(name = "collectionId") String collectionId,
             @RequestParam(name = "point") String pointSpec,
             @RequestParam(name = "resolution") int resolution,
             @RequestParam(name = "properties", required = false) String properties,
             @RequestParam(name = "datetime", required = false) DateTimeList datetime,
-            @RequestParam(
-                            name = "f",
-                            required = false,
-                            defaultValue = OGCAPIMediaTypes.GEOJSON_VALUE)
-                    String format)
+            @RequestParam(name = "f", required = false, defaultValue = OGCAPIMediaTypes.GEOJSON_VALUE) String format)
             throws Exception {
         Point point = getPoint(pointSpec);
-        @SuppressWarnings("PMD.CloseResource") // managed by the store
-        DGGSInstance dggs = getDGGSInstance(collectionId);
+        AttributeDescriptor zoneDescriptor = getZoneColumnDescriptor(collectionId);
+        String zoneIdColumn = zoneDescriptor.getLocalName();
+        DGGSInstance<?> dggs = getDGGSInstance(collectionId);
         Zone zone = dggs.point(point, resolution);
         String zoneId = zone.getId();
         // we have the zoneId, now to and access the data for it
-        FeaturesResponse response =
-                runGetFeature(
-                        collectionId,
-                        datetime,
-                        properties,
-                        null,
-                        null,
-                        format,
-                        request -> {
-                            mixFilter(
-                                    request,
-                                    FF.equals(FF.property("zoneId"), FF.literal(zone.getId())));
-                        },
-                        collectionName ->
-                                "ogc/dggs/collections/"
-                                        + ResponseUtils.urlEncode(collectionName)
-                                        + "/zones/"
-                                        + ResponseUtils.urlEncode(zoneId));
+        FeaturesResponse response = runGetFeature(
+                collectionId,
+                datetime,
+                properties,
+                null,
+                null,
+                format,
+                request -> {
+                    mixFilter(
+                            request, FF.equals(FF.property(zoneIdColumn), dggs.getZoneLiteral(zoneDescriptor, zoneId)));
+                },
+                collectionName -> "ogc/dggs/v1/collections/"
+                        + ResponseUtils.urlEncode(collectionName)
+                        + "/zones/"
+                        + ResponseUtils.urlEncode(zoneId));
 
         response.addLink(getParentsLink(collectionId, zoneId));
         response.addLink(getChildrenLink(collectionId, zoneId));
@@ -651,46 +648,38 @@ public class DGGSService {
             @RequestParam(name = "polygon") String polygonWKT,
             @RequestParam(name = "resolution") int resolution,
             @RequestParam(name = "properties", required = false) String properties,
-            @RequestParam(name = "startIndex", required = false, defaultValue = "0")
-                    BigInteger startIndex,
+            @RequestParam(name = "startIndex", required = false, defaultValue = "0") BigInteger startIndex,
             @RequestParam(name = "limit", required = false) BigInteger limit,
             @RequestParam(name = "compact", required = true, defaultValue = "true") boolean compact,
             @RequestParam(name = "datetime", required = false) DateTimeList datetime,
-            @RequestParam(
-                            name = "f",
-                            required = false,
-                            defaultValue = OGCAPIMediaTypes.GEOJSON_VALUE)
-                    String format)
+            @RequestParam(name = "f", required = false, defaultValue = OGCAPIMediaTypes.GEOJSON_VALUE) String format)
             throws Exception {
         Polygon polygon = getPolygon(polygonWKT);
+        AttributeDescriptor zoneAttribute = getZoneColumnDescriptor(collectionId);
+        String zoneIdColumn = zoneAttribute.getLocalName();
         // Filter resolutionFilter = FF.lessOrEqual(FF.property(RESOLUTION),
         // FF.literal(resolution));
-        PropertyIsEqualTo polygonFilter =
-                FF.equals(
-                        FF.function(
-                                "dggsPolygon",
-                                FF.property("zoneId"),
-                                FF.literal(polygon),
-                                FF.literal(resolution),
-                                FF.literal(compact)),
-                        FF.literal("true"));
+        PropertyIsEqualTo polygonFilter = FF.equals(
+                FF.function(
+                        "dggsPolygon",
+                        FF.property(zoneIdColumn),
+                        FF.literal(polygon),
+                        FF.literal(resolution),
+                        FF.literal(compact)),
+                FF.literal("true"));
         // we have the zoneId, now to and access the data for it
-        FeaturesResponse response =
-                runGetFeature(
-                        collectionId,
-                        datetime,
-                        properties,
-                        startIndex,
-                        limit,
-                        format,
-                        request -> {
-                            Query query = request.getQueries().get(0);
-                            query.setFilter(polygonFilter);
-                        },
-                        collectionName ->
-                                "ogc/dggs/collections/"
-                                        + ResponseUtils.urlEncode(collectionName)
-                                        + "/polygon/");
+        FeaturesResponse response = runGetFeature(
+                collectionId,
+                datetime,
+                properties,
+                startIndex,
+                limit,
+                format,
+                request -> {
+                    Query query = request.getQueries().get(0);
+                    query.setFilter(polygonFilter);
+                },
+                collectionName -> "ogc/dggs/v1/collections/" + ResponseUtils.urlEncode(collectionName) + "/polygon/");
 
         return response;
     }
