@@ -4,9 +4,12 @@
  */
 package org.geoserver.ogcapi.v1.stac;
 
+import static org.geoserver.ogcapi.APIException.NOT_FOUND;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.containsInAnyOrder;
+import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.greaterThan;
 import static org.hamcrest.Matchers.greaterThanOrEqualTo;
 import static org.hamcrest.Matchers.lessThanOrEqualTo;
 import static org.junit.Assert.assertEquals;
@@ -27,6 +30,10 @@ import org.geoserver.config.GeoServer;
 import org.geoserver.data.test.SystemTestData;
 import org.geoserver.ogcapi.OGCAPIMediaTypes;
 import org.geoserver.opensearch.eo.OSEOInfo;
+import org.geoserver.opensearch.eo.security.EOCollectionAccessLimitInfo;
+import org.geoserver.opensearch.eo.security.EOCollectionAccessLimitInfoImpl;
+import org.geoserver.opensearch.eo.security.EOProductAccessLimitInfo;
+import org.geoserver.opensearch.eo.security.EOProductAccessLimitInfoImpl;
 import org.hamcrest.Matchers;
 import org.jsoup.nodes.Document;
 import org.jsoup.select.Elements;
@@ -48,12 +55,22 @@ public class ItemsTest extends STACTestSupport {
 
     @Test
     public void testSentinelItemsJSON() throws Exception {
-        DocumentContext json =
-                getAsJSONPath("ogc/stac/v1/collections/SENTINEL2/items?limit=50", 200);
+        DocumentContext json = getAsJSONPath("ogc/stac/v1/collections/SENTINEL2/items?limit=50", 200);
+        checkSentinelItemsJSON(json, Integer.valueOf(19));
+    }
 
+    @Test
+    public void testSentinelItemsJSONSkipMatched() throws Exception {
+        enableSkipNumberMatched();
+
+        DocumentContext json = getAsJSONPath("ogc/stac/v1/collections/SENTINEL2/items?limit=50", 200);
+        checkSentinelItemsJSON(json, null /* numberMatched not present */);
+    }
+
+    private void checkSentinelItemsJSON(DocumentContext json, Integer expectedNumberMatched) {
         // global properties
         assertEquals("FeatureCollection", json.read("type"));
-        assertEquals(Integer.valueOf(19), json.read("numberMatched"));
+        assertEquals(expectedNumberMatched, json.read("numberMatched"));
         assertEquals(Integer.valueOf(19), json.read("numberReturned"));
         assertEquals(STACService.STAC_VERSION, json.read("stac_version"));
 
@@ -62,8 +79,7 @@ public class ItemsTest extends STACTestSupport {
         assertEquals("self", link.read("rel"));
         assertEquals(OGCAPIMediaTypes.GEOJSON_VALUE, link.read("type"));
         assertEquals(
-                "http://localhost:8080/geoserver/ogc/stac/v1/collections/SENTINEL2/items?limit=50",
-                link.read("href"));
+                "http://localhost:8080/geoserver/ogc/stac/v1/collections/SENTINEL2/items?limit=50", link.read("href"));
 
         // check it's only sentinel2 data
         List<String> collections = json.read("features[*].collection");
@@ -71,40 +87,66 @@ public class ItemsTest extends STACTestSupport {
         assertEquals(Integer.valueOf(19), json.read("features.length()", Integer.class));
 
         // read single reference feature
-        DocumentContext s2Sample =
-                readSingleContext(
-                        json,
-                        "features[?(@.id == 'S2A_OPER_MSI_L1C_TL_MTI__20170308T220244_A008933_T11SLT_N02"
-                                + ".04')]");
+        DocumentContext s2Sample = readSingleContext(
+                json, "features[?(@.id == 'S2A_OPER_MSI_L1C_TL_MTI__20170308T220244_A008933_T11SLT_N02" + ".04')]");
         checkSentinel2Sample(s2Sample);
 
         // a sample image that does have an actual time range
-        DocumentContext s2Range =
-                readSingleContext(
-                        json,
-                        "features[?(@.id == 'S2A_OPER_MSI_L1C_TL_SGS__20170226T171842_A008785_T32TPN_N02.04')]");
-        assertEquals("2017-02-26T10:20:21.026+00:00", s2Range.read("properties.start_datetime"));
-        assertEquals("2017-02-26T10:30:00.031+00:00", s2Range.read("properties.end_datetime"));
+        DocumentContext s2Range = readSingleContext(
+                json, "features[?(@.id == 'S2A_OPER_MSI_L1C_TL_SGS__20170226T171842_A008785_T32TPN_N02.04')]");
+        assertEquals("2017-02-26T10:20:21.026Z", s2Range.read("properties.start_datetime"));
+        assertEquals("2017-02-26T10:30:00.031Z", s2Range.read("properties.end_datetime"));
+    }
+
+    @Test
+    public void testSentinelItemsJSONWorkspace() throws Exception {
+        // Mismatched workspace
+        getAsMockHttpServletResponse("cite/ogc/stac/v1/collections/SENTINEL2/items?limit=50", 404);
+        // Matched workspace
+        DocumentContext docMatchingWorkspace =
+                getAsJSONPath("sf/ogc/stac/v1/collections/SENTINEL2/items?limit=50", 200);
+        assertEquals(Integer.valueOf(19), docMatchingWorkspace.read("numberReturned"));
+        // No match, but has null in workspace array and this is the global workspace
+        getAsJSONPath("ogc/stac/v1/collections/SAS1/items?limit=50", 200);
+        assertEquals(Integer.valueOf(19), docMatchingWorkspace.read("numberReturned"));
     }
 
     @Test
     public void testSentinelItemJSON() throws Exception {
-        DocumentContext json =
-                getAsJSONPath(
-                        "ogc/stac/v1/collections/SENTINEL2/items/S2A_OPER_MSI_L1C_TL_MTI__20170308T220244_A008933_T11SLT_N02.04",
-                        200);
+        DocumentContext json = getAsJSONPath(
+                "ogc/stac/v1/collections/SENTINEL2/items/S2A_OPER_MSI_L1C_TL_MTI__20170308T220244_A008933_T11SLT_N02.04",
+                200);
 
         assertEquals("Feature", json.read("type"));
         checkSentinel2Sample(json);
     }
 
     @Test
-    public void testDisabledItem() throws Exception {
-        DocumentContext json =
-                getAsJSONPath("ogc/stac/v1/collections/LANDSAT8/items/LS8_TEST.DISABLED", 404);
+    public void testItemWrongCollection() throws Exception {
+        getAsMockHttpServletResponse(
+                "ogc/stac/v1/collections/SAS1/items/S2A_OPER_MSI_L1C_TL_MTI__20170308T220244_A008933_T11SLT_N02.04",
+                404);
+    }
 
-        assertEquals("InvalidParameterValue", json.read("code"));
-        assertEquals("Could not locate item LS8_TEST.DISABLED", json.read("description"));
+    @Test
+    public void testSentinelItemJSONWorkspace() throws Exception {
+        // matched workspace
+        getAsJSONPath(
+                "sf/ogc/stac/v1/collections/SENTINEL2/items/S2A_OPER_MSI_L1C_TL_MTI__20170308T220244_A008933_T11SLT_N02.04",
+                200);
+
+        // Mismatched workspace
+        getAsMockHttpServletResponse(
+                "cite/ogc/stac/v1/collections/SENTINEL2/items/S2A_OPER_MSI_L1C_TL_MTI__20170308T220244_A008933_T11SLT_N02.04",
+                404);
+        // No workspace set
+        getAsJSONPath("sf/ogc/stac/v1/collections/SAS1/items/SAS1_20180227102021.02", 200);
+    }
+
+    @Test
+    public void testDisabledItem() throws Exception {
+        DocumentContext json = getAsJSONPath("ogc/stac/v1/collections/LANDSAT8/items/LS8_TEST.DISABLED", 404);
+        checkOGCAPIException(json, NOT_FOUND, "Could not locate item LS8_TEST.DISABLED");
     }
 
     @Test
@@ -116,7 +158,7 @@ public class ItemsTest extends STACTestSupport {
         // check it's only landsat8 data
         List<String> collections = json.read("features[*].collection");
         assertThat(new HashSet<>(collections), containsInAnyOrder("LANDSAT8"));
-        assertEquals(Integer.valueOf(1), json.read("features.length()", Integer.class));
+        assertEquals(Integer.valueOf(2), json.read("features.length()", Integer.class));
 
         // read single reference feature, will test only peculiarities of this
         DocumentContext l8Sample = readSingleContext(json, "features[?(@.id == 'LS8_TEST.02')]");
@@ -125,8 +167,7 @@ public class ItemsTest extends STACTestSupport {
 
     @Test
     public void testLandsat8ItemJSON() throws Exception {
-        DocumentContext json =
-                getAsJSONPath("ogc/stac/v1/collections/LANDSAT8/items/LS8_TEST.02", 200);
+        DocumentContext json = getAsJSONPath("ogc/stac/v1/collections/LANDSAT8/items/LS8_TEST.02", 200);
 
         assertEquals("Feature", json.read("type"));
 
@@ -142,15 +183,13 @@ public class ItemsTest extends STACTestSupport {
 
         // the item identifiers
         Set<String> titles =
-                doc.select("div.card-header h2").stream()
-                        .map(e -> e.text())
-                        .collect(Collectors.toSet());
+                doc.select("div.card-header h2").stream().map(e -> e.text()).collect(Collectors.toSet());
         assertThat(titles, Matchers.everyItem(Matchers.startsWith("S2A_OPER_MSI")));
 
         // test the Sentinel2 entry
-        Elements s2Body =
-                doc.select(
-                        "div.card-header:has(a:contains(S2A_OPER_MSI_L1C_TL_MTI__20170308T220244_A008933_T11SLT_N02.04)) ~ div.card-body");
+        Elements s2Body = doc.select(
+                "div.card-header:has(a:contains(S2A_OPER_MSI_L1C_TL_MTI__20170308T220244_A008933_T11SLT_N02.04)) ~"
+                        + " div.card-body");
         testSentinel2SampleHTML(s2Body);
     }
 
@@ -160,9 +199,14 @@ public class ItemsTest extends STACTestSupport {
     }
 
     @Test
+    public void testPagingLinksFirstPageSkipMatched() throws Exception {
+        enableSkipNumberMatched();
+        testPagingLinksFirstPage();
+    }
+
+    @Test
     public void testPagingLinksFirstPage() throws Exception {
-        DocumentContext json =
-                getAsJSONPath("ogc/stac/v1/collections/SENTINEL2/items?limit=5", 200);
+        DocumentContext json = getAsJSONPath("ogc/stac/v1/collections/SENTINEL2/items?limit=5", 200);
 
         // two links expected, self and next
         assertEquals(Integer.valueOf(2), json.read("links.length()"));
@@ -171,8 +215,7 @@ public class ItemsTest extends STACTestSupport {
         DocumentContext self = readSingleContext(json, "links[?(@.rel=='self')]");
         assertEquals(OGCAPIMediaTypes.GEOJSON_VALUE, self.read("type"));
         assertEquals(
-                "http://localhost:8080/geoserver/ogc/stac/v1/collections/SENTINEL2/items?limit=5",
-                self.read("href"));
+                "http://localhost:8080/geoserver/ogc/stac/v1/collections/SENTINEL2/items?limit=5", self.read("href"));
 
         // next link (order should be stable, linked hash maps all around)
         DocumentContext next = readSingleContext(json, "links[?(@.rel=='next')]");
@@ -183,9 +226,14 @@ public class ItemsTest extends STACTestSupport {
     }
 
     @Test
+    public void testPagingLinksSecondPageSkipMatched() throws Exception {
+        enableSkipNumberMatched();
+        testPagingLinksSecondPage();
+    }
+
+    @Test
     public void testPagingLinksSecondPage() throws Exception {
-        DocumentContext json =
-                getAsJSONPath("ogc/stac/v1/collections/SENTINEL2/items?startIndex=5&limit=5", 200);
+        DocumentContext json = getAsJSONPath("ogc/stac/v1/collections/SENTINEL2/items?startIndex=5&limit=5", 200);
 
         // three links expected, prev, self and next
         assertEquals(Integer.valueOf(3), json.read("links.length()"));
@@ -213,10 +261,15 @@ public class ItemsTest extends STACTestSupport {
     }
 
     @Test
+    public void testPagingLinksLastPageSkipMatched() throws Exception {
+        enableSkipNumberMatched();
+        testPagingLinksLastPage();
+    }
+
+    @Test
     public void testPagingLinksLastPage() throws Exception {
         // assuming 19 items
-        DocumentContext json =
-                getAsJSONPath("ogc/stac/v1/collections/SENTINEL2/items?startIndex=15&limit=5", 200);
+        DocumentContext json = getAsJSONPath("ogc/stac/v1/collections/SENTINEL2/items?startIndex=15&limit=5", 200);
 
         // two links expected, prev and self
         assertEquals(Integer.valueOf(2), json.read("links.length()"));
@@ -239,8 +292,7 @@ public class ItemsTest extends STACTestSupport {
     @Test
     public void testPagingLinksLastPageFull() throws Exception {
         // assuming 19 items, and asking a page of 19. There should not be another page
-        DocumentContext json =
-                getAsJSONPath("ogc/stac/v1/collections/SENTINEL2/items?limit=19", 200);
+        DocumentContext json = getAsJSONPath("ogc/stac/v1/collections/SENTINEL2/items?limit=19", 200);
 
         // Only self link expected
         assertEquals(Integer.valueOf(1), json.read("links.length()"));
@@ -249,17 +301,14 @@ public class ItemsTest extends STACTestSupport {
         DocumentContext self = readSingleContext(json, "links[?(@.rel=='self')]");
         assertEquals(OGCAPIMediaTypes.GEOJSON_VALUE, self.read("type"));
         assertEquals(
-                "http://localhost:8080/geoserver/ogc/stac/v1/collections/SENTINEL2/items?limit=19",
-                self.read("href"));
+                "http://localhost:8080/geoserver/ogc/stac/v1/collections/SENTINEL2/items?limit=19", self.read("href"));
     }
 
     @Test
     public void testTimeFilterInstant() throws Exception {
         // only one feature intersects this point in time
         DocumentContext json =
-                getAsJSONPath(
-                        "ogc/stac/v1/collections/SENTINEL2/items?limit=19&datetime=2017-02-26T10:25:00Z",
-                        200);
+                getAsJSONPath("ogc/stac/v1/collections/SENTINEL2/items?limit=19&datetime=2017-02-26T10:25:00Z", 200);
 
         assertEquals(Integer.valueOf(1), json.read("numberMatched"));
         assertEquals(Integer.valueOf(1), json.read("numberReturned"));
@@ -271,9 +320,7 @@ public class ItemsTest extends STACTestSupport {
     public void testTimeFilterRange() throws Exception {
         // only two sentinel features available in 2017 feb/march
         DocumentContext json =
-                getAsJSONPath(
-                        "ogc/stac/v1/collections/SENTINEL2/items?limit=19&datetime=2017-02-25/2017-03-31",
-                        200);
+                getAsJSONPath("ogc/stac/v1/collections/SENTINEL2/items?limit=19&datetime=2017-02-25/2017-03-31", 200);
 
         assertEquals(Integer.valueOf(2), json.read("numberMatched"));
         assertEquals(Integer.valueOf(2), json.read("numberReturned"));
@@ -287,8 +334,7 @@ public class ItemsTest extends STACTestSupport {
     @Test
     public void testSpaceFilter() throws Exception {
         // only two features matching
-        DocumentContext json =
-                getAsJSONPath("ogc/stac/v1/collections/SENTINEL2/items?bbox=16,42,17,43", 200);
+        DocumentContext json = getAsJSONPath("ogc/stac/v1/collections/SENTINEL2/items?bbox=16,42,17,43", 200);
 
         assertEquals(Integer.valueOf(2), json.read("numberMatched"));
         assertEquals(Integer.valueOf(2), json.read("numberReturned"));
@@ -302,33 +348,29 @@ public class ItemsTest extends STACTestSupport {
     @Test
     public void testCloudCoverFilter() throws Exception {
         // only one feature matching.
-        DocumentContext json =
-                getAsJSONPath(
-                        "ogc/stac/v1/collections/SENTINEL2/items?filter=eo:cloud_cover > 60&filter-lang=cql-text",
-                        200);
+        DocumentContext json = getAsJSONPath(
+                "ogc/stac/v1/collections/SENTINEL2/items?filter=eo:cloud_cover > 60&filter-lang=cql-text", 200);
 
         assertEquals(Integer.valueOf(1), json.read("numberMatched"));
         assertEquals(Integer.valueOf(1), json.read("numberReturned"));
         assertThat(
                 json.read("features[*].id"),
-                containsInAnyOrder(
-                        "S2A_OPER_MSI_L1C_TL_SGS__20160117T141030_A002979_T33TUH_N02.01"));
+                containsInAnyOrder("S2A_OPER_MSI_L1C_TL_SGS__20160117T141030_A002979_T33TUH_N02.01"));
     }
 
     @Test
     public void testSpaceCQLFilter() throws Exception {
         // only one feature matching.
-        DocumentContext json =
-                getAsJSONPath(
-                        "ogc/stac/v1/collections/SENTINEL2/items?filter=eo:cloud_cover = 1&filter-lang=cql-text&bbox=16,42,17,43",
-                        200);
+        DocumentContext json = getAsJSONPath(
+                "ogc/stac/v1/collections/SENTINEL2/items?filter=eo:cloud_cover ="
+                        + " 1&filter-lang=cql-text&bbox=16,42,17,43",
+                200);
 
         assertEquals(Integer.valueOf(1), json.read("numberMatched"));
         assertEquals(Integer.valueOf(1), json.read("numberReturned"));
         assertThat(
                 json.read("features[*].id"),
-                containsInAnyOrder(
-                        "S2A_OPER_MSI_L1C_TL_SGS__20160117T141030_A002979_T33TWH_N02.01"));
+                containsInAnyOrder("S2A_OPER_MSI_L1C_TL_SGS__20160117T141030_A002979_T33TWH_N02.01"));
     }
 
     @Test
@@ -344,8 +386,7 @@ public class ItemsTest extends STACTestSupport {
         assertEquals(Integer.valueOf(2), json.read("features.length()", Integer.class));
 
         // read single reference feature, will test only peculiarities of this
-        DocumentContext item =
-                readSingleContext(json, "features[?(@.id == 'SAS1_20180227102021.02')]");
+        DocumentContext item = readSingleContext(json, "features[?(@.id == 'SAS1_20180227102021.02')]");
 
         // the bbox is in an included template
         assertEquals(Integer.valueOf(-180), item.read("bbox[0]", Integer.class));
@@ -355,8 +396,7 @@ public class ItemsTest extends STACTestSupport {
 
         // the parent link is included as well
         DocumentContext link = readSingleContext(item, "links[?(@.rel == 'collection')]");
-        assertEquals(
-                "http://localhost:8080/geoserver/ogc/stac/v1/collections/SAS1", link.read("href"));
+        assertEquals("http://localhost:8080/geoserver/ogc/stac/v1/collections/SAS1", link.read("href"));
     }
 
     @Test
@@ -364,10 +404,10 @@ public class ItemsTest extends STACTestSupport {
         DocumentContext result = getAsJSONPath("ogc/stac/v1/collections/LANDSAT8/items", 200);
 
         // tests before the dynamic merge with expression on overlay
-        String href = result.read("features[0].assets.thumbnail.href");
-        String title = result.read("features[0].assets.thumbnail.title");
-        String type = result.read("features[0].assets.thumbnail.type");
-        int additional = result.read("features[0].assets.thumbnail.additional");
+        String href = result.read("features[1].assets.thumbnail.href");
+        String title = result.read("features[1].assets.thumbnail.title");
+        String type = result.read("features[1].assets.thumbnail.type");
+        int additional = result.read("features[1].assets.thumbnail.additional");
 
         assertEquals("will replace", href);
         assertEquals("will replace", type);
@@ -380,11 +420,11 @@ public class ItemsTest extends STACTestSupport {
         DocumentContext result = getAsJSONPath("ogc/stac/v1/collections/LANDSAT8/items", 200);
 
         // tests before the dynamic merge with expression on overlay
-        String randomNumber = result.read("features[0].dynamicIncludeFlatTest.randomNumber");
-        String href = result.read("features[0].dynamicIncludeFlatTest.thumbnail.href");
-        String title = result.read("features[0].dynamicIncludeFlatTest.thumbnail.title");
-        String type = result.read("features[0].dynamicIncludeFlatTest.thumbnail.type");
-        String thumbnail2 = result.read("features[0].dynamicIncludeFlatTest.thumbnail2");
+        String randomNumber = result.read("features[1].dynamicIncludeFlatTest.randomNumber");
+        String href = result.read("features[1].dynamicIncludeFlatTest.thumbnail.href");
+        String title = result.read("features[1].dynamicIncludeFlatTest.thumbnail.title");
+        String type = result.read("features[1].dynamicIncludeFlatTest.thumbnail.type");
+        String thumbnail2 = result.read("features[1].dynamicIncludeFlatTest.thumbnail2");
 
         assertEquals("23", randomNumber);
         assertEquals(
@@ -400,8 +440,7 @@ public class ItemsTest extends STACTestSupport {
         // test dynamic flat inclusion with a JSON object with multiple attributes and
         // with a base node with an attributeName equal to one of the attributes in the
         // item json property. The item json property should override the base one.
-        DocumentContext json =
-                getAsJSONPath("ogc/stac/v1/collections/SAS1/items/SAS1_20180226102021.01", 200);
+        DocumentContext json = getAsJSONPath("ogc/stac/v1/collections/SAS1/items/SAS1_20180226102021.01", 200);
 
         String thumbnailTitle = json.read("dynamicIncludeFlatTest.thumbnail.title");
         String thumbnailTitle2 = json.read("dynamicIncludeFlatTest.thumbnail2.title");
@@ -413,55 +452,41 @@ public class ItemsTest extends STACTestSupport {
     public void dynamicIncludeCQLFilterTest() throws Exception {
         // same as dynamicIncludeFlatTest2 but checking filters are getting mapped
         DocumentContext json =
-                getAsJSONPath(
-                        "ogc/stac/v1/collections/SAS1/items?filter=sat:absolute_orbit < 17050",
-                        200);
+                getAsJSONPath("ogc/stac/v1/collections/SAS1/items?filter=sat:absolute_orbit < 17050", 200);
 
         assertEquals(1, json.read("features", List.class).size());
-        assertThat(
-                json.read("features[0].properties.sat:absolute_orbit", Double.class),
-                lessThanOrEqualTo(17050d));
+        assertThat(json.read("features[0].properties.sat:absolute_orbit", Double.class), lessThanOrEqualTo(17050d));
 
-        json =
-                getAsJSONPath(
-                        "ogc/stac/v1/collections/SAS1/items?filter=sat:absolute_orbit > 17050",
-                        200);
+        json = getAsJSONPath("ogc/stac/v1/collections/SAS1/items?filter=sat:absolute_orbit > 17050", 200);
 
         assertEquals(1, json.read("features", List.class).size());
-        assertThat(
-                json.read("features[0].properties.sat:absolute_orbit", Double.class),
-                greaterThanOrEqualTo(17050d));
+        assertThat(json.read("features[0].properties.sat:absolute_orbit", Double.class), greaterThanOrEqualTo(17050d));
     }
 
     @Test
     public void dynamicIncludeSort() throws Exception {
         // sorting up
-        DocumentContext json =
-                getAsJSONPath("ogc/stac/v1/collections/SAS1/items?sortby=sat:absolute_orbit", 200);
+        DocumentContext json = getAsJSONPath("ogc/stac/v1/collections/SAS1/items?sortby=sat:absolute_orbit", 200);
 
         assertEquals(2, json.read("features", List.class).size());
-        assertEquals(
-                json.read("features..properties.sat:absolute_orbit", List.class),
-                Arrays.asList(17030, 17060));
+        assertEquals(json.read("features..properties.sat:absolute_orbit", List.class), Arrays.asList(17030, 17060));
 
         // sorting down
         json = getAsJSONPath("ogc/stac/v1/collections/SAS1/items?sortby=-sat:absolute_orbit", 200);
 
         assertEquals(2, json.read("features", List.class).size());
-        assertEquals(
-                json.read("features..properties.sat:absolute_orbit", List.class),
-                Arrays.asList(17060, 17030));
+        assertEquals(json.read("features..properties.sat:absolute_orbit", List.class), Arrays.asList(17060, 17030));
     }
 
     @Test
     public void testSearchSortByTimeAscending() throws Exception {
-        DocumentContext doc =
-                getAsJSONPath(
-                        "ogc/stac/v1/collections/SENTINEL2/items?filter=datetime > DATE('2017-02-25') and datetime < DATE('2017-03-31')&sortby=datetime",
-                        200);
+        DocumentContext doc = getAsJSONPath(
+                "ogc/stac/v1/collections/SENTINEL2/items?filter=datetime > DATE('2017-02-25') and datetime <"
+                        + " DATE('2017-03-31')&sortby=datetime",
+                200);
 
         assertThat(
-                (List<String>) doc.read("features[*].id"),
+                doc.read("features[*].id"),
                 contains(
                         "S2A_OPER_MSI_L1C_TL_SGS__20170226T171842_A008785_T32TPN_N02.04",
                         "S2A_OPER_MSI_L1C_TL_MTI__20170308T220244_A008933_T11SLT_N02.04"));
@@ -469,13 +494,13 @@ public class ItemsTest extends STACTestSupport {
 
     @Test
     public void testSearchSortByTimeDescending() throws Exception {
-        DocumentContext doc =
-                getAsJSONPath(
-                        "ogc/stac/v1/collections/SENTINEL2/items?filter=datetime > DATE('2017-02-25') and datetime < DATE('2017-03-31')&sortby=-datetime",
-                        200);
+        DocumentContext doc = getAsJSONPath(
+                "ogc/stac/v1/collections/SENTINEL2/items?filter=datetime > DATE('2017-02-25') and datetime <"
+                        + " DATE('2017-03-31')&sortby=-datetime",
+                200);
 
         assertThat(
-                (List<String>) doc.read("features[*].id"),
+                doc.read("features[*].id"),
                 contains(
                         "S2A_OPER_MSI_L1C_TL_MTI__20170308T220244_A008933_T11SLT_N02.04",
                         "S2A_OPER_MSI_L1C_TL_SGS__20170226T171842_A008785_T32TPN_N02.04"));
@@ -483,13 +508,13 @@ public class ItemsTest extends STACTestSupport {
 
     @Test
     public void testSearchSortByCloudCover() throws Exception {
-        DocumentContext doc =
-                getAsJSONPath(
-                        "ogc/stac/v1/collections/SENTINEL2/items?filter=datetime > DATE('2017-02-25') and datetime < DATE('2017-03-31')&sortby=eo:cloud_cover",
-                        200);
+        DocumentContext doc = getAsJSONPath(
+                "ogc/stac/v1/collections/SENTINEL2/items?filter=datetime > DATE('2017-02-25') and datetime <"
+                        + " DATE('2017-03-31')&sortby=eo:cloud_cover",
+                200);
 
         assertThat(
-                (List<String>) doc.read("features[*].id"),
+                doc.read("features[*].id"),
                 contains(
                         "S2A_OPER_MSI_L1C_TL_SGS__20170226T171842_A008785_T32TPN_N02.04",
                         "S2A_OPER_MSI_L1C_TL_MTI__20170308T220244_A008933_T11SLT_N02.04"));
@@ -498,30 +523,29 @@ public class ItemsTest extends STACTestSupport {
     @Test
     public void testQueryByDynamicProperty() throws Exception {
         // s2:datastrip_id is in a dynamically included JSON
-        DocumentContext doc =
-                getAsJSONPath(
-                        "ogc/stac/v1/collections/SAS1/items?filter=s2:datastrip_id = 'S2A_OPER_MSI_L2A_DS_VGS1_20201206T095713_S20201206T074838_N02.14'",
-                        200);
+        DocumentContext doc = getAsJSONPath(
+                "ogc/stac/v1/collections/SAS1/items?filter=s2:datastrip_id ="
+                        + " 'S2A_OPER_MSI_L2A_DS_VGS1_20201206T095713_S20201206T074838_N02.14'",
+                200);
 
-        assertThat((List<String>) doc.read("features[*].id"), contains("SAS1_20180226102021.01"));
+        assertThat(doc.read("features[*].id"), contains("SAS1_20180226102021.01"));
     }
 
     @Test
     public void testPropertySelectionOnDynamicMerge() throws Exception {
-        DocumentContext result =
-                getAsJSONPath(
-                        "ogc/stac/v1/collections/LANDSAT8/items?fields=properties.instruments,-assets,assets.thumbnail.type",
-                        200);
+        DocumentContext result = getAsJSONPath(
+                "ogc/stac/v1/collections/LANDSAT8/items?fields=properties.instruments,-assets,assets.thumbnail.type",
+                200);
 
         // empty fields param only mandatory attributes should be there.
-        String id = result.read("features[0].id");
-        String type = result.read("features[0].type");
-        Map<String, Object> geom = result.read("features[0].geometry");
-        JSONArray bbox = result.read("features[0].bbox");
-        Map<String, Object> properties = result.read("features[0].properties");
-        Map<String, Object> assets = result.read("features[0].assets");
-        String thumbnailType = result.read("features[0].assets.thumbnail.type");
-        JSONArray links = result.read("features[0].links");
+        String id = result.read("features[1].id");
+        String type = result.read("features[1].type");
+        Map<String, Object> geom = result.read("features[1].geometry");
+        JSONArray bbox = result.read("features[1].bbox");
+        Map<String, Object> properties = result.read("features[1].properties");
+        Map<String, Object> assets = result.read("features[1].assets");
+        String thumbnailType = result.read("features[1].assets.thumbnail.type");
+        JSONArray links = result.read("features[1].links");
 
         assertEquals("LS8_TEST.02", id);
         assertEquals("Feature", type);
@@ -541,19 +565,18 @@ public class ItemsTest extends STACTestSupport {
 
     @Test
     public void testPropertySelectionDynamicMerge2() throws Exception {
-        DocumentContext result =
-                getAsJSONPath(
-                        "ogc/stac/v1/collections/LANDSAT8/items?fields=properties,-properties.created,-properties.datetime,-assets.thumbnail",
-                        200);
+        DocumentContext result = getAsJSONPath(
+                "ogc/stac/v1/collections/LANDSAT8/items?fields=properties,-properties.created,-properties.datetime,-assets.thumbnail",
+                200);
 
         // empty fields param only mandatory attributes should be there.
-        String id = result.read("features[0].id");
-        String type = result.read("features[0].type");
-        Map<String, Object> geom = result.read("features[0].geometry");
-        JSONArray bbox = result.read("features[0].bbox");
-        Map<String, Object> properties = result.read("features[0].properties");
-        Map<String, Object> assets = result.read("features[0].assets");
-        JSONArray links = result.read("features[0].links");
+        String id = result.read("features[1].id");
+        String type = result.read("features[1].type");
+        Map<String, Object> geom = result.read("features[1].geometry");
+        JSONArray bbox = result.read("features[1].bbox");
+        Map<String, Object> properties = result.read("features[1].properties");
+        Map<String, Object> assets = result.read("features[1].assets");
+        JSONArray links = result.read("features[1].links");
 
         assertEquals("LS8_TEST.02", id);
         assertEquals("Feature", type);
@@ -565,12 +588,12 @@ public class ItemsTest extends STACTestSupport {
         assertFalse(properties.containsKey("datetime"));
 
         // asserts some of the properties value included.
-        assertEquals(properties.get("platform"), "LANDSAT_8");
-        assertEquals(properties.get("constellation"), "landsat8");
-        assertEquals(properties.get("eo:cloud_cover"), 0d);
-        assertEquals(properties.get("sat:orbit_state"), "descending");
-        assertEquals(properties.get("gsd"), 30);
-        assertEquals(properties.get("landsat:orbit"), 65);
+        assertEquals("LANDSAT_8", properties.get("platform"));
+        assertEquals("landsat8", properties.get("constellation"));
+        assertEquals(0d, properties.get("eo:cloud_cover"));
+        assertEquals("descending", properties.get("sat:orbit_state"));
+        assertEquals(30, properties.get("gsd"));
+        assertEquals(65, properties.get("landsat:orbit"));
 
         assertNotNull(assets);
         assertFalse(assets.isEmpty());
@@ -584,10 +607,9 @@ public class ItemsTest extends STACTestSupport {
 
         // with a base node with an attributeName equal to one of the attributes in the
         // item json property. The item json property should override the base one.
-        DocumentContext json =
-                getAsJSONPath(
-                        "ogc/stac/v1/collections/SAS1/items/SAS1_20180226102021.01?fields=properties,dynamicIncludeFlatTest,-dynamicIncludeFlatTest.thumbnail2",
-                        200);
+        DocumentContext json = getAsJSONPath(
+                "ogc/stac/v1/collections/SAS1/items/SAS1_20180226102021.01?fields=properties,dynamicIncludeFlatTest,-dynamicIncludeFlatTest.thumbnail2",
+                200);
 
         String id = json.read("id");
         String type = json.read("type");
@@ -607,12 +629,12 @@ public class ItemsTest extends STACTestSupport {
         // asserts some of the properties value included.
         assertTrue(properties.containsKey("created"));
         assertTrue(properties.containsKey("datetime"));
-        assertEquals(properties.get("s1:frame_number"), 218);
-        assertEquals(properties.get("s1:start_anxtime"), 1090739);
-        assertEquals(properties.get("s1:stop_anxtime"), 1117820);
-        assertEquals(properties.get("s1:processing_date"), "2019-07-07T18: 33: 12.592265Z");
-        assertEquals(properties.get("s1:processing_site"), "Airbus DS-Newport");
-        assertEquals(properties.get("s1:ipf_version"), 3.1);
+        assertEquals(218, properties.get("s1:frame_number"));
+        assertEquals(1090739, properties.get("s1:start_anxtime"));
+        assertEquals(1117820, properties.get("s1:stop_anxtime"));
+        assertEquals("2019-07-07T18: 33: 12.592265Z", properties.get("s1:processing_date"));
+        assertEquals("Airbus DS-Newport", properties.get("s1:processing_site"));
+        assertEquals(3.1, properties.get("s1:ipf_version"));
 
         assertNotNull(assets);
         assertFalse(assets.isEmpty());
@@ -627,61 +649,51 @@ public class ItemsTest extends STACTestSupport {
     @Test
     public void testQueryByDynamicPropertyNonQueryable() throws Exception {
         // s2:granule_id is in a dynamically included JSON but is not in the queryables array
-        DocumentContext doc =
-                getAsJSONPath(
-                        "ogc/stac/v1/collections/SAS1/items?filter=s2:granule_id = 'S2A_OPER_MSI_L2A_TL_VGS1_20201206T095713_A028503_T37MDU_N02.143'",
-                        200);
-        assertEquals(new Integer(0), doc.read("numberMatched", Integer.class));
+        DocumentContext doc = getAsJSONPath(
+                "ogc/stac/v1/collections/SAS1/items?filter=s2:granule_id ="
+                        + " 'S2A_OPER_MSI_L2A_TL_VGS1_20201206T095713_A028503_T37MDU_N02.143'",
+                200);
+        assertEquals(Integer.valueOf(0), doc.read("numberMatched", Integer.class));
 
         GeoServer gs = getGeoServer();
         OSEOInfo service = gs.getService(OSEOInfo.class);
-        service.getGlobalQueryables()
-                .addAll(Arrays.asList("id", "geometry", "collection", "s2:granule_id"));
+        service.getGlobalQueryables().addAll(Arrays.asList("id", "geometry", "collection", "s2:granule_id"));
         gs.save(service);
-        DocumentContext doc2 =
-                getAsJSONPath(
-                        "ogc/stac/v1/collections/SAS1/items?filter=s2:granule_id = 'S2A_OPER_MSI_L2A_TL_VGS1_20201206T095713_A028503_T37MDU_N02.143'",
-                        200);
-        assertThat((List<String>) doc2.read("features[*].id"), contains("SAS1_20180227102021.02"));
-
-        service.getGlobalQueryables().clear();
-        service.getGlobalQueryables().addAll(Arrays.asList("id", "geometry", "collection"));
-        gs.save(service);
+        DocumentContext doc2 = getAsJSONPath(
+                "ogc/stac/v1/collections/SAS1/items?filter=s2:granule_id ="
+                        + " 'S2A_OPER_MSI_L2A_TL_VGS1_20201206T095713_A028503_T37MDU_N02.143'",
+                200);
+        assertThat(doc2.read("features[*].id"), contains("SAS1_20180227102021.02"));
     }
 
     @Test
     public void testTopLevelArrayProperty() throws Exception {
         // query with an existing keyword
-        DocumentContext doc =
-                getAsJSONPath(
-                        "ogc/stac/v1/collections/SENTINEL2/items?filter=keywords = 'k1'", 200);
-        assertEquals(new Integer(1), doc.read("numberMatched", Integer.class));
+        DocumentContext doc = getAsJSONPath("ogc/stac/v1/collections/SENTINEL2/items?filter=keywords = 'k1'", 200);
+        assertEquals(Integer.valueOf(1), doc.read("numberMatched", Integer.class));
         assertEquals(
                 "S2A_OPER_MSI_L1C_TL_SGS__20160929T154211_A006640_T32TPP_N02.04",
                 readSingleContext(doc, "features").read("id"));
 
         // query with an existing keyword (
         doc = getAsJSONPath("ogc/stac/v1/collections/SENTINEL2/items?filter=keywords = 'k2'", 200);
-        assertEquals(new Integer(1), doc.read("numberMatched", Integer.class));
+        assertEquals(Integer.valueOf(1), doc.read("numberMatched", Integer.class));
         assertEquals(
                 "S2A_OPER_MSI_L1C_TL_SGS__20160929T154211_A006640_T32TPP_N02.04",
                 readSingleContext(doc, "features").read("id"));
 
         // query with a missing keyword
-        doc =
-                getAsJSONPath(
-                        "ogc/stac/v1/collections/SENTINEL2/items?filter=keywords = 'notAKeyword'",
-                        200);
-        assertEquals(new Integer(0), doc.read("numberMatched", Integer.class));
+        doc = getAsJSONPath("ogc/stac/v1/collections/SENTINEL2/items?filter=keywords = 'notAKeyword'", 200);
+        assertEquals(Integer.valueOf(0), doc.read("numberMatched", Integer.class));
     }
 
     @Test
     public void dynamicIncludeFlatArrayTest() throws Exception {
         DocumentContext result = getAsJSONPath("ogc/stac/v1/collections/LANDSAT8/items", 200);
 
-        JSONArray array = result.read("features[0].includeFlatArray");
-        String title = result.read("features[0].includeFlatArray[4].title");
-        String titleMTL = result.read("features[0].includeFlatArray[4].titleMTL");
+        JSONArray array = result.read("features[1].includeFlatArray");
+        String title = result.read("features[1].includeFlatArray[4].title");
+        String titleMTL = result.read("features[1].includeFlatArray[4].titleMTL");
         assertEquals(5, array.size());
         assertTrue(array.contains("thumbnail"));
         assertTrue(array.contains("thumbnail2"));
@@ -693,12 +705,10 @@ public class ItemsTest extends STACTestSupport {
 
     @Test
     public void dynamicIncludeFlatArrayFieldSelectionTest() throws Exception {
-        DocumentContext result =
-                getAsJSONPath(
-                        "ogc/stac/v1/collections/LANDSAT8/items?fields=includeFlatArray,-includeFlatArray.titleMTL",
-                        200);
+        DocumentContext result = getAsJSONPath(
+                "ogc/stac/v1/collections/LANDSAT8/items?fields=includeFlatArray,-includeFlatArray.titleMTL", 200);
 
-        JSONArray array = result.read("features[0].includeFlatArray");
+        JSONArray array = result.read("features[1].includeFlatArray");
         assertEquals(5, array.size());
         int i = array.indexOf("thumbnail");
         assertNotEquals(-1, i);
@@ -713,8 +723,113 @@ public class ItemsTest extends STACTestSupport {
         assertNotEquals(-1, i);
         array.remove(i);
 
+        @SuppressWarnings("unchecked")
         Map<String, Object> map = (Map<String, Object>) array.get(0);
         assertEquals(1, map.size());
         assertFalse(map.containsKey("titleMTL"));
+    }
+
+    @Test
+    public void testJSONBKeySort() throws Exception {
+        // assetsb object inserted into test table as
+        // '{"g":1,"m":2,"f":3,"h":4,"c":5,"a":{"hello":6,"archive":7,"meh":{"working":8,"aver":9}},"opt:cloudCover":34}'
+        DocumentContext json = getAsJSONPath("ogc/stac/v1/collections/LANDSAT8/items/JSONB_TEST.02", 200);
+        assertEquals(
+                "{a={archive=7, hello=6, meh={aver=9, working=8}}, c=5, f=3, g=1, h=4, m=2, opt:cloudCover=34}",
+                json.read("assetsb").toString());
+        // assets object is json, not jsonb, so it is not sorted
+        assertEquals(
+                "{g=1, m=2, f=3, h=4, c=5, a={hello=6, archive=7, meh={working=8, aver=9}}, opt:cloudCover=34,"
+                        + " thumbnail={additional=0, href=will replace, type=will replace}}",
+                json.read("assets").toString());
+    }
+
+    @Test
+    public void testRestrictedProducts() throws Exception {
+        // set a product limit on clod cover. Reminder, the filter uses internal properties like opt:cloudCover,
+        // while the JSON returned uses the mapped properties like eo:cloud_cover
+        GeoServer gs = getGeoServer();
+        OSEOInfo service = gs.getService(OSEOInfo.class);
+        List<EOProductAccessLimitInfo> productLimits = service.getProductLimits();
+        productLimits.add(new EOProductAccessLimitInfoImpl("SENTINEL2", "opt:cloudCover = 0", List.of(ROLE_NOCLOUD)));
+        gs.save(service);
+
+        // test without roles, only products with cloud cover should be visible
+        DocumentContext jsAnonymous = getAsJSONPath("ogc/stac/v1/collections/SENTINEL2/items", 200);
+        assertThat(getJsonListSize(jsAnonymous, "features[?(@.properties.eo:cloud_cover > 0)]"), greaterThan(0));
+        assertThat(getJsonListSize(jsAnonymous, "features[?(@.properties.eo:cloud_cover == 0)]"), equalTo(0));
+
+        // also accessing a single product with no cloud cover should fail
+        DocumentContext jsNotFound = getAsJSONPath(
+                "ogc/stac/v1/collections/SENTINEL2/items/S2A_OPER_MSI_L1C_TL_SGS__20170226T171842_A008785_T32TPN_N02.04",
+                404);
+        checkOGCAPIException(
+                jsNotFound,
+                NOT_FOUND,
+                "Could not locate item S2A_OPER_MSI_L1C_TL_SGS__20170226T171842_A008785_T32TPN_N02.04");
+
+        login("clearUser", "secret", ROLE_NOCLOUD);
+        DocumentContext jsClear = getAsJSONPath("ogc/stac/v1/collections/SENTINEL2/items", 200);
+        assertThat(getJsonListSize(jsClear, "features[?(@.properties.eo:cloud_cover > 0)]"), greaterThan(0));
+        assertThat(getJsonListSize(jsClear, "features[?(@.properties.eo:cloud_cover == 0)]"), greaterThan(0));
+    }
+
+    @Test
+    public void testRestrictedCollections() throws Exception {
+        // set a collection limit on proprietary collections
+        GeoServer gs = getGeoServer();
+        OSEOInfo service = gs.getService(OSEOInfo.class);
+        List<EOCollectionAccessLimitInfo> collectionLimits = service.getCollectionLimits();
+        collectionLimits.add(new EOCollectionAccessLimitInfoImpl("license = 'proprietary'", List.of(ROLE_PROPRIETARY)));
+        // the sensor type is not exposed in JSON, will have to use the collection identifiers for JSON tests
+        collectionLimits.add(new EOCollectionAccessLimitInfoImpl("eo:sensorType = 'ATMOSPHERIC'", List.of(ROLE_ATM)));
+        gs.save(service);
+
+        // warning about test data oddity, SAS1 and SAS9 are the eoIdentifiers of the two atm collections
+
+        // test without roles, propietary and atm collections items should return a 404
+        checkCollectionAvailable("SENTINEL2");
+        checkCollectionNotAvailable("LANDSAT8");
+        checkCollectionNotAvailable("SAS1");
+        checkCollectionNotAvailable("SAS9");
+
+        // with role, non-disabled proprietary collections show up (only one at the moment)
+        login("propuser", "secret", ROLE_PROPRIETARY);
+        checkCollectionAvailable("SENTINEL2");
+        checkCollectionAvailable("LANDSAT8");
+        checkCollectionNotAvailable("SAS1");
+        checkCollectionNotAvailable("SAS9");
+
+        // now try with atm role, should get the other proprietary collection (2 of them) but not the proprietary one
+        login("atmuser", "secret", ROLE_ATM);
+        checkCollectionAvailable("SENTINEL2");
+        checkCollectionNotAvailable("LANDSAT8");
+        checkCollectionAvailable("SAS1");
+        checkCollectionAvailable("SAS9");
+
+        // now use both roles, should get both proprietary and atm collections
+        login("bothuser", "secret", ROLE_ATM, ROLE_PROPRIETARY);
+        checkCollectionAvailable("SENTINEL2");
+        checkCollectionAvailable("LANDSAT8");
+        checkCollectionAvailable("SAS1");
+        checkCollectionAvailable("SAS9");
+
+        // finally, become all powerful admin and get them all
+        login("admin", "geoserver", "ROLE_ADMINISTRATOR");
+        checkCollectionAvailable("SENTINEL2");
+        checkCollectionAvailable("LANDSAT8");
+        checkCollectionAvailable("SAS1");
+        checkCollectionAvailable("SAS9");
+    }
+
+    /** Checking the response is a 404 and the exception reports the collection is not found */
+    private void checkCollectionNotAvailable(String collectionName) throws Exception {
+        DocumentContext json = getAsJSONPath("ogc/stac/v1/collections/" + collectionName + "/items", 404);
+        checkOGCAPIException(json, NOT_FOUND, "Collection not found: " + collectionName);
+    }
+
+    /** Just checking the response is a 200 */
+    private void checkCollectionAvailable(String collectionName) throws Exception {
+        getAsJSONPath("ogc/stac/v1/collections/" + collectionName + "/items", 200);
     }
 }
