@@ -14,15 +14,22 @@ import org.geoserver.openapi.model.catalog.WorkspaceInfo;
 import org.geoserver.openapi.v1.model.WorkspaceSummary;
 import org.junit.Assume;
 import org.junit.Before;
+import org.junit.ClassRule;
 import org.junit.Rule;
 import org.junit.Test;
+import org.junit.rules.RuleChain;
 import org.junit.rules.TestName;
 import org.mockito.internal.util.collections.Sets;
 
 /** Integration test suite for {@link WorkspacesClient} */
 public class WorkspacesClientIT {
 
-    public @Rule IntegrationTestSupport support = new IntegrationTestSupport();
+    private static GeoServerContainer geoserverContainer = new GeoServerContainer();
+
+    private static IntegrationTestSupport support = new IntegrationTestSupport(geoserverContainer);
+
+    @ClassRule
+    public static RuleChain chain = RuleChain.outerRule(geoserverContainer).around(support);
 
     private WorkspacesClient client;
 
@@ -43,11 +50,10 @@ public class WorkspacesClientIT {
         assertNotNull(defaultWorkspace.get().getName());
 
         final String currentDefault = defaultWorkspace.get().getName();
-        final String newDefault =
-                client.findAllNames().stream()
-                        .filter(name -> !currentDefault.equals(name))
-                        .findFirst()
-                        .get();
+        final String newDefault = client.findAllNames().stream()
+                .filter(name -> !currentDefault.equals(name))
+                .findFirst()
+                .get();
 
         client.setDeafultWorkspace(newDefault);
 
@@ -79,7 +85,7 @@ public class WorkspacesClientIT {
     }
 
     public @Test void testCRUD() {
-        String name = String.format("%s-%d", testName.getMethodName(), rnd.nextInt((int) 1e6));
+        String name = "%s-%d".formatted(testName.getMethodName(), rnd.nextInt((int) 1e6));
         testCRUD(name);
     }
 
