@@ -11,37 +11,48 @@ import com.mongodb.client.MongoCollection;
 import com.mongodb.client.MongoCursor;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.logging.Level;
+import org.bson.Document;
 import org.geoserver.schemalessfeatures.data.ComplexContentDataAccess;
 import org.geoserver.schemalessfeatures.data.SchemalessFeatureSource;
 import org.geoserver.schemalessfeatures.mongodb.MongoSchemalessUtils;
 import org.geoserver.schemalessfeatures.mongodb.filter.MongoTypeFinder;
 import org.geoserver.schemalessfeatures.mongodb.filter.SchemalessFilterToMongo;
-import org.geoserver.schemalessfeatures.type.DynamicFeatureType;
+import org.geotools.api.data.FeatureReader;
+import org.geotools.api.data.Query;
+import org.geotools.api.data.QueryCapabilities;
+import org.geotools.api.feature.Feature;
+import org.geotools.api.feature.type.FeatureType;
+import org.geotools.api.feature.type.GeometryDescriptor;
+import org.geotools.api.feature.type.GeometryType;
+import org.geotools.api.feature.type.Name;
+import org.geotools.api.filter.BinaryComparisonOperator;
+import org.geotools.api.filter.Filter;
+import org.geotools.api.filter.expression.Expression;
+import org.geotools.api.filter.expression.Literal;
+import org.geotools.api.filter.expression.PropertyName;
+import org.geotools.api.filter.sort.SortBy;
+import org.geotools.api.filter.sort.SortOrder;
+import org.geotools.api.geometry.MismatchedDimensionException;
+import org.geotools.api.referencing.FactoryException;
+import org.geotools.api.referencing.crs.CoordinateReferenceSystem;
+import org.geotools.api.referencing.operation.TransformException;
 import org.geotools.data.DataUtilities;
-import org.geotools.data.FeatureReader;
 import org.geotools.data.FilteringFeatureReader;
-import org.geotools.data.Query;
-import org.geotools.data.QueryCapabilities;
+import org.geotools.data.mongodb.MongoCollectionMeta;
 import org.geotools.data.mongodb.MongoFilterSplitter;
 import org.geotools.feature.AttributeTypeBuilder;
+import org.geotools.filter.visitor.DuplicatingFilterVisitor;
 import org.geotools.filter.visitor.PostPreProcessFilterSplittingVisitor;
+import org.geotools.geometry.jts.JTS;
 import org.geotools.geometry.jts.ReferencedEnvelope;
+import org.geotools.referencing.CRS;
 import org.geotools.referencing.crs.DefaultGeographicCRS;
+import org.locationtech.jts.geom.Envelope;
 import org.locationtech.jts.geom.Geometry;
-import org.opengis.feature.Feature;
-import org.opengis.feature.type.FeatureType;
-import org.opengis.feature.type.GeometryDescriptor;
-import org.opengis.feature.type.GeometryType;
-import org.opengis.feature.type.Name;
-import org.opengis.filter.BinaryComparisonOperator;
-import org.opengis.filter.Filter;
-import org.opengis.filter.expression.Expression;
-import org.opengis.filter.expression.Literal;
-import org.opengis.filter.expression.PropertyName;
-import org.opengis.filter.sort.SortBy;
-import org.opengis.filter.sort.SortOrder;
 
 public class MongoSchemalessFeatureSource extends SchemalessFeatureSource {
 
@@ -81,9 +92,8 @@ public class MongoSchemalessFeatureSource extends SchemalessFeatureSource {
     protected FeatureReader<FeatureType, Feature> getReaderInteranl(Query query) {
         List<Filter> postFilterList = new ArrayList<>();
         FeatureReader<FeatureType, Feature> reader =
-                new MongoComplexReader(toCursor(query, postFilterList), this);
-        if (!postFilterList.isEmpty())
-            return new FilteringFeatureReader<>(reader, postFilterList.get(0));
+                new MongoComplexReader(toCursor(query, postFilterList), this, query);
+        if (!postFilterList.isEmpty()) return new FilteringFeatureReader<>(reader, postFilterList.get(0));
         return reader;
     }
 
@@ -135,12 +145,12 @@ public class MongoSchemalessFeatureSource extends SchemalessFeatureSource {
                 keys.put(geometryPath, 1);
             }
             if (LOG.isLoggable(Level.FINE)) {
-                LOG.fine(String.format("find(%s, %s)", query, keys));
+                LOG.fine("find(%s, %s)".formatted(query, keys));
             }
             it = collection.find((BasicDBObject) query).projection((BasicDBObject) keys);
         } else {
             if (LOG.isLoggable(Level.FINE)) {
-                LOG.fine(String.format("find(%s)", query));
+                LOG.fine("find(%s)".formatted(query));
             }
             it = collection.find((BasicDBObject) query);
         }
@@ -172,23 +182,29 @@ public class MongoSchemalessFeatureSource extends SchemalessFeatureSource {
             return new BasicDBObject();
         }
 
-        SchemalessFilterToMongo v =
-                new SchemalessFilterToMongo((DynamicFeatureType) getSchema(), collection);
+        // apply filter reprojection to EPSG:4326
+        SimpleReprojectingVisitor reprojectingFilterVisitor = new SimpleReprojectingVisitor();
+        f = (Filter) f.accept(reprojectingFilterVisitor, null);
+
+        SchemalessFilterToMongo v = new SchemalessFilterToMongo(getSchema(), collection);
 
         return (DBObject) f.accept(v, null);
     }
 
     Filter[] splitFilter(Filter f) {
         PostPreProcessFilterSplittingVisitor splitter =
-                new MongoFilterSplitter(getDataStore().getFilterCapabilities(), null, null) {
+                new MongoFilterSplitter(
+                        getDataStore().getFilterCapabilities(),
+                        null,
+                        null,
+                        new MongoCollectionMeta(getIndexesInfoMap())) {
                     @Override
                     protected void visitBinaryComparisonOperator(BinaryComparisonOperator filter) {
                         Expression expression1 = filter.getExpression1();
                         Expression expression2 = filter.getExpression2();
                         if (expression1 instanceof PropertyName && expression2 instanceof Literal) {
                             preStack.push(filter);
-                        } else if (expression2 instanceof PropertyName
-                                && expression1 instanceof Literal) {
+                        } else if (expression2 instanceof PropertyName && expression1 instanceof Literal) {
                             preStack.push(filter);
                         } else {
                             super.visitBinaryComparisonOperator(filter);
@@ -199,20 +215,33 @@ public class MongoSchemalessFeatureSource extends SchemalessFeatureSource {
         return new Filter[] {splitter.getFilterPre(), splitter.getFilterPost()};
     }
 
+    private Map<String, String> getIndexesInfoMap() {
+        Map<String, String> indexes = new HashMap<>();
+        for (Document doc : collection.listIndexes()) {
+            Document key = (Document) doc.get("key");
+            if (key != null) {
+                for (Map.Entry indexData : key.entrySet()) {
+                    indexes.put(
+                            indexData.getKey().toString(), indexData.getValue().toString());
+                }
+            }
+        }
+        return indexes;
+    }
+
     @Override
     public QueryCapabilities getQueryCapabilities() {
-        QueryCapabilities capabilities =
-                new QueryCapabilities() {
-                    @Override
-                    public boolean isOffsetSupported() {
-                        return true;
-                    }
+        QueryCapabilities capabilities = new QueryCapabilities() {
+            @Override
+            public boolean isOffsetSupported() {
+                return true;
+            }
 
-                    @Override
-                    public boolean supportsSorting(SortBy... sortAttributes) {
-                        return true;
-                    }
-                };
+            @Override
+            public boolean supportsSorting(SortBy... sortAttributes) {
+                return true;
+            }
+        };
         return capabilities;
     }
 
@@ -234,5 +263,40 @@ public class MongoSchemalessFeatureSource extends SchemalessFeatureSource {
             q.setPropertyNames(MongoSchemalessUtils.toPropertyName(geometryPath));
         }
         return super.getBoundsInternal(q);
+    }
+
+    /** Reprojects all geometry and referenced envelope literals to EPSG:4326. */
+    private class SimpleReprojectingVisitor extends DuplicatingFilterVisitor {
+        @Override
+        public Object visit(Literal expression, Object extraData) {
+            if (expression.getValue() instanceof Geometry) {
+                Geometry geom = (Geometry) expression.getValue();
+                CoordinateReferenceSystem crs = JTS.getCRS(geom);
+                if (crs != null && !CRS.equalsIgnoreMetadata(crs, DefaultGeographicCRS.WGS84)) {
+                    try {
+                        geom = JTS.transform(geom, CRS.findMathTransform(crs, DefaultGeographicCRS.WGS84));
+                    } catch (MismatchedDimensionException | TransformException | FactoryException e) {
+                        throw new RuntimeException(e);
+                    }
+                }
+                return ff.literal(geom);
+            } else if (expression.getValue() instanceof ReferencedEnvelope) {
+                ReferencedEnvelope env = (ReferencedEnvelope) expression.getValue();
+                CoordinateReferenceSystem crs = env.getCoordinateReferenceSystem();
+                if (crs != null && !CRS.equalsIgnoreMetadata(crs, DefaultGeographicCRS.WGS84)) {
+                    try {
+                        Envelope transformedEnv =
+                                JTS.transform(env, CRS.findMathTransform(crs, DefaultGeographicCRS.WGS84));
+                        env = new ReferencedEnvelope(transformedEnv, DefaultGeographicCRS.WGS84);
+                    } catch (TransformException e) {
+                        throw new RuntimeException(e);
+                    } catch (FactoryException e) {
+                        throw new RuntimeException(e);
+                    }
+                }
+                return ff.literal(env);
+            }
+            return super.visit(expression, extraData);
+        }
     }
 }
