@@ -33,19 +33,28 @@ import org.geoserver.config.GeoServerDataDirectory;
 import org.geoserver.platform.GeoServerExtensions;
 import org.geoserver.platform.resource.Resource;
 import org.geoserver.smartdataloader.data.store.ExclusionsDomainModelVisitor;
+import org.geoserver.smartdataloader.data.store.ExpressionOverridesDomainModelVisitor;
+import org.geoserver.smartdataloader.data.store.SmartOverrideRulesParser;
+import org.geoserver.smartdataloader.data.store.virtualfk.Relationships;
+import org.geoserver.smartdataloader.data.store.virtualfk.RelationshipsXmlParser;
 import org.geoserver.smartdataloader.domain.DomainModelBuilder;
 import org.geoserver.smartdataloader.domain.DomainModelConfig;
 import org.geoserver.smartdataloader.domain.entities.DomainModel;
 import org.geoserver.smartdataloader.metadata.DataStoreMetadata;
 import org.geoserver.smartdataloader.metadata.DataStoreMetadataConfig;
 import org.geoserver.smartdataloader.metadata.DataStoreMetadataFactory;
+import org.geoserver.smartdataloader.metadata.jdbc.DefaultJdbcHelper;
 import org.geoserver.smartdataloader.metadata.jdbc.JdbcDataStoreMetadataConfig;
+import org.geoserver.smartdataloader.metadata.jdbc.JdbcHelper;
+import org.geoserver.smartdataloader.metadata.jdbc.VirtualFkJdbcHelper;
 import org.geoserver.smartdataloader.visitors.appschema.AppSchemaVisitor;
 import org.geoserver.smartdataloader.visitors.gml.GmlSchemaVisitor;
-import org.geotools.data.DataAccess;
-import org.geotools.data.DataAccessFactory;
+import org.geotools.api.data.DataAccess;
+import org.geotools.api.data.DataAccessFactory;
+import org.geotools.api.data.Parameter;
+import org.geotools.api.feature.Feature;
+import org.geotools.api.feature.type.FeatureType;
 import org.geotools.data.DataUtilities;
-import org.geotools.data.Parameter;
 import org.geotools.data.complex.AppSchemaDataAccess;
 import org.geotools.data.complex.FeatureTypeMapping;
 import org.geotools.data.complex.config.AppSchemaDataAccessConfigurator;
@@ -56,8 +65,6 @@ import org.geotools.jdbc.JDBCDataStore;
 import org.geotools.jdbc.JDBCDataStoreFactory;
 import org.geotools.util.URLs;
 import org.geotools.util.logging.Logging;
-import org.opengis.feature.Feature;
-import org.opengis.feature.type.FeatureType;
 import org.w3c.dom.Document;
 
 /** Smart AppSchema DataStore factory. */
@@ -71,29 +78,31 @@ public class SmartDataLoaderDataAccessFactory implements DataAccessFactory {
 
     public static final String DBTYPE_STRING = "smart-data-loader";
 
-    public static final Param DBTYPE =
-            new Param(
-                    "dbtype",
-                    String.class,
-                    "Fixed value '" + DBTYPE_STRING + "'",
-                    true,
-                    DBTYPE_STRING,
-                    Collections.singletonMap(Parameter.LEVEL, "program"));
+    public static final Param DBTYPE = new Param(
+            "dbtype",
+            String.class,
+            "Fixed value '" + DBTYPE_STRING + "'",
+            true,
+            DBTYPE_STRING,
+            Collections.singletonMap(Parameter.LEVEL, "program"));
 
-    public static final Param NAMESPACE =
-            new Param("namespace", URI.class, "Namespace prefix", false);
-    public static final Param DATASTORE_NAME =
-            new Param("datastorename", String.class, "Name of the datastore", true);
-    public static final Param ROOT_ENTITY =
-            new Param("root entity", String.class, "Root Entity", true);
-    public static final Param DATASTORE_METADATA =
-            new Param("datastore", String.class, "JDBC related DataStore", true);
+    public static final Param NAMESPACE = new Param("namespace", URI.class, "Namespace prefix", false);
+    public static final Param DATASTORE_NAME = new Param("datastorename", String.class, "Name of the datastore", true);
+    public static final Param ROOT_ENTITY = new Param("root entity", String.class, "Root Entity", true);
+    public static final Param DATASTORE_METADATA = new Param("datastore", String.class, "JDBC related DataStore", true);
     public static final Param DOMAIN_MODEL_EXCLUSIONS =
-            new Param(
-                    "excluded objects",
-                    String.class,
-                    "Excluded comma separated domainmodel object list",
-                    false);
+            new Param("excluded objects", String.class, "Excluded comma separated domainmodel object list", false);
+    public static final Param SMART_OVERRIDE_PARAM =
+            new Param("smart-override", String.class, "Smart override rules", false);
+    public static final Param ENTITIES_PREFIX = new Param(
+            "entities-prefix",
+            String.class,
+            "Prefix to be used for entities in the mapping files",
+            false,
+            "",
+            Collections.emptyMap());
+    public static final Param VIRTUAL_RELATIONSHIPS =
+            new Param("virtual-relationships", String.class, "Virtual relationships", false);
 
     @Override
     public String getDisplayName() {
@@ -126,8 +135,7 @@ public class SmartDataLoaderDataAccessFactory implements DataAccessFactory {
     public boolean canProcess(Map<String, ?> params) {
         try {
             Object dbType = DBTYPE.lookUp(params);
-            return DBTYPE_STRING.equals(dbType)
-                    && DataUtilities.canProcess(params, getParametersInfo());
+            return DBTYPE_STRING.equals(dbType) && DataUtilities.canProcess(params, getParametersInfo());
         } catch (Exception e) {
             // do nothing. based on AppSchemaDataAccessFactory code
         }
@@ -145,6 +153,9 @@ public class SmartDataLoaderDataAccessFactory implements DataAccessFactory {
         parameters.put(DATASTORE_METADATA.key, DATASTORE_METADATA);
         parameters.put(ROOT_ENTITY.key, ROOT_ENTITY);
         parameters.put(DOMAIN_MODEL_EXCLUSIONS.key, DOMAIN_MODEL_EXCLUSIONS);
+        parameters.put(SMART_OVERRIDE_PARAM.key, SMART_OVERRIDE_PARAM);
+        parameters.put(ENTITIES_PREFIX.key, ENTITIES_PREFIX);
+        parameters.put(VIRTUAL_RELATIONSHIPS.key, VIRTUAL_RELATIONSHIPS);
     }
 
     private String getFilenamePrefix(Map<String, Serializable> params) throws IOException {
@@ -152,9 +163,10 @@ public class SmartDataLoaderDataAccessFactory implements DataAccessFactory {
         String filenamePrefix = rootEntity;
         return filenamePrefix;
     }
+
     /**
-     * Helper method that based on parameters, builds domainmodel, generates associated mapping
-     * files and saves them in the workspace, returning the resulting DataStore.
+     * Helper method that based on parameters, builds domainmodel, generates associated mapping files and saves them in
+     * the workspace, returning the resulting DataStore.
      */
     private DataAccess<FeatureType, Feature> createDataStore(
             Map<String, Serializable> params,
@@ -176,19 +188,15 @@ public class SmartDataLoaderDataAccessFactory implements DataAccessFactory {
         String namespace_prefix = catalog.getNamespaceByURI(target_namespace).getPrefix();
 
         // populate appschema model visitor
-        AppSchemaVisitor appSchemaDmv =
-                new AppSchemaVisitor(namespace_prefix, target_namespace, "./" + gmlFilename);
+        AppSchemaVisitor appSchemaDmv = new AppSchemaVisitor(namespace_prefix, target_namespace, "./" + gmlFilename);
         dm.accept(appSchemaDmv);
         // populate gml model visitor
         GmlSchemaVisitor gmlDmv = new GmlSchemaVisitor(namespace_prefix, target_namespace);
         dm.accept(gmlDmv);
 
-        String pathToAppSchemaFolder =
-                createAppSchemaFolder(target_namespace, catalog, datastoreName);
+        String pathToAppSchemaFolder = createAppSchemaFolder(target_namespace, catalog, datastoreName);
         // save datamodel related files
-        File appschemaFile =
-                saveMappingDocument(
-                        pathToAppSchemaFolder, appschemaFilename, appSchemaDmv.getDocument());
+        File appschemaFile = saveMappingDocument(pathToAppSchemaFolder, appschemaFilename, appSchemaDmv.getDocument());
         saveMappingDocument(pathToAppSchemaFolder, gmlFilename, gmlDmv.getDocument());
 
         // define datastore mappings and save datastore
@@ -202,19 +210,17 @@ public class SmartDataLoaderDataAccessFactory implements DataAccessFactory {
             params.put("url", buildIncludeUrl(configFileUrl, include));
             createDataStore(params, true, sourceDataStoreMap, registeredAppSchemaStores);
         }
-        mappings = AppSchemaDataAccessConfigurator.buildMappings(config, sourceDataStoreMap);
+        mappings = AppSchemaDataAccessConfigurator.buildMappings(config, sourceDataStoreMap, false);
         dataStore = new AppSchemaDataAccess(mappings, hidden);
         registeredAppSchemaStores.add(dataStore);
         return dataStore;
     }
 
-    private String createAppSchemaFolder(
-            String target_namespace, Catalog catalog, String datastoreName) {
+    private String createAppSchemaFolder(String target_namespace, Catalog catalog, String datastoreName) {
 
         NamespaceInfo ni = catalog.getNamespaceByURI(target_namespace);
         WorkspaceInfo wi = catalog.getWorkspaceByName(ni.getName());
-        GeoServerDataDirectory gdd =
-                ((GeoServerDataDirectory) GeoServerExtensions.bean("dataDirectory"));
+        GeoServerDataDirectory gdd = ((GeoServerDataDirectory) GeoServerExtensions.bean("dataDirectory"));
         Resource wiFolder = gdd.get(wi, "");
         // create folder called appschema-smart inside the datastore folder
         String pathname = wiFolder.toString() + "/" + datastoreName + "/appschema-mappings/";
@@ -231,27 +237,33 @@ public class SmartDataLoaderDataAccessFactory implements DataAccessFactory {
     }
 
     /** Helper method that allows to create the DomainModel. */
-    private DomainModel buildDomainModel(Map<String, Serializable> params, List<String> exclusions)
-            throws IOException {
+    private DomainModel buildDomainModel(Map<String, Serializable> params, List<String> exclusions) throws IOException {
         DataStoreInfo jdbcDataStoreInfo = this.getDataStoreInfo(params);
         String rootEntity = lookup(ROOT_ENTITY, params, String.class);
-        JDBCDataStoreFactory factory =
-                new JDBCDataStoreFactoryFinder().getFactoryFromType(jdbcDataStoreInfo.getType());
+        JDBCDataStoreFactory factory = new JDBCDataStoreFactoryFinder().getFactoryFromType(jdbcDataStoreInfo.getType());
         JDBCDataStore jdbcDataStore = null;
         DataStoreMetadata dsm = null;
         try {
             // TODO need to review (since it's forcing to get a JDBC datastore based on parameters.
             // Not sure what happen with JNDI)
-            jdbcDataStore = factory.createDataStore(jdbcDataStoreInfo.getConnectionParameters());
-            DataStoreMetadataConfig config =
-                    new JdbcDataStoreMetadataConfig(
-                            jdbcDataStore,
-                            jdbcDataStoreInfo.getConnectionParameters().get("passwd").toString());
-            dsm = (new DataStoreMetadataFactory()).getDataStoreMetadata(config);
+            Map<String, Serializable> connectionParameters = jdbcDataStoreInfo.getConnectionParameters();
+            jdbcDataStore = factory.createDataStore(connectionParameters);
+            DataStoreMetadataConfig config = new JdbcDataStoreMetadataConfig(
+                    jdbcDataStore, connectionParameters.get("passwd").toString());
+            Relationships relationships = new Relationships();
+            String relationshipsXml = lookup(VIRTUAL_RELATIONSHIPS, params, String.class);
+            if (relationshipsXml != null && !relationshipsXml.isBlank()) {
+                try {
+                    relationships = RelationshipsXmlParser.parse(relationshipsXml);
+                } catch (Exception e) {
+                    throw new RuntimeException("Error parsing virtual relationships configuration.", e);
+                }
+            }
+            JdbcHelper jdbcHelper = new VirtualFkJdbcHelper(new DefaultJdbcHelper(), relationships);
+            validateVirtualRelationships(jdbcHelper, jdbcDataStore, relationships);
+            dsm = (new DataStoreMetadataFactory()).getDataStoreMetadata(config, jdbcHelper);
         } catch (SQLException e) {
-            LOGGER.log(
-                    Level.SEVERE,
-                    "Sql exception while retrieving metadata from the DB " + e.getMessage());
+            LOGGER.log(Level.SEVERE, "Sql exception while retrieving metadata from the DB " + e.getMessage());
             StringBuilder sb = new StringBuilder("Error while acquiring JDBC connection");
             if (jdbcDataStoreInfo.getName() != null)
                 sb.append(" from data store with name " + jdbcDataStoreInfo.getName());
@@ -266,20 +278,34 @@ public class SmartDataLoaderDataAccessFactory implements DataAccessFactory {
             throw new RuntimeException("Cannot connect to DB with defined parameters.");
         }
         DomainModelConfig dmc = new DomainModelConfig();
+        // add the override expressions from connection parameters map
+        dmc.setOverrideExpressions(getOverrideExpressionsMap(params));
         dmc.setRootEntityName(rootEntity);
+        dmc.setEntitiesPrefix(lookup(ENTITIES_PREFIX, params, String.class));
         DomainModelBuilder dmb = new DomainModelBuilder(dsm, dmc);
         DomainModel dm = dmb.buildDomainModel();
         // apply exclusions to original model
-        DomainModel newDomainModel = ExclusionsDomainModelVisitor.buildDomainModel(dm, exclusions);
+        DomainModel newDomainModel = ExclusionsDomainModelVisitor.buildDomainModel(dm, dmc, exclusions);
+        // apply the expressions override to current model
+        ExpressionOverridesDomainModelVisitor expressionOverridesDomainModelVisitor =
+                new ExpressionOverridesDomainModelVisitor(getOverrideExpressionsMap(params));
+        newDomainModel.accept(expressionOverridesDomainModelVisitor);
         // release datastore before returning model
         jdbcDataStore.dispose();
         return newDomainModel;
     }
 
-    /**
-     * Helper method that allows to save an xml document representing a mapping in smart-appschema
-     * folder.
-     */
+    private Map<String, String> getOverrideExpressionsMap(Map<String, Serializable> params) {
+        try {
+            String encodedOVerrideRules = lookup(SMART_OVERRIDE_PARAM, params, String.class);
+            Map<String, String> rulesMap = SmartOverrideRulesParser.INSTANCE.parse(encodedOVerrideRules);
+            return rulesMap;
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    /** Helper method that allows to save an xml document representing a mapping in smart-appschema folder. */
     private File saveMappingDocument(String pathname, String filename, Document mapping) {
         // create smart-appschema folder in workspace folder if it does not exists
         File directory = new File(pathname);
@@ -299,18 +325,27 @@ public class SmartDataLoaderDataAccessFactory implements DataAccessFactory {
             StreamResult stream = new StreamResult(file);
             transf.transform(source, stream);
         } catch (Exception e) {
-            throw new RuntimeException(
-                    "Cannot save generated mapping in the workspace related folder.");
+            throw new RuntimeException("Cannot save generated mapping in the workspace related folder.");
         }
         return file;
+    }
+
+    private void validateVirtualRelationships(
+            JdbcHelper jdbcHelper, JDBCDataStore jdbcDataStore, Relationships relationships) throws Exception {
+        if (!(jdbcHelper instanceof VirtualFkJdbcHelper)) {
+            return;
+        }
+        String allowedSchema = jdbcDataStore.getDatabaseSchema();
+        try (java.sql.Connection connection = jdbcDataStore.getDataSource().getConnection()) {
+            ((VirtualFkJdbcHelper) jdbcHelper).validateVirtualRelationships(connection.getMetaData(), allowedSchema);
+        }
     }
 
     /** Method that allows to get a DataStoreInfo based on a set of parameters. */
     private DataStoreInfo getDataStoreInfo(Map<String, Serializable> params) throws IOException {
         String jdbcDataStoreId = lookup(DATASTORE_METADATA, params, String.class);
-        Catalog c = getGeoServer().getCatalog();
-        DataStoreInfo ds = c.getDataStore(jdbcDataStoreId);
-        return ds;
+        Catalog catalog = getGeoServer().getCatalog();
+        return catalog.getResourcePool().clone(catalog.getDataStore(jdbcDataStoreId), true);
     }
 
     /** Helper method to build urls in the context of a new AppSchemaDataAccess instance. */
@@ -327,20 +362,16 @@ public class SmartDataLoaderDataAccessFactory implements DataAccessFactory {
         if (index <= 0) {
             // we can't handle this situation let's raise an exception
             throw new RuntimeException(
-                    String.format(
-                            "Can't build include types '%s' URL using parent '%s' URL.",
-                            include, url));
+                    "Can't build include types '%s' URL using parent '%s' URL.".formatted(include, url));
         }
         // build the include types URL
         url = url.substring(0, index + 1) + include;
-        LOGGER.fine(
-                String.format("Using URL '%s' to retrieve include types with '%s'.", url, include));
+        LOGGER.fine("Using URL '%s' to retrieve include types with '%s'.".formatted(url, include));
         return url;
     }
 
     /** Helper for getting values on parameters mappings. */
-    <T> T lookup(Param param, Map<String, Serializable> params, Class<T> target)
-            throws IOException {
+    <T> T lookup(Param param, Map<String, Serializable> params, Class<T> target) throws IOException {
         T result = target.cast(param.lookUp(params));
         if (result == null) {
             result = target.cast(param.getDefaultValue());
@@ -349,14 +380,13 @@ public class SmartDataLoaderDataAccessFactory implements DataAccessFactory {
     }
 
     @Override
-    public DataAccess<? extends FeatureType, ? extends Feature> createDataStore(
-            Map<String, ?> params) throws IOException {
+    public DataAccess<? extends FeatureType, ? extends Feature> createDataStore(Map<String, ?> params)
+            throws IOException {
         final Set<AppSchemaDataAccess> registeredAppSchemaStores = new HashSet<>();
         try {
             @SuppressWarnings("unchecked")
             Map<String, Serializable> parameters = (Map<String, Serializable>) params;
-            return createDataStore(
-                    parameters, false, new DataAccessMap(), registeredAppSchemaStores);
+            return createDataStore(parameters, false, new DataAccessMap(), registeredAppSchemaStores);
         } catch (Exception ex) {
             // dispose every already registered included datasource
             for (AppSchemaDataAccess appSchemaDataAccess : registeredAppSchemaStores) {
