@@ -4,6 +4,9 @@
  */
 package org.geoserver.importer.rest;
 
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
@@ -13,15 +16,10 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import javax.servlet.ServletException;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import net.sf.json.JSONException;
-import net.sf.json.JSONObject;
-import org.apache.commons.fileupload.FileItem;
-import org.apache.commons.fileupload.FileUploadException;
-import org.apache.commons.fileupload.disk.DiskFileItemFactory;
-import org.apache.commons.fileupload.servlet.ServletFileUpload;
+import org.apache.commons.fileupload2.core.DiskFileItem;
+import org.apache.commons.fileupload2.core.DiskFileItemFactory;
+import org.apache.commons.fileupload2.core.FileUploadException;
+import org.apache.commons.fileupload2.jakarta.servlet6.JakartaServletFileUpload;
 import org.apache.commons.io.IOUtils;
 import org.geoserver.catalog.Catalog;
 import org.geoserver.catalog.CatalogBuilder;
@@ -48,11 +46,13 @@ import org.geoserver.rest.RequestInfo;
 import org.geoserver.rest.RestBaseController;
 import org.geoserver.rest.RestException;
 import org.geoserver.rest.util.MediaTypeExtensions;
+import org.geotools.api.referencing.FactoryException;
+import org.geotools.api.referencing.NoSuchAuthorityCodeException;
+import org.geotools.api.referencing.crs.CoordinateReferenceSystem;
 import org.geotools.referencing.CRS;
 import org.geotools.util.logging.Logging;
-import org.opengis.referencing.FactoryException;
-import org.opengis.referencing.NoSuchAuthorityCodeException;
-import org.opengis.referencing.crs.CoordinateReferenceSystem;
+import org.kordamp.json.JSONException;
+import org.kordamp.json.JSONObject;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -68,7 +68,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.servlet.mvc.condition.PatternsRequestCondition;
 
 @RestController
 @RequestMapping(
@@ -79,13 +78,12 @@ public class ImportTaskController extends ImportBaseController {
     static final Logger LOGGER = Logging.getLogger(ImportTaskController.class);
 
     @Autowired
-    protected ImportTaskController(Importer importer) {
+    public ImportTaskController(Importer importer) {
         super(importer);
     }
 
     @GetMapping
-    public ImportWrapper tasksGet(
-            @PathVariable Long id, @RequestParam(required = false) String expand) {
+    public ImportWrapper tasksGet(@PathVariable Long id, @RequestParam(required = false) String expand) {
         return (writer, builder, converter) ->
                 converter.tasks(builder, context(id).getTasks(), true, converter.expand(expand, 0));
     }
@@ -131,9 +129,7 @@ public class ImportTaskController extends ImportBaseController {
 
     @GetMapping(path = "/{taskId}/target")
     public ImportWrapper targetGet(
-            @PathVariable Long id,
-            @PathVariable Integer taskId,
-            @RequestParam(required = false) String expand) {
+            @PathVariable Long id, @PathVariable Integer taskId, @RequestParam(required = false) String expand) {
         final ImportTask task = task(id, taskId);
         if (task.getStore() == null) {
             throw new RestException("Task has no target store", HttpStatus.NOT_FOUND);
@@ -144,19 +140,12 @@ public class ImportTaskController extends ImportBaseController {
 
     @GetMapping(path = "/{taskId}/layer")
     public ImportWrapper layersGet(
-            @PathVariable Long id,
-            @PathVariable Integer taskId,
-            @RequestParam(required = false) String expand) {
+            @PathVariable Long id, @PathVariable Integer taskId, @RequestParam(required = false) String expand) {
         ImportTask task = task(id, taskId);
-        return (writer, builder, converter) ->
-                converter.layer(builder, task, true, converter.expand(expand, 1));
+        return (writer, builder, converter) -> converter.layer(builder, task, true, converter.expand(expand, 1));
     }
 
-    @PostMapping(
-            consumes = {
-                MediaType.MULTIPART_FORM_DATA_VALUE,
-                MediaType.APPLICATION_FORM_URLENCODED_VALUE
-            })
+    @PostMapping(consumes = {MediaType.MULTIPART_FORM_DATA_VALUE, MediaType.APPLICATION_FORM_URLENCODED_VALUE})
     public Object taskPost(
             @PathVariable Long id,
             @RequestParam(required = false) String expand,
@@ -168,8 +157,7 @@ public class ImportTaskController extends ImportBaseController {
         // file posted from form
         if (request.getContentType().startsWith(MediaType.MULTIPART_FORM_DATA_VALUE)) {
             data = handleMultiPartFormUpload(request, context(id));
-        } else if (request.getContentType()
-                .startsWith(MediaType.APPLICATION_FORM_URLENCODED_VALUE)) {
+        } else if (request.getContentType().startsWith(MediaType.APPLICATION_FORM_URLENCODED_VALUE)) {
             try {
                 data = handleFormPost(request);
             } catch (IOException | ServletException e) {
@@ -201,8 +189,7 @@ public class ImportTaskController extends ImportBaseController {
             HttpServletRequest request,
             HttpServletResponse response) {
 
-        return (writer, builder, converter) ->
-                handleTaskPut(id, taskId, request, response, converter);
+        return (writer, builder, converter) -> handleTaskPut(id, taskId, request, response, converter);
     }
 
     /** Workaround to support regular response content type when file extension is in path */
@@ -211,8 +198,7 @@ public class ImportTaskController extends ImportBaseController {
         @Bean
         PutIgnoringExtensionContentNegotiationStrategy importTaskPutContentNegotiationStrategy() {
             return new PutIgnoringExtensionContentNegotiationStrategy(
-                    new PatternsRequestCondition(
-                            RestBaseController.ROOT_PATH + "/imports/{id}/tasks/{taskId:.+}"),
+                    List.of("/imports/{id}/tasks/{taskId:.+}"),
                     Arrays.asList(MediaType.APPLICATION_JSON, MediaType.TEXT_HTML));
         }
     }
@@ -237,8 +223,7 @@ public class ImportTaskController extends ImportBaseController {
 
     @PutMapping(path = "/{taskId}/target")
     @ResponseStatus(HttpStatus.NO_CONTENT)
-    public void targetPut(
-            @PathVariable Long id, @PathVariable Integer taskId, @RequestBody StoreInfo store) {
+    public void targetPut(@PathVariable Long id, @PathVariable Integer taskId, @RequestBody StoreInfo store) {
 
         if (store == null) {
             throw new RestException("Task has no target store", HttpStatus.NOT_FOUND);
@@ -249,9 +234,7 @@ public class ImportTaskController extends ImportBaseController {
                 importer.changed(task);
             } catch (IOException e) {
                 throw new RestException(
-                        "Error while initializing Importer Context",
-                        HttpStatus.INTERNAL_SERVER_ERROR,
-                        e);
+                        "Error while initializing Importer Context", HttpStatus.INTERNAL_SERVER_ERROR, e);
             }
         }
     }
@@ -280,13 +263,11 @@ public class ImportTaskController extends ImportBaseController {
         try {
             importer.changed(task.getContext());
         } catch (IOException e) {
-            throw new RestException(
-                    "Error deleting Importer Context", HttpStatus.INTERNAL_SERVER_ERROR, e);
+            throw new RestException("Error deleting Importer Context", HttpStatus.INTERNAL_SERVER_ERROR, e);
         }
     }
 
-    public Object acceptData(
-            ImportData data, ImportContext context, HttpServletResponse response, String expand) {
+    public Object acceptData(ImportData data, ImportContext context, HttpServletResponse response, String expand) {
         List<ImportTask> newTasks = null;
         try {
             newTasks = importer.update(context, data);
@@ -301,28 +282,22 @@ public class ImportTaskController extends ImportBaseController {
                 long taskId = newTasks.get(0).getId();
                 response.setHeader(
                         "Location",
-                        RequestInfo.get()
-                                .servletURI(
-                                        String.format(
-                                                "/imports/%d/tasks/%d", context.getId(), taskId)));
+                        RequestInfo.get().servletURI("/imports/%d/tasks/%d".formatted(context.getId(), taskId)));
             }
             response.setStatus(HttpStatus.CREATED.value());
 
-            return (ImportWrapper)
-                    (writer, builder, converter) -> {
-                        if (result.size() == 1) {
-                            converter.task(
-                                    builder, result.get(0), true, converter.expand(expand, 1));
-                        } else {
-                            converter.tasks(builder, result, true, converter.expand(expand, 0));
-                        }
-                    };
+            return (ImportWrapper) (writer, builder, converter) -> {
+                if (result.size() == 1) {
+                    converter.task(builder, result.get(0), true, converter.expand(expand, 1));
+                } else {
+                    converter.tasks(builder, result, true, converter.expand(expand, 0));
+                }
+            };
         }
         return "";
     }
 
-    public ImportData handleFormPost(HttpServletRequest request)
-            throws IOException, ServletException {
+    public ImportData handleFormPost(HttpServletRequest request) throws IOException, ServletException {
 
         String url = IOUtils.toString(request.getPart("url").getInputStream(), encoding);
         if (url == null) {
@@ -359,12 +334,9 @@ public class ImportTaskController extends ImportBaseController {
     }
 
     public ImportData handleMultiPartFormUpload(HttpServletRequest request, ImportContext context) {
-        DiskFileItemFactory factory = new DiskFileItemFactory();
-        // @revisit - this appears to be causing OOME
-        // factory.setSizeThreshold(102400000);
-
-        ServletFileUpload upload = new ServletFileUpload(factory);
-        List<FileItem> items = null;
+        JakartaServletFileUpload<DiskFileItem, DiskFileItemFactory> upload =
+                new JakartaServletFileUpload<>(DiskFileItemFactory.builder().get());
+        List<DiskFileItem> items = null;
         try {
             items = upload.parseRequest(request);
         } catch (FileUploadException e) {
@@ -375,17 +347,14 @@ public class ImportTaskController extends ImportBaseController {
         Directory directory = findOrCreateDirectory(context);
 
         // unpack all the files
-        for (FileItem item : items) {
+        for (DiskFileItem item : items) {
             if (item.getName() == null) {
                 continue;
             }
             try {
                 directory.accept(item);
             } catch (Exception ex) {
-                throw new RestException(
-                        "Error writing file " + item.getName(),
-                        HttpStatus.INTERNAL_SERVER_ERROR,
-                        ex);
+                throw new RestException("Error writing file " + item.getName(), HttpStatus.INTERNAL_SERVER_ERROR, ex);
             }
         }
         return directory;
@@ -406,12 +375,12 @@ public class ImportTaskController extends ImportBaseController {
             // ImportContextJSONConverterReader(importer,request.getInputStream()).task();
         } catch (ValidationException | IOException ve) {
             LOGGER.log(Level.WARNING, null, ve);
-            throw converter.badRequest(ve);
+            throw ImportJSONWriter.badRequest(ve);
         }
 
         boolean change = false;
         if (task.getStore() != null) {
-            // JD: moved to TaskTargetResource, but handle here for backward compatability
+            // JD: moved to TaskTargetResource, but handle here for backward compatibility
             updateStoreInfo(orig, task.getStore(), importer);
             change = true;
         }
@@ -427,7 +396,7 @@ public class ImportTaskController extends ImportBaseController {
 
         if (task.getLayer() != null) {
             change = true;
-            // now handled by LayerResource, but handle here for backwards compatability
+            // now handled by LayerResource, but handle here for backwards compatibility
             updateLayer(orig, task.getLayer(), importer, converter);
         }
 
@@ -443,12 +412,8 @@ public class ImportTaskController extends ImportBaseController {
             try {
                 importer.changed(orig);
             } catch (IOException e) {
-                LOGGER.log(
-                        Level.SEVERE,
-                        "Error updating Importer Context, message is: " + e.getMessage(),
-                        e);
-                throw new RestException(
-                        "Error updating Importer Context", HttpStatus.INTERNAL_SERVER_ERROR, e);
+                LOGGER.log(Level.SEVERE, "Error updating Importer Context, message is: " + e.getMessage(), e);
+                throw new RestException("Error updating Importer Context", HttpStatus.INTERNAL_SERVER_ERROR, e);
             }
             response.setStatus(HttpStatus.NO_CONTENT.value());
         }
@@ -467,8 +432,7 @@ public class ImportTaskController extends ImportBaseController {
         }
     }
 
-    private ImportData handleFileUpload(
-            ImportContext context, Object taskId, HttpServletRequest request) {
+    private ImportData handleFileUpload(ImportContext context, Object taskId, HttpServletRequest request) {
         Directory directory = findOrCreateDirectory(context);
         try {
             directory.accept(taskId.toString(), request.getInputStream());
@@ -480,8 +444,7 @@ public class ImportTaskController extends ImportBaseController {
         return directory;
     }
 
-    static void updateLayer(
-            ImportTask orig, LayerInfo l, Importer importer, ImportJSONWriter converter) {
+    static void updateLayer(ImportTask orig, LayerInfo l, Importer importer, ImportJSONWriter converter) {
         // update the original layer and resource from the new
 
         ResourceInfo r = l.getResource();
@@ -539,12 +502,10 @@ public class ImportTaskController extends ImportBaseController {
             } catch (NoSuchAuthorityCodeException ex) {
                 String msg = "Invalid SRS " + srs;
                 LOGGER.warning(msg + " in PUT request");
-                throw converter.badRequest(msg);
+                throw ImportJSONWriter.badRequest(msg);
             } catch (FactoryException ex) {
-                LOGGER.log(
-                        Level.SEVERE, "Error with referencing, message is: " + ex.getMessage(), ex);
-                throw new RestException(
-                        "Error with referencing", HttpStatus.INTERNAL_SERVER_ERROR, ex);
+                LOGGER.log(Level.SEVERE, "Error with referencing, message is: " + ex.getMessage(), ex);
+                throw new RestException("Error with referencing", HttpStatus.INTERNAL_SERVER_ERROR, ex);
             }
             // make this the specified native if none exists
             // useful for csv or other files
@@ -570,9 +531,7 @@ public class ImportTaskController extends ImportBaseController {
         if (update.getName() != null) {
             Catalog cat = importer.getCatalog();
             if (update.getWorkspace() != null) {
-                existing =
-                        cat.getStoreByName(
-                                update.getWorkspace(), update.getName(), StoreInfo.class);
+                existing = cat.getStoreByName(update.getWorkspace(), update.getName(), StoreInfo.class);
             } else {
                 existing = importer.getCatalog().getStoreByName(update.getName(), StoreInfo.class);
             }
@@ -580,8 +539,7 @@ public class ImportTaskController extends ImportBaseController {
                 throw new RestException("Unable to find referenced store", HttpStatus.BAD_REQUEST);
             }
             if (!existing.isEnabled()) {
-                throw new RestException(
-                        "Proposed target store is not enabled", HttpStatus.BAD_REQUEST);
+                throw new RestException("Proposed target store is not enabled", HttpStatus.BAD_REQUEST);
             }
         }
 
@@ -590,16 +548,14 @@ public class ImportTaskController extends ImportBaseController {
             CatalogBuilder cb = new CatalogBuilder(importer.getCatalog());
 
             StoreInfo clone;
-            if (existing instanceof DataStoreInfo) {
+            if (existing instanceof DataStoreInfo info1) {
                 clone = cb.buildDataStore(existing.getName());
-                cb.updateDataStore((DataStoreInfo) clone, (DataStoreInfo) existing);
-            } else if (existing instanceof CoverageStoreInfo) {
+                cb.updateDataStore((DataStoreInfo) clone, info1);
+            } else if (existing instanceof CoverageStoreInfo info) {
                 clone = cb.buildCoverageStore(existing.getName());
-                cb.updateCoverageStore((CoverageStoreInfo) clone, (CoverageStoreInfo) existing);
+                cb.updateCoverageStore((CoverageStoreInfo) clone, info);
             } else {
-                throw new RestException(
-                        "Unable to handle existing store: " + update,
-                        HttpStatus.INTERNAL_SERVER_ERROR);
+                throw new RestException("Unable to handle existing store: " + update, HttpStatus.INTERNAL_SERVER_ERROR);
             }
 
             ((StoreInfoImpl) clone).setId(existing.getId());
@@ -610,13 +566,12 @@ public class ImportTaskController extends ImportBaseController {
         } else {
             // update the original
             CatalogBuilder cb = new CatalogBuilder(importer.getCatalog());
-            if (orig instanceof DataStoreInfo) {
-                cb.updateDataStore((DataStoreInfo) orig, (DataStoreInfo) update);
-            } else if (orig instanceof CoverageStoreInfo) {
-                cb.updateCoverageStore((CoverageStoreInfo) orig, (CoverageStoreInfo) update);
+            if (orig instanceof DataStoreInfo info1) {
+                cb.updateDataStore(info1, (DataStoreInfo) update);
+            } else if (orig instanceof CoverageStoreInfo info) {
+                cb.updateCoverageStore(info, (CoverageStoreInfo) update);
             } else {
-                throw new RestException(
-                        "Unable to update store with " + update, HttpStatus.INTERNAL_SERVER_ERROR);
+                throw new RestException("Unable to update store with " + update, HttpStatus.INTERNAL_SERVER_ERROR);
             }
         }
     }
