@@ -7,18 +7,17 @@ package org.geoserver.monitor;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 
-import org.opengis.geometry.BoundingBox;
+import org.geotools.api.geometry.BoundingBox;
 
 public class BBoxAsserts {
 
     /** Asserts two BoundingBoxes are equal to within delta. */
     public static void assertEqualsBbox(BoundingBox expected, BoundingBox result, double delta) {
-        assertNotNull(String.format("Expected %s but got null", expected), result);
+        assertNotNull("Expected %s but got null".formatted(expected), result);
         assertEquals(expected.getMaxX(), result.getMaxX(), delta);
         assertEquals(expected.getMinX(), result.getMinX(), delta);
         assertEquals(expected.getMaxY(), result.getMaxY(), delta);
         assertEquals(expected.getMinY(), result.getMinY(), delta);
-        assertEquals(
-                expected.getCoordinateReferenceSystem(), result.getCoordinateReferenceSystem());
+        assertEquals(expected.getCoordinateReferenceSystem(), result.getCoordinateReferenceSystem());
     }
 }
