@@ -10,14 +10,14 @@ import java.io.IOException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashSet;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import javax.measure.UnitConverter;
-import javax.media.jai.iterator.RandomIter;
+import org.eclipse.imagen.iterator.RandomIter;
 import org.geoserver.catalog.Catalog;
 import org.geoserver.catalog.LayerInfo;
 import org.geoserver.catalog.MetadataMap;
@@ -43,12 +43,15 @@ import ucar.ma2.DataType;
 import ucar.ma2.Index;
 import ucar.ma2.InvalidRangeException;
 import ucar.nc2.Attribute;
+import ucar.nc2.AttributeContainerMutable;
 import ucar.nc2.Dimension;
-import ucar.nc2.NetcdfFileWriter;
+import ucar.nc2.Group;
 import ucar.nc2.Variable;
 import ucar.nc2.dataset.NetcdfDataset;
 import ucar.nc2.write.Nc4Chunking;
 import ucar.nc2.write.Nc4ChunkingDefault;
+import ucar.nc2.write.NetcdfFileFormat;
+import ucar.nc2.write.NetcdfFormatWriter;
 import ucar.units.PrefixDBException;
 import ucar.units.SpecificationException;
 import ucar.units.StandardUnitFormat;
@@ -57,51 +60,61 @@ import ucar.units.UnitSystemException;
 
 public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
 
+    public static final String SHUFFLE_KEY = "shuffle";
+    public static final String DATA_PACKING_KEY = "dataPacking";
+    public static final String COMPRESSION_KEY = "compression";
+    public static final String VARIABLE_NAME_KEY = "variableName";
+    public static final String UOM_KEY = "uom";
+    public static final String COPY_GLOBAL_ATTRIBUTES_KEY = "copyGlobalAttributes";
+    public static final String COPY_VARIABLE_ATTRIBUTES_KEY = "copyVariableAttributes";
+
     protected static StandardUnitFormat SUF = StandardUnitFormat.instance();
 
     public static final Logger LOGGER = Logging.getLogger(AbstractNetCDFEncoder.class);
 
-    protected static final double EQUALITY_DELTA =
-            1E-10; // Consider customizing it depending on the noData magnitude
+    protected static final double EQUALITY_DELTA = 1E-10; // Consider customizing it depending on the noData magnitude
 
     /**
-     * Attributes that are never copied to the main output variable from a NetCDF/GRIB source
-     * because they require special handling.
-     */
-    @SuppressWarnings("serial")
-    protected static final Set<String> COPY_ATTRIBUTES_BLACKLIST =
-            new HashSet<String>() {
-                {
-                    // coordinate variable names are usually changed
-                    add("coordinates");
-                    // these do not survive type change or packing and should be set from nodata
-                    // value
-                    add("_FillValue");
-                    add("missing_value");
-                    // this one is better not copied over in case of subsetting instead
-                    add("_ChunkSizes");
-                }
-            };
-
-    /**
-     * Global Attributes that are never copied from a NetCDF/GRIB source because they require
+     * Attributes that are never copied to the main output variable from a NetCDF/GRIB source because they require
      * special handling.
      */
-    @SuppressWarnings("serial")
-    protected static final Set<String> COPY_GLOBAL_ATTRIBUTES_BLACKLIST =
-            new HashSet<String>() {
-                {
-                    // Not copying this since the UCAR writer will create it again
-                    add("_NCProperties");
-                }
-            };
+    protected static final Set<String> COPY_ATTRIBUTES_BLACKLIST = Set.of(
+            // coordinate variable names are usually changed
+            "coordinates",
+            // do not survive type change or packing and should be set from no-data value
+            "_FillValue",
+            "missing_value",
+            // this one is better not copied over in case of sub-setting instead
+            "_ChunkSizes");
 
-    /** Bean related to the {@link NetCDFCFParser} */
-    protected static NetCDFParserBean parserBean = GeoServerExtensions.bean(NetCDFParserBean.class);
+    /** Global Attributes that are never copied from a NetCDF/GRIB source because they require special handling. */
+    protected static final Set<String> COPY_GLOBAL_ATTRIBUTES_BLACKLIST = Set.of("_NCProperties");
 
     /**
-     * A dimension mapping between dimension names and dimension manager instances We use a Linked
-     * map to preserve the dimension order
+     * Bean related to the {@link NetCDFCFParser}.
+     *
+     * <p>Resolved lazily via {@link #getParserBean()} so that the CF standard names table is looked up at first use
+     * (when the Spring context is fully wired and the GeoServer data directory has been provisioned), not at
+     * {@code AbstractNetCDFEncoder} class-load time. Eager resolution at class load was racy under tests that touched
+     * the encoder before the test data directory had finished initializing — the field would latch to {@code null} and
+     * every subsequent CF compliance check would silently return {@code false}, dropping the {@code standard_name}
+     * attribute from the output.
+     */
+    protected static volatile NetCDFParserBean parserBean;
+
+    /** Returns the cached {@link NetCDFParserBean}, resolving it lazily via Spring on first use. */
+    protected static NetCDFParserBean getParserBean() {
+        NetCDFParserBean local = parserBean;
+        if (local == null) {
+            local = GeoServerExtensions.bean(NetCDFParserBean.class);
+            parserBean = local;
+        }
+        return local;
+    }
+
+    /**
+     * A dimension mapping between dimension names and dimension manager instances We use a Linked map to preserve the
+     * dimension order
      */
     protected NetCDFDimensionsManager dimensionsManager = new NetCDFDimensionsManager();
 
@@ -120,22 +133,24 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
     /** The extra variables to be copied from the source to output NetCDF */
     protected List<NetCDFSettingsContainer.ExtraVariable> extraVariables;
 
-    protected boolean shuffle = NetCDFSettingsContainer.DEFAULT_SHUFFLE;
+    protected volatile boolean shuffle = NetCDFSettingsContainer.DEFAULT_SHUFFLE;
 
     /** Whether to copy attributes from NetCDF source variable to output variable */
-    protected boolean copyAttributes = NetCDFSettingsContainer.DEFAULT_COPY_ATTRIBUTES;
+    protected volatile boolean copyAttributes = NetCDFSettingsContainer.DEFAULT_COPY_ATTRIBUTES;
 
     /** Weather to copy global attributes from NetCDF source to output */
-    protected boolean copyGlobalAttributes = NetCDFSettingsContainer.DEFAULT_COPY_GLOBAL_ATTRIBUTES;
+    protected volatile boolean copyGlobalAttributes = NetCDFSettingsContainer.DEFAULT_COPY_GLOBAL_ATTRIBUTES;
 
-    protected int compressionLevel = NetCDFSettingsContainer.DEFAULT_COMPRESSION;
+    protected volatile int compressionLevel = NetCDFSettingsContainer.DEFAULT_COMPRESSION;
 
     protected DataPacking dataPacking = DataPacking.getDefault();
 
-    /** The underlying {@link NetcdfFileWriter} which will be used to write down data. */
-    protected NetcdfFileWriter writer;
+    /** The underlying {@link NetcdfFormatWriter.Builder} which will be used to write down data. */
+    protected NetcdfFormatWriter.Builder writerb;
 
-    protected NetcdfFileWriter.Version version;
+    protected NetcdfFormatWriter writer;
+
+    protected NetcdfFileFormat ncFormat;
 
     /** The instance of the class delegated to do proper NetCDF coordinates setup */
     protected NetCDFCRSWriter crsWriter;
@@ -148,10 +163,7 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
      * @param encodingParameters customized encoding params
      */
     public AbstractNetCDFEncoder(
-            GranuleStack granuleStack,
-            File file,
-            Map<String, String> encodingParameters,
-            String outputFormat)
+            GranuleStack granuleStack, File file, Map<String, String> encodingParameters, String outputFormat)
             throws IOException {
         this.granuleStack = granuleStack;
         this.sampleGranule = granuleStack.getGranules().get(0);
@@ -159,9 +171,10 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
         if (settings != null) {
             initializeFromSettings(settings);
         }
-        this.writer = getWriter(file, outputFormat);
+        this.writerb = getWriterBuilder(file, outputFormat);
         dimensionsManager.collectCoverageDimensions(this.granuleStack);
         initializeNetCDF();
+        this.writer = writerb.build();
     }
 
     protected void initializeFromSettings(NetCDFLayerSettingsContainer settings) {
@@ -178,7 +191,7 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
     /** Basic NetCDF Initialization */
     protected void initializeNetCDF() {
         // Initialize the coordinates writer
-        crsWriter = new NetCDFCRSWriter(writer, sampleGranule);
+        crsWriter = new NetCDFCRSWriter(writerb, sampleGranule);
 
         // Initialize the Dimensions and coordinates variable
         initializeDimensions();
@@ -204,13 +217,10 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
         if (globalAttributes != null) {
             for (NetCDFSettingsContainer.GlobalAttribute att : globalAttributes) {
                 if (att.getKey().equalsIgnoreCase(NetCDFUtilities.CONVENTIONS)) {
-                    writer.addGroupAttribute(
-                            null,
-                            new Attribute(
-                                    NetCDFUtilities.COORD_SYS_BUILDER,
-                                    NetCDFUtilities.COORD_SYS_BUILDER_CONVENTION));
+                    writerb.addAttribute(new Attribute(
+                            NetCDFUtilities.COORD_SYS_BUILDER, NetCDFUtilities.COORD_SYS_BUILDER_CONVENTION));
                 }
-                writer.addGroupAttribute(null, buildAttribute(att.getKey(), att.getValue()));
+                writerb.addAttribute(buildAttribute(att.getKey(), att.getValue()));
             }
         }
     }
@@ -225,7 +235,7 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
                         // part of the blacklist?
                         String shortName = att.getShortName();
                         if (!COPY_GLOBAL_ATTRIBUTES_BLACKLIST.contains(shortName)) {
-                            writer.addGroupAttribute(null, att);
+                            writerb.addAttribute(att);
                         }
                     }
                 }
@@ -244,10 +254,7 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
             try {
                 return NetCDFUtilities.getDataset(sourceUrl);
             } catch (Exception e) {
-                LOGGER.info(
-                        String.format(
-                                "Failed to open source URL %s as NetCDF/GRIB: %s",
-                                sourceUrl, e.getMessage()));
+                LOGGER.info("Failed to open source URL %s as NetCDF/GRIB: %s".formatted(sourceUrl, e.getMessage()));
             }
         }
         return null;
@@ -257,46 +264,42 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
     protected Attribute buildAttribute(String key, String value) {
         try {
             return new Attribute(key, Integer.parseInt(value));
-        } catch (NumberFormatException e) {
-            // ignore
+        } catch (NumberFormatException ignored) {
+            // not an integer: try double next
         }
         try {
             return new Attribute(key, Double.parseDouble(value));
-        } catch (NumberFormatException e) {
-            // ignore
+        } catch (NumberFormatException ignored) {
+            // not a double: fall back to string
         }
         return new Attribute(key, value);
     }
 
-    protected NetcdfFileWriter getWriter(File file, String outputFormat) throws IOException {
+    protected NetcdfFormatWriter.Builder getWriterBuilder(File file, String outputFormat) throws IOException {
         if (NetCDFUtilities.NETCDF4_MIMETYPE.equalsIgnoreCase(outputFormat)) {
-            version = NetcdfFileWriter.Version.netcdf4_classic;
+            ncFormat = NetcdfFileFormat.NETCDF4_CLASSIC;
         } else {
             if (LOGGER.isLoggable(Level.FINE)) {
-                LOGGER.fine(
-                        "Requested output format "
-                                + outputFormat
-                                + " isn't "
-                                + NetCDFUtilities.NETCDF4_MIMETYPE
-                                + "\nFallback to Version 3");
+                LOGGER.fine("Requested output format "
+                        + outputFormat
+                        + " isn't "
+                        + NetCDFUtilities.NETCDF4_MIMETYPE
+                        + "\nFallback to Version 3");
             }
             // Version 3 as fallback (the Default)
-            version = NetcdfFileWriter.Version.netcdf3;
+            ncFormat = NetcdfFileFormat.NETCDF3;
         }
 
-        NetcdfFileWriter writer = null;
-        if (version == NetcdfFileWriter.Version.netcdf4_classic) {
+        NetcdfFormatWriter.Builder writerb = null;
+        if (ncFormat == NetcdfFileFormat.NETCDF4_CLASSIC) {
             if (!NetCDFUtilities.isNC4CAvailable()) {
                 throw new IOException(NetCDFUtilities.NC4_ERROR_MESSAGE);
             }
             Nc4Chunking chunker = new Nc4ChunkingDefault(compressionLevel, shuffle);
-            writer = NetcdfFileWriter.createNew(version, file.getAbsolutePath(), chunker);
+            writerb = NetcdfFormatWriter.createNewNetcdf4(ncFormat, file.getAbsolutePath(), chunker);
         }
 
-        return writer != null
-                ? writer
-                : NetcdfFileWriter.createNew(
-                        NetcdfFileWriter.Version.netcdf3, file.getAbsolutePath());
+        return writerb != null ? writerb : NetcdfFormatWriter.createNewNetcdf3(file.getAbsolutePath());
     }
 
     /**
@@ -319,12 +322,12 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
         }
     }
 
-    /** Parse encodingParams */
+    /** Parse encodingParams. */
+    @SuppressWarnings("PMD.MissingOverride")
     protected NetCDFLayerSettingsContainer getSettings(Map<String, String> encodingParameters) {
         Set<String> keys = encodingParameters.keySet();
-        if (keys != null
-                && !keys.isEmpty()
-                && keys.contains(WCS20GetCoverageResponse.COVERAGE_ID_PARAM)) {
+        NetCDFLayerSettingsContainer settings = null;
+        if (keys != null && !keys.isEmpty() && keys.contains(WCS20GetCoverageResponse.COVERAGE_ID_PARAM)) {
             String coverageId = encodingParameters.get(WCS20GetCoverageResponse.COVERAGE_ID_PARAM);
             if (coverageId != null) {
                 GeoServer geoserver = GeoServerExtensions.bean(GeoServer.class);
@@ -336,29 +339,87 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
                         map = info.getResource().getMetadata();
                     }
                 }
-                if (map != null
-                        && !map.isEmpty()
-                        && map.containsKey(NetCDFSettingsContainer.NETCDFOUT_KEY)) {
-                    NetCDFLayerSettingsContainer settings =
-                            map.get(
-                                    NetCDFSettingsContainer.NETCDFOUT_KEY,
-                                    NetCDFLayerSettingsContainer.class);
-                    return settings;
+                if (map != null && !map.isEmpty() && map.containsKey(NetCDFSettingsContainer.NETCDFOUT_KEY)) {
+                    settings = map.get(NetCDFSettingsContainer.NETCDFOUT_KEY, NetCDFLayerSettingsContainer.class);
                 }
             }
         }
+        if (hasEncodingParams(encodingParameters)) {
+            settings = applyEncodingOverrides(settings, encodingParameters);
+        }
 
-        return null;
+        return settings;
+    }
+
+    private boolean hasEncodingParams(Map<String, String> encodingParameters) {
+        return encodingParameters.containsKey(COMPRESSION_KEY)
+                || encodingParameters.containsKey(DATA_PACKING_KEY)
+                || encodingParameters.containsKey(SHUFFLE_KEY)
+                || encodingParameters.containsKey(VARIABLE_NAME_KEY)
+                || encodingParameters.containsKey(UOM_KEY);
+    }
+
+    private NetCDFLayerSettingsContainer applyEncodingOverrides(
+            NetCDFLayerSettingsContainer inputSettings, Map<String, String> encodingParameters) {
+        NetCDFLayerSettingsContainer settings =
+                inputSettings != null ? inputSettings.copy() : new NetCDFLayerSettingsContainer();
+
+        // Check for known keys and override accordingly
+        if (encodingParameters.containsKey(COMPRESSION_KEY)) {
+            String compressionLevel = encodingParameters.get(COMPRESSION_KEY);
+            try {
+                int cl = Integer.parseInt(compressionLevel);
+                settings.setCompressionLevel(cl);
+            } catch (NumberFormatException nfe) {
+                LOGGER.info("Specified compression level is not valid. compression = " + compressionLevel);
+            }
+        }
+        if (encodingParameters.containsKey(VARIABLE_NAME_KEY)) {
+            settings.setLayerName(encodingParameters.get(VARIABLE_NAME_KEY));
+        }
+        if (encodingParameters.containsKey(UOM_KEY)) {
+            settings.setLayerUOM(encodingParameters.get(UOM_KEY));
+        }
+        if (encodingParameters.containsKey(SHUFFLE_KEY)) {
+            String shuffle = encodingParameters.get(SHUFFLE_KEY);
+            boolean cs = Boolean.parseBoolean(shuffle);
+            settings.setShuffle(cs);
+        }
+        if (encodingParameters.containsKey(COPY_GLOBAL_ATTRIBUTES_KEY)) {
+            String copyGlobal = encodingParameters.get(COPY_GLOBAL_ATTRIBUTES_KEY);
+            boolean cpga = Boolean.parseBoolean(copyGlobal);
+            settings.setCopyGlobalAttributes(cpga);
+        }
+        if (encodingParameters.containsKey(COPY_VARIABLE_ATTRIBUTES_KEY)) {
+            String copyVariableAttributes = encodingParameters.get(COPY_VARIABLE_ATTRIBUTES_KEY);
+            boolean cpva = Boolean.parseBoolean(copyVariableAttributes);
+            settings.setCopyAttributes(cpva);
+        }
+        if (encodingParameters.containsKey(DATA_PACKING_KEY)) {
+            Optional<DataPacking> result = getDataPacking(encodingParameters.get(DATA_PACKING_KEY));
+            if (result.isPresent()) {
+                settings.setDataPacking(result.get());
+            }
+        }
+        return settings;
+    }
+
+    private static Optional<DataPacking> getDataPacking(String input) {
+        try {
+            return Optional.of(DataPacking.valueOf(input.toUpperCase()));
+        } catch (IllegalArgumentException | NullPointerException e) {
+            LOGGER.info("Specified DataPacking is not valid: " + input);
+            return Optional.empty();
+        }
     }
 
     protected int checkLevel(Integer level) {
-        if (level == null || (level < 0 || level > 9)) {
+        if (level == null || level < 0 || level > 9) {
             if (LOGGER.isLoggable(Level.WARNING)) {
-                LOGGER.warning(
-                        "NetCDF 4 compression Level not in the proper range [0, 9]: "
-                                + level
-                                + "\nProceeding with default value: "
-                                + NetCDFSettingsContainer.DEFAULT_COMPRESSION);
+                LOGGER.warning("NetCDF 4 compression Level not in the proper range [0, 9]: "
+                        + level
+                        + "\nProceeding with default value: "
+                        + NetCDFSettingsContainer.DEFAULT_COMPRESSION);
             }
             return NetCDFSettingsContainer.DEFAULT_COMPRESSION;
         }
@@ -368,19 +429,15 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
     /** Update the dimension values of a Dimension, by inspecting the coverage properties */
     protected void updateDimensionValues(GridCoverage2D coverage) {
         Map properties = coverage.getProperties();
-        for (NetCDFDimensionsManager.NetCDFDimensionMapping dimension :
-                dimensionsManager.getDimensions()) {
+        for (NetCDFDimensionsManager.NetCDFDimensionMapping dimension : dimensionsManager.getDimensions()) {
             final String dimensionName = dimension.getName();
             final Object value = properties.get(dimensionName);
             if (value == null) {
                 Set<String> dimensions = crsWriter.getCoordinatesDimensionNames();
                 // Coordinates dimensions (lon/lat) aren't taken into account
                 // for values update. Do not warn if they are missing
-                if (dimensions != null
-                        && !dimensions.contains(dimensionName)
-                        && LOGGER.isLoggable(Level.WARNING)) {
-                    LOGGER.warning(
-                            "No Dimensions available with the specified name: " + dimensionName);
+                if (dimensions != null && !dimensions.contains(dimensionName) && LOGGER.isLoggable(Level.WARNING)) {
+                    LOGGER.warning("No Dimensions available with the specified name: " + dimensionName);
                 }
             } else {
                 dimension.getDimensionValues().addValue(value);
@@ -405,50 +462,35 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
 
         // Loop over dimensions
         Dimension boundDimension = null;
-        for (NetCDFDimensionsManager.NetCDFDimensionMapping dimension :
-                dimensionsManager.getDimensions()) {
+        for (NetCDFDimensionsManager.NetCDFDimensionMapping dimension : dimensionsManager.getDimensions()) {
             final DimensionBean dim = dimension.getCoverageDimension();
             final boolean isRange = dim.isRange();
             String dimensionName = dimension.getName();
             final int dimensionLength = dimension.getDimensionValues().getSize();
-            if (dimensionName.equalsIgnoreCase("TIME")
-                    || dimensionName.equalsIgnoreCase("ELEVATION")) {
+            if (dimensionName.equalsIgnoreCase("TIME") || dimensionName.equalsIgnoreCase("ELEVATION")) {
                 // Special management for TIME and ELEVATION dimensions
                 // we will put these dimension lowercase for NetCDF names
                 dimensionName = dimensionName.toLowerCase();
             }
-            if (isRange) {
-                if (boundDimension == null) {
-                    boundDimension =
-                            writer.addDimension(null, NetCDFUtilities.BOUNDARY_DIMENSION, 2);
-                }
+            if (isRange && boundDimension == null) {
+                boundDimension = writerb.addDimension(NetCDFUtilities.BOUNDARY_DIMENSION, 2);
             }
-            final Dimension netcdfDimension =
-                    writer.addDimension(null, dimensionName, dimensionLength);
+            final Dimension netcdfDimension = writerb.addDimension(dimensionName, dimensionLength);
             dimension.setNetCDFDimension(netcdfDimension);
 
             // Assign variable to dimensions having coordinates
-            Variable var =
-                    writer.addVariable(
-                            null,
-                            dimensionName,
-                            NetCDFUtilities.getNetCDFDataType(dim.getDatatype()),
-                            dimensionName);
-            writer.addVariableAttribute(
-                    var, new Attribute(NetCDFUtilities.LONG_NAME, dimensionName));
-            writer.addVariableAttribute(
-                    var, new Attribute(NetCDFUtilities.DESCRIPTION, dimensionName));
-            // TODO: introduce some lookup table to get a description if needed
+            Variable.Builder variableBuilder = writerb.addVariable(
+                            dimensionName, NetCDFUtilities.getNetCDFDataType(dim.getDatatype()), dimensionName)
+                    .addAttribute(new Attribute(NetCDFUtilities.LONG_NAME, dimensionName))
+                    .addAttribute(new Attribute(NetCDFUtilities.DESCRIPTION, dimensionName));
 
             if (NetCDFUtilities.isATime(dim.getDatatype())) {
                 // Special management for times. We use the NetCDF convention of defining times
                 // starting from
                 // an origin. Right now we use the Linux EPOCH
-                writer.addVariableAttribute(
-                        var, new Attribute(NetCDFUtilities.UNITS, NetCDFUtilities.TIME_ORIGIN));
+                variableBuilder.addAttribute(new Attribute(NetCDFUtilities.UNITS, NetCDFUtilities.TIME_ORIGIN));
             } else {
-                writer.addVariableAttribute(
-                        var, new Attribute(NetCDFUtilities.UNITS, dim.getSymbol()));
+                variableBuilder.addAttribute(new Attribute(NetCDFUtilities.UNITS, dim.getSymbol()));
             }
 
             // Add bounds variable for ranges
@@ -457,33 +499,22 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
                 boundsDimensions.add(netcdfDimension);
                 boundsDimensions.add(boundDimension);
                 final String boundName = dimensionName + NetCDFUtilities.BOUNDS_SUFFIX;
-                writer.addVariableAttribute(var, new Attribute(NetCDFUtilities.BOUNDS, boundName));
-                writer.addVariable(
-                        null,
-                        boundName,
-                        NetCDFUtilities.getNetCDFDataType(dim.getDatatype()),
-                        boundsDimensions);
+                variableBuilder.addAttribute(new Attribute(NetCDFUtilities.BOUNDS, boundName));
+                writerb.addVariable(boundName, NetCDFUtilities.getNetCDFDataType(dim.getDatatype()), boundsDimensions);
             }
         }
     }
 
     /** Write the NetCDF file */
     @Override
-    public void write() throws IOException, ucar.ma2.InvalidRangeException {
-        // end of define mode
-        writer.create();
-
-        try { // NOPMD - writer is a field, cannot use try-with-resources
-            // Setting values
-            for (NetCDFDimensionsManager.NetCDFDimensionMapping mapper :
-                    dimensionsManager.getDimensions()) {
+    public void write() throws IOException, InvalidRangeException {
+        try (NetcdfFormatWriter formatWriter = writer) {
+            crsWriter.setWriter(formatWriter);
+            for (NetCDFDimensionsManager.NetCDFDimensionMapping mapper : dimensionsManager.getDimensions()) {
                 crsWriter.setCoordinateVariable(mapper);
             }
 
             writeDataValues();
-        } finally {
-            // Close the writer
-            writer.close();
         }
     }
 
@@ -494,8 +525,7 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
     @Override
     public void close() {
         // release resources
-        for (NetCDFDimensionsManager.NetCDFDimensionMapping mapper :
-                dimensionsManager.getDimensions()) {
+        for (NetCDFDimensionsManager.NetCDFDimensionMapping mapper : dimensionsManager.getDimensions()) {
             mapper.dispose();
         }
         dimensionsManager.dispose();
@@ -511,34 +541,35 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
     }
 
     /** Method checking if LayerName and LayerUOM are compliant */
-    protected boolean checkCompliant(Variable var) {
+    protected boolean checkCompliant(Variable.Builder var) {
         // Check in the Variable
         if (var == null) {
             // Variable is not present
             return false;
         }
 
+        AttributeContainerMutable attribContainer = var.getAttributeContainer();
         // Check the unit is defined
-        Attribute unit = var.findAttribute(NetCDFUtilities.UNITS);
+        Attribute unit = attribContainer.findAttribute(NetCDFUtilities.UNITS);
         if (unit == null) {
             // No unit defined
             return false;
         }
-        if (parserBean == null || parserBean.getParser() == null) {
+        NetCDFParserBean bean = getParserBean();
+        if (bean == null || bean.getParser() == null) {
             // Unable to check if it is cf-compliant
             return false;
         }
 
-        String variableName = var.getShortName();
+        String variableName = var.shortName;
         // Getting the parser
-        NetCDFCFParser parser = parserBean.getParser();
+        NetCDFCFParser parser = bean.getParser();
         // Checking CF convention
         boolean validName = parser.hasEntryId(variableName) || parser.hasAliasId(variableName);
         // Checking UOM
-        Entry e =
-                parser.getEntry(variableName) != null
-                        ? parser.getEntry(variableName)
-                        : parser.getEntryFromAlias(variableName);
+        Entry e = parser.getEntry(variableName) != null
+                ? parser.getEntry(variableName)
+                : parser.getEntryFromAlias(variableName);
 
         boolean validUOM = false;
         if (e != null) {
@@ -547,9 +578,7 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
             if (canonical.equalsIgnoreCase(definedUnit)) {
                 validUOM = true;
                 if (LOGGER.isLoggable(Level.FINE)) {
-                    LOGGER.fine(
-                            "Canonical unit and specified unit are equal. "
-                                    + "Proceeding with standard_name set");
+                    LOGGER.fine("Canonical unit and specified unit are equal. " + "Proceeding with standard_name set");
                 }
             } else {
                 boolean parseable = false;
@@ -560,27 +589,20 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
                         validUOM = true;
                         parseable = true;
                         if (LOGGER.isLoggable(Level.FINE)) {
-                            LOGGER.fine(
-                                    "Canonical unit and specified unit are compatible. "
-                                            + "Proceeding with standard_name set");
+                            LOGGER.fine("Canonical unit and specified unit are compatible. "
+                                    + "Proceeding with standard_name set");
                         }
                     }
-                } catch (UnitDBException
-                        | SpecificationException
-                        | PrefixDBException
-                        | UnitSystemException e1) {
+                } catch (UnitDBException | SpecificationException | PrefixDBException | UnitSystemException e1) {
                     if (LOGGER.isLoggable(Level.FINE)) {
                         LOGGER.fine(e1.getLocalizedMessage());
                     }
                 }
-                if (!parseable) {
-                    if (LOGGER.isLoggable(Level.INFO)) {
-                        LOGGER.info(
-                                "The specified unit "
-                                        + definedUnit
-                                        + " can't be converted to a "
-                                        + " UCAR unit so it doesn't allow to define a standard name");
-                    }
+                if (!parseable && LOGGER.isLoggable(Level.INFO)) {
+                    LOGGER.info("The specified unit "
+                            + definedUnit
+                            + " can't be converted to a "
+                            + " UCAR unit so it doesn't allow to define a standard name");
                 }
             }
         }
@@ -590,9 +612,8 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
     }
 
     /**
-     * Get the x, y pixel from the data iterator and assign it to the NetCDF array matrix. Also
-     * check if the read pixel is noData and apply the unitConversion (if needed) and dataPacking
-     * (if needed).
+     * Get the x, y pixel from the data iterator and assign it to the NetCDF array matrix. Also check if the read pixel
+     * is noData and apply the unitConversion (if needed) and dataPacking (if needed).
      */
     protected void setPixel(
             int x,
@@ -631,13 +652,12 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
                     sampleFloat = (float) unitConverter.convert(sampleFloat);
                 }
                 if (dataPacker != null) {
-                    sample =
-                            validSample
-                                    ? dataPacker.pack(sampleFloat)
-                                    : dataPacker.getReservedValue();
+                    sample = validSample ? dataPacker.pack(sampleFloat) : dataPacker.getReservedValue();
                     setIntegerSample(netCDFDataType, matrix, matrixIndex, sample);
                 } else {
-                    matrix.setFloat(matrixIndex, sampleFloat);
+                    // Replace any non-valid sample with the configured no-data fill — falls back to NaN when no
+                    // sentinel was resolved, so the output matches the _FillValue attribute the encoder writes.
+                    matrix.setFloat(matrixIndex, validSample ? sampleFloat : (float) resolveFloatFill(noDataValue));
                 }
                 break;
             case DOUBLE:
@@ -647,23 +667,18 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
                     sampleDouble = unitConverter.convert(sampleDouble);
                 }
                 if (dataPacker != null) {
-                    sample =
-                            validSample
-                                    ? dataPacker.pack(sampleDouble)
-                                    : dataPacker.getReservedValue();
+                    sample = validSample ? dataPacker.pack(sampleDouble) : dataPacker.getReservedValue();
                     setIntegerSample(netCDFDataType, matrix, matrixIndex, sample);
                 } else {
-                    matrix.setDouble(matrixIndex, sampleDouble);
+                    matrix.setDouble(matrixIndex, validSample ? sampleDouble : resolveFloatFill(noDataValue));
                 }
                 break;
             default:
-                throw new UnsupportedOperationException(
-                        "Operation not supported for this dataType: " + netCDFDataType);
+                throw new UnsupportedOperationException("Operation not supported for this dataType: " + netCDFDataType);
         }
     }
 
-    protected void setIntegerSample(
-            DataType netCDFDataType, Array matrix, Index matrixIndex, int sample) {
+    protected void setIntegerSample(DataType netCDFDataType, Array matrix, Index matrixIndex, int sample) {
         switch (netCDFDataType) {
             case BYTE:
                 matrix.setByte(matrixIndex, (byte) sample);
@@ -674,27 +689,52 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
             case INT:
                 matrix.setInt(matrixIndex, sample);
                 break;
+            default:
+                break;
         }
-    }
-
-    protected boolean isNaN(Number sample, double noDataValue) {
-        double sampleValue = sample.doubleValue();
-        if (Double.isNaN(noDataValue)) {
-            return Double.isNaN(sampleValue);
-        }
-        return (Math.abs(noDataValue - sample.doubleValue()) < EQUALITY_DELTA);
     }
 
     /**
-     * Setup the proper NetCDF array indexing, taking current dimension values from the current
-     * coverage
+     * Threshold for catching the IEEE float "extremes" sentinels (±Float.MAX_VALUE, ±Double.MAX_VALUE) that JAI /
+     * EclipseImagen leak through {@code BandMerge} / {@code BAND_SELECT} on float bands when the source had NaN fill
+     * cells but no explicit {@code _FillValue} attribute. Anything beyond ±1e30 is well outside the range of any
+     * real-world geophysical quantity (currents, winds, SST, …) so we treat it as no-data.
      */
+    protected static final double EXTREME_VALUE_THRESHOLD = 1e30;
+
+    /**
+     * Tell whether {@code sample} should be treated as no-data given the configured {@code noDataValue}.
+     *
+     * <p>Stateless and exposed as {@code static} so the no-data sentinel logic is independently unit-testable.
+     */
+    protected static boolean isNaN(Number sample, double noDataValue) {
+        double sampleValue = sample.doubleValue();
+        if (Double.isNaN(noDataValue)) {
+            // No explicit no-data sentinel: flag actual NaNs and the JAI float extremes as fill.
+            return Double.isNaN(sampleValue) || Math.abs(sampleValue) >= EXTREME_VALUE_THRESHOLD;
+        }
+        return Math.abs(noDataValue - sample.doubleValue()) < EQUALITY_DELTA;
+    }
+
+    /**
+     * Resolve the value used to fill no-data cells in float / double output matrices. Mirrors the precedence used for
+     * the {@code _FillValue} attribute: prefer the explicitly resolved no-data value; fall back to NaN — which matches
+     * the default {@code _FillValue} the encoder writes when no sentinel is known and is the universal marker every
+     * CF-aware reader (Panoply, xarray, OpenDrift, …) understands without further hints.
+     */
+    private static double resolveFloatFill(Double noDataValue) {
+        if (noDataValue == null || Double.isNaN(noDataValue)) {
+            return Double.NaN;
+        }
+        return noDataValue;
+    }
+
+    /** Setup the proper NetCDF array indexing, taking current dimension values from the current coverage */
     protected void updateIndexing(final int[] indexing, final GridCoverage2D currentCoverage) {
         int i = 0;
         int dimElement = 0;
         final Map properties = currentCoverage.getProperties();
-        for (NetCDFDimensionsManager.NetCDFDimensionMapping manager :
-                dimensionsManager.getDimensions()) {
+        for (NetCDFDimensionsManager.NetCDFDimensionMapping manager : dimensionsManager.getDimensions()) {
             // Loop over dimensions
             final DimensionBean coverageDimension = manager.getCoverageDimension();
             if (coverageDimension != null) { // Lat and lon doesn't have a Coverage dimension
@@ -707,10 +747,9 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
                 // which matches the coverage's one
                 // TODO: Improve this search. Make it more smart/performant
                 @SuppressWarnings("unchecked")
-                final Set<Object> values = (Set<Object>) manager.getDimensionValues().getValues();
-                final Iterator<Object> it = values.iterator();
-                while (it.hasNext()) {
-                    Object value = it.next();
+                final Set<Object> values =
+                        (Set<Object>) manager.getDimensionValues().getValues();
+                for (Object value : values) {
                     if (value.equals(val)) {
                         indexing[i++] = dimElement;
                         dimElement = 0;
@@ -733,11 +772,76 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
         // indices for which a data value as been written
         public final Set<Integer> writtenIndices = new HashSet<>();
 
-        public ExtraVariableRecord(
-                NetCDFSettingsContainer.ExtraVariable extraVariable, int dimensionIndex) {
+        public ExtraVariableRecord(NetCDFSettingsContainer.ExtraVariable extraVariable, int dimensionIndex) {
             this.extraVariable = extraVariable;
             this.dimensionIndex = dimensionIndex;
         }
+    }
+
+    @SuppressWarnings("deprecation") // getting Longname from attributes
+    protected void copyAttributes(Variable sourceVar, Variable.Builder varb, DataPacking dataPacking) {
+        AttributeContainerMutable attributesContainer = varb.getAttributeContainer();
+        for (Attribute att : sourceVar.attributes()) {
+            // do not allow overwrite or attributes in blacklist
+            if (attributesContainer.findAttribute(att.getFullName()) == null
+                    && !isBlacklistedAttribute(att, dataPacking)) {
+                varb.addAttribute(att);
+            }
+        }
+    }
+
+    protected void addExtraVariables(NetcdfDataset source) {
+        if (extraVariables != null) {
+            for (NetCDFSettingsContainer.ExtraVariable extra : extraVariables) {
+                Variable sourceVar = source.findVariable(extra.getSource());
+                if (sourceVar == null) {
+                    LOGGER.info(String.format(
+                            "Could not find extra variable source '%s' " + "in NetCDF/GRIB %s",
+                            extra.getSource(), source.getLocation()));
+                } else if (!sourceVar.getDimensionsString().isEmpty()) {
+                    LOGGER.info(String.format(
+                            "Only scalar extra variables are supported but source "
+                                    + "'%s' in NetCDF/GRIB %s has dimensions '%s'",
+                            extra.getSource(), source.getLocation(), sourceVar.getDimensionsString()));
+                } else if (variableAlreadyDefined(writerb, extra.getOutput())) {
+                    LOGGER.info("Extra variable output '%s' already exists".formatted(extra.getOutput()));
+                } else if (extra.getDimensions().split("\\s").length > 1) {
+                    LOGGER.info(String.format(
+                            "Extra variable output '%s' " + "has too many dimensions '%s'",
+                            extra.getOutput(), extra.getDimensions()));
+                } else {
+                    Variable.Builder outputVarb =
+                            writerb.addVariable(extra.getOutput(), sourceVar.getDataType(), extra.getDimensions());
+                    for (Attribute att : sourceVar.attributes()) {
+                        outputVarb.addAttribute(att);
+                    }
+                }
+            }
+        }
+    }
+
+    protected void addSettingsVariableAttributes(Variable.Builder varb) {
+        // Apply variable attributes from settings (allowing overwrite)
+        if (variableAttributes != null) {
+            AttributeContainerMutable attributes = varb.getAttributeContainer();
+            for (NetCDFSettingsContainer.VariableAttribute att : variableAttributes) {
+                attributes.removeAttribute(att.getKey());
+                varb.addAttribute(buildAttribute(att.getKey(), att.getValue()));
+            }
+        }
+    }
+
+    private boolean variableAlreadyDefined(NetcdfFormatWriter.Builder writerb, String output) {
+        Group.Builder rootGroop = writerb.getRootGroup();
+        for (Variable.Builder<?> vbuilder : rootGroop.vbuilders) {
+            if (output.equalsIgnoreCase(vbuilder.getFullName())) return true;
+        }
+        return false;
+    }
+
+    protected boolean isBlacklistedAttribute(Attribute att, DataPacking dataPacking) {
+        // Default implementation ignores dataPacking
+        return COPY_ATTRIBUTES_BLACKLIST.contains(att.getShortName());
     }
 
     /** Writes out all non scalar extra variable configured */
@@ -750,14 +854,11 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
                 if (extra.getDimensions().isEmpty()) {
                     scalarExtraVariables.add(extra);
                 } else {
-                    for (int dimensionIndex = 0;
-                            dimensionIndex < dimName.length;
-                            dimensionIndex++) {
+                    for (int dimensionIndex = 0; dimensionIndex < dimName.length; dimensionIndex++) {
                         // side effect of this condition is to skip extra variables
                         // with multiple output dimensions (unsupported)
                         if (extra.getDimensions().equals(dimName[dimensionIndex])) {
-                            nonscalarExtraVariables.add(
-                                    new ExtraVariableRecord(extra, dimensionIndex));
+                            nonscalarExtraVariables.add(new ExtraVariableRecord(extra, dimensionIndex));
                             break;
                         }
                     }
