@@ -10,6 +10,7 @@ import com.google.common.collect.Multimap;
 import com.thoughtworks.xstream.XStream;
 import com.thoughtworks.xstream.converters.ConversionException;
 import com.thoughtworks.xstream.converters.Converter;
+import com.thoughtworks.xstream.converters.ConverterLookup;
 import com.thoughtworks.xstream.converters.MarshallingContext;
 import com.thoughtworks.xstream.converters.SingleValueConverter;
 import com.thoughtworks.xstream.converters.SingleValueConverterWrapper;
@@ -91,6 +92,7 @@ import org.geoserver.catalog.MetadataMap;
 import org.geoserver.catalog.NamespaceInfo;
 import org.geoserver.catalog.PublishedInfo;
 import org.geoserver.catalog.ResourceInfo;
+import org.geoserver.catalog.ResourcePool;
 import org.geoserver.catalog.StoreInfo;
 import org.geoserver.catalog.StyleInfo;
 import org.geoserver.catalog.WMSLayerInfo;
@@ -130,28 +132,35 @@ import org.geoserver.config.ContactInfo;
 import org.geoserver.config.CoverageAccessInfo;
 import org.geoserver.config.GeoServer;
 import org.geoserver.config.GeoServerInfo;
-import org.geoserver.config.JAIEXTInfo;
-import org.geoserver.config.JAIInfo;
+import org.geoserver.config.ImageProcessingInfo;
 import org.geoserver.config.LoggingInfo;
 import org.geoserver.config.ServiceInfo;
 import org.geoserver.config.SettingsInfo;
+import org.geoserver.config.UserDetailsDisplaySettingsInfo;
 import org.geoserver.config.impl.ContactInfoImpl;
 import org.geoserver.config.impl.CoverageAccessInfoImpl;
 import org.geoserver.config.impl.GeoServerImpl;
 import org.geoserver.config.impl.GeoServerInfoImpl;
-import org.geoserver.config.impl.JAIEXTInfoImpl;
-import org.geoserver.config.impl.JAIInfoImpl;
+import org.geoserver.config.impl.ImageProcessingInfoImpl;
 import org.geoserver.config.impl.LoggingInfoImpl;
 import org.geoserver.config.impl.ServiceInfoImpl;
 import org.geoserver.config.impl.SettingsInfoImpl;
+import org.geoserver.config.impl.UserDetailsDisplaySettingsInfoImpl;
 import org.geoserver.ows.util.OwsUtils;
 import org.geoserver.platform.GeoServerExtensions;
 import org.geoserver.security.GeoServerSecurityManager;
 import org.geoserver.security.SecureCatalogImpl;
+import org.geoserver.security.urlchecks.AbstractURLCheck;
+import org.geoserver.security.urlchecks.RegexURLCheck;
+import org.geotools.api.coverage.grid.GridGeometry;
+import org.geotools.api.referencing.FactoryException;
+import org.geotools.api.referencing.crs.CoordinateReferenceSystem;
+import org.geotools.api.referencing.operation.MathTransform;
+import org.geotools.api.util.InternationalString;
 import org.geotools.coverage.grid.GeneralGridEnvelope;
 import org.geotools.coverage.grid.GridGeometry2D;
 import org.geotools.data.util.MeasureConverterFactory;
-import org.geotools.geometry.GeneralEnvelope;
+import org.geotools.geometry.GeneralBounds;
 import org.geotools.geometry.jts.Geometries;
 import org.geotools.geometry.jts.ReferencedEnvelope;
 import org.geotools.jdbc.RegexpValidator;
@@ -169,11 +178,6 @@ import org.geotools.util.GrowableInternationalString;
 import org.geotools.util.NumberRange;
 import org.geotools.util.logging.Logging;
 import org.locationtech.jts.geom.Geometry;
-import org.opengis.coverage.grid.GridGeometry;
-import org.opengis.referencing.FactoryException;
-import org.opengis.referencing.crs.CoordinateReferenceSystem;
-import org.opengis.referencing.operation.MathTransform;
-import org.opengis.util.InternationalString;
 
 /**
  * Utility class which loads and saves catalog and configuration objects to and from an xstream.
@@ -191,10 +195,12 @@ public class XStreamPersister {
         protected CatalogInfo getCatalogObject() {
             return null;
         }
+
         /** Return the ServiceInfo object being modified by the current request */
         protected ServiceInfo getServiceObject() {
             return null;
         }
+
         /** Return the class of the object being acted upon by the current request */
         protected Class<? extends Info> getObjectClass() {
             return null;
@@ -210,9 +216,7 @@ public class XStreamPersister {
                 DataStoreInfo ds, HierarchicalStreamWriter writer, MarshallingContext context) {}
 
         protected void postEncodeCoverageStore(
-                CoverageStoreInfo ds,
-                HierarchicalStreamWriter writer,
-                MarshallingContext context) {}
+                CoverageStoreInfo ds, HierarchicalStreamWriter writer, MarshallingContext context) {}
 
         protected void postEncodeFeatureType(
                 FeatureTypeInfo ds, HierarchicalStreamWriter writer, MarshallingContext context) {}
@@ -226,18 +230,13 @@ public class XStreamPersister {
         protected void postEncodeCoverage(
                 CoverageInfo ds, HierarchicalStreamWriter writer, MarshallingContext context) {}
 
-        protected void postEncodeLayer(
-                LayerInfo ls, HierarchicalStreamWriter writer, MarshallingContext context) {}
+        protected void postEncodeLayer(LayerInfo ls, HierarchicalStreamWriter writer, MarshallingContext context) {}
 
         protected void postEncodeLayerGroup(
                 LayerGroupInfo ls, HierarchicalStreamWriter writer, MarshallingContext context) {}
 
         protected void postEncodeReference(
-                Object obj,
-                String ref,
-                String prefix,
-                HierarchicalStreamWriter writer,
-                MarshallingContext context) {}
+                Object obj, String ref, String prefix, HierarchicalStreamWriter writer, MarshallingContext context) {}
 
         protected void postEncodeWMSStore(
                 WMSStoreInfo store, HierarchicalStreamWriter writer, MarshallingContext context) {}
@@ -264,10 +263,16 @@ public class XStreamPersister {
     /** Flag controlling how references to objects are encoded. */
     boolean referenceByName = false;
 
-    /** The type map used in {@link BreifMapConverter} to handle complex objects */
-    Map<String, Class<?>> forwardBreifMap = new HashMap<>();
+    /** The type map used in {@link BriefMapConverter} to handle complex objects */
+    Map<String, Class<?>> forwardBriefMap = new HashMap<>();
 
-    Map<Class<?>, String> backwardBreifMap = new HashMap<>();
+    Map<Class<?>, String> backwardBriefMap = new HashMap<>();
+
+    /**
+     * List containing classes that should be ignored by XStream. This is required because sometimes generic converter
+     * may be registered in XStream, which will be used instead of dedicated converter from GeoTools
+     */
+    List<Class<?>> backwardBriefIgnored = new ArrayList<>();
 
     private Level forceLevel = LOGGER.getLevel() == null ? Level.INFO : LOGGER.getLevel();
 
@@ -284,14 +289,7 @@ public class XStreamPersister {
 
         // control the order in which fields are sorted
         SortableFieldKeySorter sorter = new SortableFieldKeySorter();
-        // sorter.registerFieldOrder( DefaultCatalogDAO.class, new String[]{ "workspaces",
-        // "namespaces", "stores", "styles",
-        /* these we actually omit, but the sorter needs them specified */
-        //    "layerGroups", "resources", "maps", "defaultStores", "listeners", "layers",
-        // "resourcePool", "resourceLoader", "LOGGER" } );
-
-        ReflectionProvider reflectionProvider =
-                new CustomReflectionProvider(new FieldDictionary(sorter));
+        ReflectionProvider reflectionProvider = new CustomReflectionProvider(new FieldDictionary(sorter));
         // new Sun14ReflectionProvider( new FieldDictionary( sorter  ) );
         if (streamDriver != null) {
             xs = new SecureXStream(reflectionProvider, streamDriver);
@@ -304,8 +302,8 @@ public class XStreamPersister {
     }
 
     /**
-     * Sets null handling in proxy objects. Defaults to unwrap. If set to false, proxy object are
-     * not transformed to nulls.
+     * Sets null handling in proxy objects. Defaults to unwrap. If set to false, proxy object are not transformed to
+     * nulls.
      */
     public void setUnwrapNulls(boolean unwrapNulls) {
         this.unwrapNulls = unwrapNulls;
@@ -323,7 +321,8 @@ public class XStreamPersister {
         xs.alias("global", GeoServerInfo.class);
         xs.alias("settings", SettingsInfo.class);
         xs.alias("logging", LoggingInfo.class);
-        xs.alias("jai", JAIInfo.class);
+        xs.alias("jai", ImageProcessingInfo.class);
+        xs.alias("userDetailsDisplaySettings", UserDetailsDisplaySettingsInfo.class);
         xs.alias("coverageAccess", CoverageAccessInfo.class);
         xs.alias("catalog", Catalog.class);
         xs.alias("namespace", NamespaceInfo.class);
@@ -353,18 +352,19 @@ public class XStreamPersister {
         xs.aliasField("abstract", ResourceInfoImpl.class, "_abstract");
         xs.alias("AuthorityURL", AuthorityURLInfo.class);
         xs.alias("Identifier", LayerIdentifierInfo.class);
+        xs.alias("urlCheck", AbstractURLCheck.class);
+        xs.alias("regexUrlCheck", RegexURLCheck.class);
 
         // GeoServerInfo
         xs.omitField(impl(GeoServerInfo.class), "clientProperties");
         xs.omitField(impl(GeoServerInfo.class), "geoServer");
-        xs.registerLocalConverter(
-                impl(GeoServerInfo.class), "metadata", new MetadataMapConverter());
+        xs.registerLocalConverter(impl(GeoServerInfo.class), "metadata", new MetadataMapConverter());
+        xs.aliasField("jai", GeoServerInfoImpl.class, "imageProcessing");
 
         // ServiceInfo
         xs.omitField(impl(ServiceInfo.class), "clientProperties");
         xs.omitField(impl(ServiceInfo.class), "geoServer");
-        xs.registerLocalConverter(
-                impl(ServiceInfo.class), "workspace", new ReferenceConverter(WorkspaceInfo.class));
+        xs.registerLocalConverter(impl(ServiceInfo.class), "workspace", new ReferenceConverter(WorkspaceInfo.class));
         xs.registerLocalConverter(impl(ServiceInfo.class), "metadata", new MetadataMapConverter());
         xs.registerLocalConverter(impl(ServiceInfo.class), "keywords", new KeywordListConverter());
 
@@ -380,182 +380,127 @@ public class XStreamPersister {
         xs.omitField(impl(DefaultCatalogFacade.class), "maps");
         xs.omitField(impl(DefaultCatalogFacade.class), "layerGroups");
 
-        xs.registerLocalConverter(
-                DefaultCatalogFacade.class, "stores", new StoreMultiValueMapConverter());
-        xs.registerLocalConverter(
-                DefaultCatalogFacade.class, "namespaces", new SpaceMapConverter("namespace"));
-        xs.registerLocalConverter(
-                DefaultCatalogFacade.class, "workspaces", new SpaceMapConverter("workspace"));
+        xs.registerLocalConverter(DefaultCatalogFacade.class, "stores", new StoreMultiValueMapConverter());
+        xs.registerLocalConverter(DefaultCatalogFacade.class, "namespaces", new SpaceMapConverter("namespace"));
+        xs.registerLocalConverter(DefaultCatalogFacade.class, "workspaces", new SpaceMapConverter("workspace"));
 
         // WorkspaceInfo
         xs.omitField(impl(WorkspaceInfo.class), "_default");
-        xs.registerLocalConverter(
-                impl(WorkspaceInfo.class), "metadata", new MetadataMapConverter());
+        xs.registerLocalConverter(impl(WorkspaceInfo.class), "metadata", new MetadataMapConverter());
 
         // NamespaceInfo
         xs.omitField(impl(NamespaceInfo.class), "catalog");
         xs.omitField(impl(NamespaceInfo.class), "_default");
-        xs.registerLocalConverter(
-                impl(NamespaceInfo.class), "metadata", new MetadataMapConverter());
+        xs.registerLocalConverter(impl(NamespaceInfo.class), "metadata", new MetadataMapConverter());
 
         // StoreInfo
         xs.omitField(impl(StoreInfo.class), "catalog");
         xs.omitField(impl(StoreInfo.class), "error");
         // xs.omitField(StoreInfo.class), "workspace"); //handled by StoreInfoConverter
-        xs.registerLocalConverter(
-                impl(StoreInfo.class), "workspace", new ReferenceConverter(WorkspaceInfo.class));
-        xs.registerLocalConverter(
-                impl(StoreInfo.class), "connectionParameters", new BreifMapConverter());
+        xs.registerLocalConverter(impl(StoreInfo.class), "workspace", new ReferenceConverter(WorkspaceInfo.class));
+        xs.registerLocalConverter(impl(StoreInfo.class), "connectionParameters", new BriefMapConverter());
         xs.registerLocalConverter(impl(StoreInfo.class), "metadata", new MetadataMapConverter());
-        xs.registerLocalConverter(
-                impl(WMSStoreInfo.class), "password", new EncryptedFieldConverter());
-        xs.registerLocalConverter(
-                impl(WMTSStoreInfo.class), "password", new EncryptedFieldConverter());
+        xs.registerLocalConverter(impl(WMSStoreInfo.class), "password", new EncryptedFieldConverter());
+        xs.registerLocalConverter(impl(WMTSStoreInfo.class), "password", new EncryptedFieldConverter());
 
         // StyleInfo
         xs.omitField(impl(StyleInfo.class), "catalog");
-        xs.registerLocalConverter(
-                impl(StyleInfo.class), "workspace", new ReferenceConverter(WorkspaceInfo.class));
+        xs.registerLocalConverter(impl(StyleInfo.class), "workspace", new ReferenceConverter(WorkspaceInfo.class));
         xs.registerLocalConverter(impl(StyleInfo.class), "metadata", new MetadataMapConverter());
 
         // ResourceInfo
         xs.omitField(impl(ResourceInfo.class), "catalog");
         xs.omitField(impl(ResourceInfo.class), "crs");
         xs.registerLocalConverter(impl(ResourceInfo.class), "nativeCRS", new CRSConverter());
-        xs.registerLocalConverter(
-                impl(ResourceInfo.class), "store", new ReferenceConverter(StoreInfo.class));
-        xs.registerLocalConverter(
-                impl(ResourceInfo.class), "namespace", new ReferenceConverter(NamespaceInfo.class));
+        xs.registerLocalConverter(impl(ResourceInfo.class), "store", new ReferenceConverter(StoreInfo.class));
+        xs.registerLocalConverter(impl(ResourceInfo.class), "namespace", new ReferenceConverter(NamespaceInfo.class));
         xs.registerLocalConverter(impl(ResourceInfo.class), "metadata", new MetadataMapConverter());
         xs.registerLocalConverter(impl(ResourceInfo.class), "keywords", new KeywordListConverter());
 
         // FeatureTypeInfo
         PackageAliasingMapper bindingAliasingMapper =
-                new OneWayPackageAliasingMapper(
-                        new DefaultMapper(new ClassLoaderReference(xs.getClassLoader())));
+                new OneWayPackageAliasingMapper(new DefaultMapper(new ClassLoaderReference(xs.getClassLoader())));
         // For compatibility with JTS 1.15 and older bindings
-        bindingAliasingMapper.addPackageAlias(
-                "com.vividsolutions.jts.geom", "org.locationtech.jts.geom");
-
-        xs.registerLocalConverter(
-                impl(AttributeTypeInfo.class),
-                "binding",
-                (SingleValueConverter)
-                        new SingleValueConverterWrapper(
-                                new JavaClassConverter(bindingAliasingMapper) {}));
+        bindingAliasingMapper.addPackageAlias("com.vividsolutions.jts.geom", "org.locationtech.jts.geom");
 
         // CoverageInfo
         xs.registerLocalConverter(
-                impl(CoverageInfo.class),
-                "supportedFormats",
-                new LaxCollectionConverter(xs.getMapper()));
+                impl(CoverageInfo.class), "supportedFormats", new LaxCollectionConverter(xs.getMapper()));
+        xs.registerLocalConverter(impl(CoverageInfo.class), "requestSRS", new LaxCollectionConverter(xs.getMapper()));
+        xs.registerLocalConverter(impl(CoverageInfo.class), "responseSRS", new LaxCollectionConverter(xs.getMapper()));
         xs.registerLocalConverter(
-                impl(CoverageInfo.class), "requestSRS", new LaxCollectionConverter(xs.getMapper()));
+                impl(CoverageInfo.class), "interpolationMethods", new LaxCollectionConverter(xs.getMapper()));
+        xs.registerLocalConverter(impl(CoverageInfo.class), "dimensions", new LaxCollectionConverter(xs.getMapper()));
+
+        // ImageProcessingInfo
         xs.registerLocalConverter(
-                impl(CoverageInfo.class),
-                "responseSRS",
-                new LaxCollectionConverter(xs.getMapper()));
-        xs.registerLocalConverter(
-                impl(CoverageInfo.class),
-                "interpolationMethods",
-                new LaxCollectionConverter(xs.getMapper()));
-        xs.registerLocalConverter(
-                impl(CoverageInfo.class), "dimensions", new LaxCollectionConverter(xs.getMapper()));
+                impl(ImageProcessingInfo.class),
+                "pngEncoderType",
+                new EnumWithDefaultConverter(ImageProcessingInfo.PngEncoderType.JDK));
 
         // CoverageDimensionInfo
-        xs.registerLocalConverter(
-                impl(CoverageDimensionInfo.class), "range", new NumberRangeConverter());
+        xs.registerLocalConverter(impl(CoverageDimensionInfo.class), "range", new NumberRangeConverter());
 
         // AttributeTypeInfo
         xs.omitField(impl(AttributeTypeInfo.class), "featureType");
         xs.omitField(impl(AttributeTypeInfo.class), "attribute");
-        xs.registerLocalConverter(
-                impl(AttributeTypeInfo.class), "description", new InternationalStringConverter());
+        xs.registerLocalConverter(impl(AttributeTypeInfo.class), "binding", (SingleValueConverter)
+                new SingleValueConverterWrapper(new JavaClassConverter(bindingAliasingMapper) {}));
+        xs.registerLocalConverter(impl(AttributeTypeInfo.class), "description", new InternationalStringConverter());
+        xs.registerLocalConverter(impl(AttributeTypeInfo.class), "range", new NumberRangeConverter());
+        xs.registerConverter(
+                new AttributeTypeInfoConverter(xs.getMapper(), xs.getReflectionProvider(), xs.getConverterLookup()));
 
         // LayerInfo
         // xs.omitField( LayerInfo.class), "resource");
-        xs.registerLocalConverter(
-                impl(LayerInfo.class), "resource", new ReferenceConverter(ResourceInfo.class));
-        xs.registerLocalConverter(
-                impl(LayerInfo.class), "defaultStyle", new ReferenceConverter(StyleInfo.class));
-        xs.registerLocalConverter(
-                impl(LayerInfo.class), "styles", new ReferenceCollectionConverter(StyleInfo.class));
+        xs.registerLocalConverter(impl(LayerInfo.class), "resource", new ReferenceConverter(ResourceInfo.class));
+        xs.registerLocalConverter(impl(LayerInfo.class), "defaultStyle", new ReferenceConverter(StyleInfo.class));
+        xs.registerLocalConverter(impl(LayerInfo.class), "styles", new ReferenceCollectionConverter(StyleInfo.class));
         xs.registerLocalConverter(impl(LayerInfo.class), "metadata", new MetadataMapConverter());
 
+        xs.registerLocalConverter(impl(WMSLayerInfo.class), "vendorParameters", new BriefMapConverter());
+
         // LayerGroupInfo
+        xs.registerLocalConverter(impl(LayerGroupInfo.class), "workspace", new ReferenceConverter(WorkspaceInfo.class));
+        xs.registerLocalConverter(impl(LayerGroupInfo.class), "rootLayer", new ReferenceConverter(LayerInfo.class));
         xs.registerLocalConverter(
-                impl(LayerGroupInfo.class),
-                "workspace",
-                new ReferenceConverter(WorkspaceInfo.class));
+                impl(LayerGroupInfo.class), "rootLayerStyle", new ReferenceConverter(StyleInfo.class));
         xs.registerLocalConverter(
-                impl(LayerGroupInfo.class), "rootLayer", new ReferenceConverter(LayerInfo.class));
-        xs.registerLocalConverter(
-                impl(LayerGroupInfo.class),
-                "rootLayerStyle",
-                new ReferenceConverter(StyleInfo.class));
-        xs.registerLocalConverter(
-                impl(LayerGroupInfo.class),
-                "layers",
-                new ReferenceCollectionConverter(LayerInfo.class));
+                impl(LayerGroupInfo.class), "layers", new ReferenceCollectionConverter(LayerInfo.class));
         xs.registerLocalConverter(
                 impl(LayerGroupInfo.class),
                 "publishables",
-                new ReferenceCollectionConverter(
-                        PublishedInfo.class, LayerInfo.class, LayerGroupInfo.class));
+                new ReferenceCollectionConverter(PublishedInfo.class, LayerInfo.class, LayerGroupInfo.class));
         xs.registerLocalConverter(
-                impl(LayerGroupInfo.class),
-                "styles",
-                new ReferenceCollectionConverter(StyleInfo.class));
+                impl(LayerGroupInfo.class), "styles", new ReferenceCollectionConverter(StyleInfo.class));
         xs.registerLocalConverter(
-                impl(LayerGroupInfo.class),
-                "layerGroupStyles",
-                new LayerGroupStyleCollectionConverter());
+                impl(LayerGroupInfo.class), "layerGroupStyles", new LayerGroupStyleCollectionConverter());
+        xs.registerLocalConverter(impl(LayerGroupInfo.class), "metadata", new MetadataMapConverter());
+        xs.registerLocalConverter(impl(LayerGroupInfo.class), "keywords", new KeywordListConverter());
         xs.registerLocalConverter(
-                impl(LayerGroupInfo.class), "metadata", new MetadataMapConverter());
-        xs.registerLocalConverter(
-                impl(LayerGroupInfo.class), "keywords", new KeywordListConverter());
-        xs.registerLocalConverter(
-                impl(LayerGroupInfo.class),
-                "styles",
-                new ReferenceCollectionConverter(StyleInfo.class));
+                impl(LayerGroupInfo.class), "styles", new ReferenceCollectionConverter(StyleInfo.class));
 
         // ReferencedEnvelope
         xs.registerLocalConverter(ReferencedEnvelope.class, "crs", new SRSConverter());
-        xs.registerLocalConverter(GeneralEnvelope.class, "crs", new SRSConverter());
+        xs.registerLocalConverter(GeneralBounds.class, "crs", new SRSConverter());
 
+        xs.registerLocalConverter(impl(ResourceInfo.class), "internationalTitle", new InternationalStringConverter());
         xs.registerLocalConverter(
-                impl(ResourceInfo.class), "internationalTitle", new InternationalStringConverter());
-        xs.registerLocalConverter(
-                impl(ResourceInfo.class),
-                "internationalAbstract",
-                new InternationalStringConverter());
+                impl(ResourceInfo.class), "internationalAbstract", new InternationalStringConverter());
 
-        xs.registerLocalConverter(
-                impl(ServiceInfo.class), "internationalTitle", new InternationalStringConverter());
-        xs.registerLocalConverter(
-                impl(ServiceInfo.class),
-                "internationalAbstract",
-                new InternationalStringConverter());
+        xs.registerLocalConverter(impl(ServiceInfo.class), "internationalTitle", new InternationalStringConverter());
+        xs.registerLocalConverter(impl(ServiceInfo.class), "internationalAbstract", new InternationalStringConverter());
 
+        xs.registerLocalConverter(impl(LayerGroupInfo.class), "internationalTitle", new InternationalStringConverter());
         xs.registerLocalConverter(
-                impl(LayerGroupInfo.class),
-                "internationalTitle",
-                new InternationalStringConverter());
-        xs.registerLocalConverter(
-                impl(LayerGroupInfo.class),
-                "internationalAbstract",
-                new InternationalStringConverter());
+                impl(LayerGroupInfo.class), "internationalAbstract", new InternationalStringConverter());
         xs.registerLocalConverter(
                 impl(LayerGroupStyle.class),
                 "layers",
-                new ReferenceCollectionConverter(
-                        PublishedInfo.class, LayerInfo.class, LayerGroupInfo.class));
+                new ReferenceCollectionConverter(PublishedInfo.class, LayerInfo.class, LayerGroupInfo.class));
         xs.registerLocalConverter(
-                impl(LayerGroupStyle.class),
-                "styles",
-                new ReferenceCollectionConverter(StyleInfo.class));
-        xs.registerLocalConverter(
-                impl(LayerGroupStyle.class), "name", new OnlyStyleNameConverter());
+                impl(LayerGroupStyle.class), "styles", new ReferenceCollectionConverter(StyleInfo.class));
+        xs.registerLocalConverter(impl(LayerGroupStyle.class), "name", new OnlyStyleNameConverter());
         // ServiceInfo
         xs.registerConverter(new ServiceInfoConverter());
         xs.omitField(impl(ServiceInfo.class), "geoServer");
@@ -587,18 +532,18 @@ public class XStreamPersister {
         xs.registerConverter(new MeasureConverter());
         xs.registerConverter(new MultimapConverter(xs.getMapper()));
         // register Virtual structure handling
-        registerBreifMapComplexType("virtualTable", VirtualTable.class);
-        registerBreifMapComplexType("coverageView", CoverageView.class);
-        registerBreifMapComplexType("dimensionInfo", DimensionInfoImpl.class);
+        registerBriefMapComplexType("virtualTable", VirtualTable.class);
+        registerBriefMapComplexType("coverageView", CoverageView.class);
+        registerBriefMapComplexType("dimensionInfo", DimensionInfoImpl.class);
 
         callback = new Callback();
 
         // setup white list of accepted classes
         xs.allowTypeHierarchy(Info.class);
         xs.allowTypeHierarchy(Multimap.class);
-        xs.allowTypeHierarchy(JAIInfo.class);
-        xs.allowTypeHierarchy(JAIEXTInfo.class);
+        xs.allowTypeHierarchy(ImageProcessingInfo.class);
         xs.allowTypeHierarchy(CoverageAccessInfo.class);
+        xs.allowTypeHierarchy(NumberRange.class);
         xs.allowTypes(new Class[] {DynamicProxyMapper.DynamicProxy.class});
         xs.allowTypes(new String[] {"java.util.Collections$SingletonList"});
         xs.allowTypesByWildcard(new String[] {"org.geoserver.catalog.**"});
@@ -606,14 +551,29 @@ public class XStreamPersister {
     }
 
     /**
-     * Use this method to register complex types that cannot be simply represented as a string in a
-     * {@link BreifMapConverter}. The {@code typeId} will be used as a type discriminator in the
-     * brief map, as well as the element root for the complex object to be converted.
+     * Old method with typo in the name. Remains for backwards compatibility
+     *
+     * @param typeId
+     * @param clazz
      */
+    @Deprecated
     public void registerBreifMapComplexType(String typeId, Class<?> clazz) {
-        forwardBreifMap.put(typeId, clazz);
-        backwardBreifMap.put(clazz, typeId);
+        registerBriefMapComplexType(typeId, clazz);
+    }
+
+    /**
+     * Use this method to register complex types that cannot be simply represented as a string in a
+     * {@link BriefMapConverter}. The {@code typeId} will be used as a type discriminator in the brief map, as well as
+     * the element root for the complex object to be converted.
+     */
+    public void registerBriefMapComplexType(String typeId, Class<?> clazz) {
+        forwardBriefMap.put(typeId, clazz);
+        backwardBriefMap.put(clazz, typeId);
         xs.allowTypes(new Class[] {clazz});
+    }
+
+    public void addBackwardsBriefIgnored(Class<?> clazz) {
+        backwardBriefIgnored.add(clazz);
     }
 
     public XStream getXStream() {
@@ -671,8 +631,7 @@ public class XStreamPersister {
     /**
      * Sets the minimum level at which messages should be logged by the persister.
      *
-     * <p>When this level is set even messages that the underlying logger is configured to emit will
-     * be skipped.
+     * <p>When this level is set even messages that the underlying logger is configured to emit will be skipped.
      */
     public void setLoggingLevel(Level level) {
         this.forceLevel = level;
@@ -686,6 +645,7 @@ public class XStreamPersister {
             LOGGER.log(level, msg);
         }
     }
+
     /**
      * Saves an object to persistence.
      *
@@ -722,24 +682,22 @@ public class XStreamPersister {
         // call resolve() to ensure that any references created during loading
         // get resolved to actual objects, for instance for links from datastores
         // to workspaces
-        if (obj instanceof CatalogImpl) {
-            ((CatalogImpl) obj).resolve();
+        if (obj instanceof CatalogImpl impl) {
+            impl.resolve();
         }
 
         return obj;
     }
 
     /**
-     * Builds a converter that will marshal/unmarshal the target class by reference, that is, by
-     * storing the object id as opposed to fully serializing it
+     * Builds a converter that will marshal/unmarshal the target class by reference, that is, by storing the object id
+     * as opposed to fully serializing it
      */
     public ReferenceConverter buildReferenceConverter(Class<?> clazz) {
         return new ReferenceConverter(clazz);
     }
 
-    /**
-     * Same as {@link #buildReferenceConverter(Class)}, but works against a collection of objects
-     */
+    /** Same as {@link #buildReferenceConverter(Class)}, but works against a collection of objects */
     public ReferenceCollectionConverter buildReferenceCollectionConverter(Class<?> clazz) {
         return new ReferenceCollectionConverter(clazz);
     }
@@ -750,10 +708,10 @@ public class XStreamPersister {
         xs.addDefaultImplementation(GeoServerInfoImpl.class, GeoServerInfo.class);
         xs.addDefaultImplementation(SettingsInfoImpl.class, SettingsInfo.class);
         xs.addDefaultImplementation(LoggingInfoImpl.class, LoggingInfo.class);
-        xs.addDefaultImplementation(JAIInfoImpl.class, JAIInfo.class);
-        xs.addDefaultImplementation(JAIEXTInfoImpl.class, JAIEXTInfo.class);
+        xs.addDefaultImplementation(ImageProcessingInfoImpl.class, ImageProcessingInfo.class);
         xs.addDefaultImplementation(CoverageAccessInfoImpl.class, CoverageAccessInfo.class);
         xs.addDefaultImplementation(ContactInfoImpl.class, ContactInfo.class);
+        xs.addDefaultImplementation(UserDetailsDisplaySettingsInfoImpl.class, UserDetailsDisplaySettingsInfo.class);
         xs.addDefaultImplementation(AttributionInfoImpl.class, AttributionInfo.class);
 
         // catalog
@@ -813,7 +771,7 @@ public class XStreamPersister {
     }
 
     /** Custom reflection provider which unwraps proxies, and skips empty collections and maps. */
-    class CustomReflectionProvider extends SunUnsafeReflectionProvider {
+    static class CustomReflectionProvider extends SunUnsafeReflectionProvider {
 
         public CustomReflectionProvider(FieldDictionary fd) {
             super(fd);
@@ -824,7 +782,7 @@ public class XStreamPersister {
             super.visitSerializableFields(object, new VisitorWrapper(visitor));
         }
 
-        class VisitorWrapper implements ReflectionProvider.Visitor {
+        static class VisitorWrapper implements ReflectionProvider.Visitor {
 
             Visitor wrapped;
 
@@ -836,10 +794,10 @@ public class XStreamPersister {
             public void visit(String name, Class type, Class definedIn, Object value) {
 
                 // skip empty collections + maps
-                if (value instanceof Collection && ((Collection) value).isEmpty()) {
+                if (value instanceof Collection collection && collection.isEmpty()) {
                     return;
                 }
-                if (value instanceof Map && ((Map) value).isEmpty()) {
+                if (value instanceof Map map && map.isEmpty()) {
                     return;
                 }
 
@@ -855,12 +813,12 @@ public class XStreamPersister {
     //
 
     // simple object converters
-    /** Map converter which encodes a map more breifly than the standard map converter. */
-    public class BreifMapConverter extends MapConverter {
+    /** Map converter which encodes a map more briefly than the standard map converter. */
+    public class BriefMapConverter extends MapConverter {
 
         static final String ENCRYPTED_FIELDS_KEY = "org.geoserver.config.encryptedFields";
 
-        public BreifMapConverter() {
+        public BriefMapConverter() {
             super(getXStream().getMapper());
         }
 
@@ -871,8 +829,7 @@ public class XStreamPersister {
         }
 
         @Override
-        public void marshal(
-                Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
+        public void marshal(Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
 
             @SuppressWarnings("unchecked")
             Set<String> encryptionFields = (Set<String>) context.get(ENCRYPTED_FIELDS_KEY);
@@ -916,8 +873,7 @@ public class XStreamPersister {
 
         @Override
         @SuppressWarnings("unchecked")
-        protected void populateMap(
-                HierarchicalStreamReader reader, UnmarshallingContext context, Map map) {
+        protected void populateMap(HierarchicalStreamReader reader, UnmarshallingContext context, Map map) {
 
             while (reader.hasMoreChildren()) {
                 reader.moveDown();
@@ -981,42 +937,43 @@ public class XStreamPersister {
         }
 
         @Override
-        protected Object readBareItem(
-                HierarchicalStreamReader reader, UnmarshallingContext context, Object current) {
+        protected Object readBareItem(HierarchicalStreamReader reader, UnmarshallingContext context, Object current) {
             return reader.getValue();
         }
 
         private Class<?> getComplexTypeClass(String typeId) {
-            return forwardBreifMap.get(typeId);
+            return forwardBriefMap.get(typeId);
         }
 
         protected String getComplexTypeId(Class<?> clazz) {
-            String typeId = backwardBreifMap.get(clazz);
+            if (backwardBriefIgnored.contains(clazz)) {
+                return null;
+            }
+            String typeId = backwardBriefMap.get(clazz);
             if (typeId == null) {
                 List<Class<?>> matches = new ArrayList<>();
                 collectSuperclasses(clazz, matches);
                 for (Iterator<Class<?>> it = matches.iterator(); it.hasNext(); ) {
-                    Class<?> sper = (Class<?>) it.next();
-                    if (backwardBreifMap.get(sper) == null) {
+                    Class<?> sper = it.next();
+                    if (backwardBriefMap.get(sper) == null) {
                         it.remove();
                     }
                 }
 
                 if (matches.size() > 1) {
-                    Comparator<Class<?>> comparator =
-                            (c1, c2) -> {
-                                if (c2.isAssignableFrom(c1)) {
-                                    return -1;
-                                } else {
-                                    return 1;
-                                }
-                            };
+                    Comparator<Class<?>> comparator = (c1, c2) -> {
+                        if (c2.isAssignableFrom(c1)) {
+                            return -1;
+                        } else {
+                            return 1;
+                        }
+                    };
 
                     Collections.sort(matches, comparator);
                 }
 
                 if (!matches.isEmpty()) {
-                    typeId = backwardBreifMap.get(matches.get(0));
+                    typeId = backwardBriefMap.get(matches.get(0));
                 }
             }
 
@@ -1038,7 +995,7 @@ public class XStreamPersister {
         }
     }
 
-    class SettingsTolerantMapConverter extends MapConverter {
+    static class SettingsTolerantMapConverter extends MapConverter {
 
         public SettingsTolerantMapConverter(Mapper mapper) {
             super(mapper);
@@ -1068,8 +1025,7 @@ public class XStreamPersister {
         }
 
         @Override
-        public void marshal(
-                Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
+        public void marshal(Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
             writer.startNode("map");
             super.marshal(source, writer, context);
             writer.endNode();
@@ -1078,10 +1034,7 @@ public class XStreamPersister {
         @Override
         @SuppressWarnings("unchecked")
         protected void putCurrentEntryIntoMap(
-                HierarchicalStreamReader reader,
-                UnmarshallingContext context,
-                Map map,
-                Map target) {
+                HierarchicalStreamReader reader, UnmarshallingContext context, Map map, Map target) {
             Object key;
             Object value;
             try {
@@ -1107,7 +1060,7 @@ public class XStreamPersister {
     }
 
     /** Custom converter for the special metadata map. */
-    class MetadataMapConverter extends BreifMapConverter {
+    class MetadataMapConverter extends BriefMapConverter {
 
         @Override
         public boolean canConvert(Class type) {
@@ -1115,10 +1068,8 @@ public class XStreamPersister {
         }
 
         @Override
-        public void marshal(
-                Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
-            if (source instanceof MetadataMap) {
-                MetadataMap mdmap = (MetadataMap) source;
+        public void marshal(Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
+            if (source instanceof MetadataMap mdmap) {
                 source = mdmap.getMap();
             }
 
@@ -1150,10 +1101,9 @@ public class XStreamPersister {
 
         @Override
         @SuppressWarnings("unchecked")
-        public void marshal(
-                Object value, HierarchicalStreamWriter writer, MarshallingContext context) {
+        public void marshal(Object value, HierarchicalStreamWriter writer, MarshallingContext context) {
             Multimap map = (Multimap) value;
-            // similar to BreifMapConverter, but handling the multimap nature of this thing
+            // similar to BriefMapConverter, but handling the multimap nature of this thing
             for (Object key : map.keySet()) {
                 for (Object v : map.get(key)) {
                     if (v != null) {
@@ -1205,8 +1155,7 @@ public class XStreamPersister {
         }
 
         @Override
-        public void marshal(
-                Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
+        public void marshal(Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
             // could be a proxy, unwrap it
             source = CatalogImpl.unwrap(source);
 
@@ -1236,8 +1185,7 @@ public class XStreamPersister {
                     prefixedName = (String) OwsUtils.get(source, "prefixedName");
                     if (prefixedName != null && prefixedName.indexOf(":") > 0) {
                         WorkspaceInfo ws =
-                                catalog.getWorkspaceByName(
-                                        prefixedName.substring(0, prefixedName.indexOf(":")));
+                                catalog.getWorkspaceByName(prefixedName.substring(0, prefixedName.indexOf(":")));
                         if (ws != null) {
                             wsName = prefixedName.substring(0, prefixedName.indexOf(":"));
                         }
@@ -1255,8 +1203,7 @@ public class XStreamPersister {
 
                     callback.postEncodeReference(source, name, wsName, writer, context);
                 } else {
-                    throw new IllegalArgumentException(
-                            "Unable to marshal reference with no id or name.");
+                    throw new IllegalArgumentException("Unable to marshal reference with no id or name.");
                 }
             }
         }
@@ -1280,9 +1227,7 @@ public class XStreamPersister {
                             // specified as <workspace>[name]</workspace>
                             pre = reader.getValue();
                         }
-                    } else if ("name".equals(nodeName)
-                            || "id".equals(nodeName)
-                            || "prefix".equals(nodeName)) {
+                    } else if ("name".equals(nodeName) || "id".equals(nodeName) || "prefix".equals(nodeName)) {
                         ref = reader.getValue();
                     }
 
@@ -1322,10 +1267,8 @@ public class XStreamPersister {
         }
 
         @Override
-        protected void writeCompleteItem(
-                Object item, MarshallingContext context, HierarchicalStreamWriter writer) {
-            ClassAliasingMapper cam =
-                    (ClassAliasingMapper) mapper().lookupMapperOfType(ClassAliasingMapper.class);
+        protected void writeCompleteItem(Object item, MarshallingContext context, HierarchicalStreamWriter writer) {
+            ClassAliasingMapper cam = (ClassAliasingMapper) mapper().lookupMapperOfType(ClassAliasingMapper.class);
 
             String elementName = cam.serializedClass(clazz);
             if (elementName == null) {
@@ -1343,10 +1286,7 @@ public class XStreamPersister {
                     }
                     if (theClass == null) {
                         throw new ConversionException(
-                                "Unexpected item "
-                                        + item
-                                        + " whose type is not among: "
-                                        + Arrays.toString(subclasses));
+                                "Unexpected item " + item + " whose type is not among: " + Arrays.toString(subclasses));
                     }
                     String typeName = cam.serializedClass(theClass);
                     writer.addAttribute("type", typeName);
@@ -1364,22 +1304,19 @@ public class XStreamPersister {
                     Field nodesField = MappedXMLStreamWriter.class.getDeclaredField("nodes");
                     outField.setAccessible(true);
                     nodesField.setAccessible(true);
-                    FastStack nodes =
-                            (FastStack) nodesField.get(outField.get(writer.underlyingWriter()));
+                    FastStack nodes = (FastStack) nodesField.get(outField.get(writer.underlyingWriter()));
                     if (nodes.peek() instanceof JSONArray) {
                         nodes.pop();
                     }
                 } catch (IllegalAccessException | NoSuchFieldException e) {
-                    LOGGER.log(
-                            Level.WARNING, "Unexpected reflection error serializing json array", e);
+                    LOGGER.log(Level.WARNING, "Unexpected reflection error serializing json array", e);
                 }
             }
             writer.endNode();
         }
 
         @Override
-        protected Object readBareItem(
-                HierarchicalStreamReader reader, UnmarshallingContext context, Object current) {
+        protected Object readBareItem(HierarchicalStreamReader reader, UnmarshallingContext context, Object current) {
             Class<?> theClass = clazz;
             if (subclasses != null) {
                 String attribute = reader.getAttribute("type");
@@ -1390,16 +1327,16 @@ public class XStreamPersister {
             return context.convertAnother(current, theClass, new ReferenceConverter(theClass));
         }
     }
+
     /** Converter which unwraps proxies in a collection. */
-    class ProxyCollectionConverter extends CollectionConverter {
+    static class ProxyCollectionConverter extends CollectionConverter {
 
         public ProxyCollectionConverter(Mapper mapper) {
             super(mapper);
         }
 
         @Override
-        protected void writeCompleteItem(
-                Object item, MarshallingContext context, HierarchicalStreamWriter writer) {
+        protected void writeCompleteItem(Object item, MarshallingContext context, HierarchicalStreamWriter writer) {
 
             super.writeCompleteItem(unwrapProxies(item), context, writer);
         }
@@ -1417,13 +1354,10 @@ public class XStreamPersister {
         public String toString(Object obj) {
             CoordinateReferenceSystem crs = (CoordinateReferenceSystem) obj;
             try {
-                Integer epsg = CRS.lookupEpsgCode(crs, false);
-                if (epsg != null) {
-                    return "EPSG:" + epsg;
-                }
+                String identifier = ResourcePool.lookupIdentifier(crs, false);
+                if (identifier != null) return identifier;
             } catch (FactoryException e) {
-                XStreamPersister.LOGGER.warning(
-                        "Could not determine epsg code of crs, encoding as WKT");
+                XStreamPersister.LOGGER.warning("Could not determine epsg code of crs, encoding as WKT");
             }
 
             return new CRSConverter().toString(crs);
@@ -1431,19 +1365,20 @@ public class XStreamPersister {
 
         @Override
         public Object fromString(String str) {
-            if (str.toUpperCase().startsWith("EPSG:")) {
-                try {
-                    return CRS.decode(str);
-                } catch (Exception e) {
-                    XStreamPersister.LOGGER.log(Level.WARNING, "Error decode epsg code: " + str, e);
-                }
-            } else {
-                try {
-                    return CRS.parseWKT(str);
-                } catch (FactoryException e) {
-                    XStreamPersister.LOGGER.log(Level.WARNING, "Error decode wkt: " + str, e);
-                }
+            // try as a valid code
+            try {
+                return CRS.decode(str);
+            } catch (Exception e) {
+                // ignore
             }
+
+            // if none was supported, try with WKT
+            try {
+                return CRS.parseWKT(str);
+            } catch (FactoryException e) {
+                XStreamPersister.LOGGER.log(Level.WARNING, "Error decode wkt: " + str, e);
+            }
+
             return null;
         }
     }
@@ -1483,8 +1418,7 @@ public class XStreamPersister {
         }
 
         @Override
-        protected void doMarshal(
-                Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
+        protected void doMarshal(Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
 
             GridGeometry2D g = (GridGeometry2D) source;
             MathTransform tx = g.getGridToCRS();
@@ -1511,8 +1445,7 @@ public class XStreamPersister {
             writer.endNode();
 
             // transform
-            if (tx instanceof AffineTransform) {
-                AffineTransform atx = (AffineTransform) tx;
+            if (tx instanceof AffineTransform atx) {
 
                 writer.startNode("transform");
                 writer.startNode("scaleX");
@@ -1539,8 +1472,7 @@ public class XStreamPersister {
             // crs
             writer.startNode("crs");
             context.convertAnother(
-                    g.getCoordinateReferenceSystem(),
-                    new SingleValueConverterWrapper(new SRSConverter()));
+                    g.getCoordinateReferenceSystem(), new SingleValueConverterWrapper(new SRSConverter()));
             writer.endNode();
         }
 
@@ -1567,12 +1499,8 @@ public class XStreamPersister {
                     gridRange = new GeneralGridEnvelope(low, high);
                 }
                 if ("crs".equals(reader.getNodeName())) {
-                    crs =
-                            (CoordinateReferenceSystem)
-                                    context.convertAnother(
-                                            null,
-                                            CoordinateReferenceSystem.class,
-                                            new SingleValueConverterWrapper(new SRSConverter()));
+                    crs = (CoordinateReferenceSystem) context.convertAnother(
+                            null, CoordinateReferenceSystem.class, new SingleValueConverterWrapper(new SRSConverter()));
                 } else if ("transform".equals(reader.getNodeName())) {
                     double sx = 1.0, sy = 1.0, shx = 0.0, shy = 0.0, tx = 0.0, ty = 0.0;
                     while (reader.hasMoreChildren()) {
@@ -1620,8 +1548,7 @@ public class XStreamPersister {
         }
 
         @Override
-        public void marshal(
-                Object original, HierarchicalStreamWriter writer, MarshallingContext context) {
+        public void marshal(Object original, HierarchicalStreamWriter writer, MarshallingContext context) {
             NumberRange range = (NumberRange) original;
 
             writer.startNode("min");
@@ -1688,44 +1615,35 @@ public class XStreamPersister {
         }
 
         @Override
-        protected void doMarshal(
-                Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
+        protected void doMarshal(Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
             super.doMarshal(source, writer, context);
             postDoMarshal(source, writer, context);
         }
 
-        protected void postDoMarshal(
-                Object source, HierarchicalStreamWriter writer, MarshallingContext context) {}
+        protected void postDoMarshal(Object source, HierarchicalStreamWriter writer, MarshallingContext context) {}
     }
 
     /** Converter for workspaces and namespaces. */
     public class SpaceInfoConverter extends AbstractReflectionConverter {
         @Override
         public boolean canConvert(Class type) {
-            return WorkspaceInfo.class.isAssignableFrom(type)
-                    || NamespaceInfo.class.isAssignableFrom(type);
+            return WorkspaceInfo.class.isAssignableFrom(type) || NamespaceInfo.class.isAssignableFrom(type);
         }
 
         @Override
-        protected void postDoMarshal(
-                Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
-            if (source instanceof WorkspaceInfo) {
-                callback.postEncodeWorkspace((WorkspaceInfo) source, writer, context);
+        protected void postDoMarshal(Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
+            if (source instanceof WorkspaceInfo info) {
+                callback.postEncodeWorkspace(info, writer, context);
             } else {
                 callback.postEncodeNamespace((NamespaceInfo) source, writer, context);
             }
         }
     }
+
     /**
      * Converter for all {@link CatalogInfo} resources. Obtains the appropriate catalog object in
-     * {@link #instantiateNewInstance(HierarchicalStreamReader, UnmarshallingContext)} prior to
-     * reading in the XStream request, so that primitive objects are appropriately initialized.
-     *
-     * <p>Supported implementations of {@link AbstractCatalogResource} must implement {@link
-     * XStreamPersister.Callback.getCatalogObject()} and {@link
-     * XStreamPersister.Callback.getObjectClass()} when providing an instance of {@link
-     * XStreamPersister.Callback} to {@link XStreamPersister} in {@link
-     * AbstractCatalogResource.configurePersister(XStreamPersister, DataFormat)}
+     * {@link #instantiateNewInstance(HierarchicalStreamReader, UnmarshallingContext)} prior to reading in the XStream
+     * request, so that primitive objects are appropriately initialized.
      */
     protected class AbstractCatalogInfoConverter extends AbstractReflectionConverter {
         public AbstractCatalogInfoConverter(Class<?> clazz) {
@@ -1738,8 +1656,7 @@ public class XStreamPersister {
         }
 
         @Override
-        protected Object instantiateNewInstance(
-                HierarchicalStreamReader reader, UnmarshallingContext context) {
+        protected Object instantiateNewInstance(HierarchicalStreamReader reader, UnmarshallingContext context) {
             Object emptyObject = super.instantiateNewInstance(reader, context);
             // Acquire the current CatalogInfo being acted upon object before unmarshaling the
             // Xstream
@@ -1755,6 +1672,7 @@ public class XStreamPersister {
             return emptyObject;
         }
     }
+
     /** Converter for {@link DataStoreInfo}, {@link CoverageStoreInfo}, and {@link WMSStoreInfo} */
     public class StoreInfoConverter extends AbstractCatalogInfoConverter {
 
@@ -1763,49 +1681,43 @@ public class XStreamPersister {
         }
 
         @Override
-        protected void doMarshal(
-                Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
+        protected void doMarshal(Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
             GeoServerSecurityManager secMgr = encryptPasswordFields ? getSecurityManager() : null;
             if (secMgr != null && secMgr.isInitialized()) {
                 // set the hint for the map converter as to which fields to encode in the connection
                 // parameter of this store
                 context.put(
-                        BreifMapConverter.ENCRYPTED_FIELDS_KEY,
-                        secMgr.getConfigPasswordEncryptionHelper()
-                                .getEncryptedFields((StoreInfo) source));
+                        BriefMapConverter.ENCRYPTED_FIELDS_KEY,
+                        secMgr.getConfigPasswordEncryptionHelper().getEncryptedFields((StoreInfo) source));
             }
 
             super.doMarshal(source, writer, context);
         }
 
         @Override
-        protected void postDoMarshal(
-                Object result, HierarchicalStreamWriter writer, MarshallingContext context) {
+        protected void postDoMarshal(Object result, HierarchicalStreamWriter writer, MarshallingContext context) {
 
             StoreInfo store = (StoreInfo) result;
-            if (store instanceof DataStoreInfo) {
-                callback.postEncodeDataStore((DataStoreInfo) store, writer, context);
-            } else if (store instanceof CoverageStoreInfo) {
-                callback.postEncodeCoverageStore((CoverageStoreInfo) store, writer, context);
-            } else if (store instanceof WMSStoreInfo) {
-                callback.postEncodeWMSStore((WMSStoreInfo) store, writer, context);
-            } else if (store instanceof WMTSStoreInfo) {
-                callback.postEncodeWMTSStore((WMTSStoreInfo) store, writer, context);
+            if (store instanceof DataStoreInfo ds) {
+                callback.postEncodeDataStore(ds, writer, context);
+            } else if (store instanceof CoverageStoreInfo cv) {
+                callback.postEncodeCoverageStore(cv, writer, context);
+            } else if (store instanceof WMSStoreInfo wms) {
+                callback.postEncodeWMSStore(wms, writer, context);
+            } else if (store instanceof WMTSStoreInfo wmts) {
+                callback.postEncodeWMTSStore(wmts, writer, context);
             } else {
-                throw new IllegalArgumentException(
-                        "Unknown store type: "
-                                + (store == null ? "null" : store.getClass().getName()));
+                throw new IllegalArgumentException("Unknown store type: "
+                        + (store == null ? "null" : store.getClass().getName()));
             }
         }
 
         @Override
-        public Object doUnmarshal(
-                Object result, HierarchicalStreamReader reader, UnmarshallingContext context) {
+        public Object doUnmarshal(Object result, HierarchicalStreamReader reader, UnmarshallingContext context) {
             StoreInfo store = (StoreInfo) super.doUnmarshal(result, reader, context);
 
             // 2.1.3+ backwards compatibility check
-            if (store instanceof WMSStoreInfo) {
-                WMSStoreInfo wmsStore = (WMSStoreInfo) store;
+            if (store instanceof WMSStoreInfo wmsStore) {
                 MetadataMap metadata = wmsStore.getMetadata();
                 Integer maxConnections = null;
                 Integer connectTimeout = null;
@@ -1836,8 +1748,7 @@ public class XStreamPersister {
                                     ? readTimeout
                                     : WMSStoreInfoImpl.DEFAULT_READ_TIMEOUT);
                 }
-            } else if (store instanceof WMTSStoreInfo) {
-                WMTSStoreInfo wmtsStore = (WMTSStoreInfo) store;
+            } else if (store instanceof WMTSStoreInfo wmtsStore) {
                 MetadataMap metadata = wmtsStore.getMetadata();
                 Integer maxConnections = null;
                 Integer connectTimeout = null;
@@ -1888,8 +1799,7 @@ public class XStreamPersister {
         }
 
         @Override
-        public void marshal(
-                Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
+        public void marshal(Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
             MultiValuedMap map = (MultiValuedMap) source;
             for (Object v : map.values()) {
                 if (v instanceof DataStoreInfo) {
@@ -1942,8 +1852,7 @@ public class XStreamPersister {
         }
 
         @Override
-        public void marshal(
-                Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
+        public void marshal(Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
 
             Map map = (Map) source;
 
@@ -1972,18 +1881,14 @@ public class XStreamPersister {
                 boolean def = "true".equals(reader.getAttribute("default"));
 
                 if ("namespace".equals(name)) {
-                    NamespaceInfoImpl ns =
-                            (NamespaceInfoImpl)
-                                    context.convertAnother(map, NamespaceInfoImpl.class);
+                    NamespaceInfoImpl ns = (NamespaceInfoImpl) context.convertAnother(map, NamespaceInfoImpl.class);
                     map.put(ns.getPrefix(), ns);
                     if (def) {
                         map.put(null, ns);
                     }
                     log(Level.INFO, "Loading namespace '" + ns.getPrefix() + "'");
                 } else {
-                    WorkspaceInfoImpl ws =
-                            (WorkspaceInfoImpl)
-                                    context.convertAnother(map, WorkspaceInfoImpl.class);
+                    WorkspaceInfoImpl ws = (WorkspaceInfoImpl) context.convertAnother(map, WorkspaceInfoImpl.class);
                     map.put(ws.getName(), ws);
                     if (def) {
                         map.put(null, ws);
@@ -2011,8 +1916,7 @@ public class XStreamPersister {
         }
 
         @Override
-        public Object doUnmarshal(
-                Object result, HierarchicalStreamReader reader, UnmarshallingContext context) {
+        public Object doUnmarshal(Object result, HierarchicalStreamReader reader, UnmarshallingContext context) {
             ResourceInfo obj = (ResourceInfo) super.doUnmarshal(result, reader, context);
             return obj;
         }
@@ -2026,8 +1930,7 @@ public class XStreamPersister {
         }
 
         @Override
-        protected void postDoMarshal(
-                Object result, HierarchicalStreamWriter writer, MarshallingContext context) {
+        protected void postDoMarshal(Object result, HierarchicalStreamWriter writer, MarshallingContext context) {
             FeatureTypeInfoImpl featureType = (FeatureTypeInfoImpl) result;
 
             // ensure null list does not result
@@ -2052,8 +1955,7 @@ public class XStreamPersister {
         }
 
         @Override
-        protected void postDoMarshal(
-                Object result, HierarchicalStreamWriter writer, MarshallingContext context) {
+        protected void postDoMarshal(Object result, HierarchicalStreamWriter writer, MarshallingContext context) {
             callback.postEncodeCoverage((CoverageInfo) result, writer, context);
         }
     }
@@ -2066,8 +1968,7 @@ public class XStreamPersister {
         }
 
         @Override
-        protected void doMarshal(
-                Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
+        protected void doMarshal(Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
             // write out the name, which is a derived property now
             // TODO: remove this when resource/publishing split is done
             LayerInfo l = (LayerInfo) source;
@@ -2099,8 +2000,7 @@ public class XStreamPersister {
         }
 
         @Override
-        protected void postDoMarshal(
-                Object result, HierarchicalStreamWriter writer, MarshallingContext context) {
+        protected void postDoMarshal(Object result, HierarchicalStreamWriter writer, MarshallingContext context) {
             /*
             LayerInfo l = (LayerInfo) result;
             writer.startNode("resource");
@@ -2111,8 +2011,7 @@ public class XStreamPersister {
         }
 
         @Override
-        public Object doUnmarshal(
-                Object result, HierarchicalStreamReader reader, UnmarshallingContext context) {
+        public Object doUnmarshal(Object result, HierarchicalStreamReader reader, UnmarshallingContext context) {
 
             LayerInfoImpl li = (LayerInfoImpl) super.doUnmarshal(result, reader, context);
             MetadataMap metadata = li.getMetadata();
@@ -2148,17 +2047,14 @@ public class XStreamPersister {
         }
 
         @Override
-        protected void postDoMarshal(
-                Object result, HierarchicalStreamWriter writer, MarshallingContext context) {
+        protected void postDoMarshal(Object result, HierarchicalStreamWriter writer, MarshallingContext context) {
             callback.postEncodeLayerGroup((LayerGroupInfo) result, writer, context);
         }
 
         @Override
-        public Object doUnmarshal(
-                Object result, HierarchicalStreamReader reader, UnmarshallingContext context) {
+        public Object doUnmarshal(Object result, HierarchicalStreamReader reader, UnmarshallingContext context) {
 
-            LayerGroupInfoImpl lgi =
-                    (LayerGroupInfoImpl) super.doUnmarshal(result, reader, context);
+            LayerGroupInfoImpl lgi = (LayerGroupInfoImpl) super.doUnmarshal(result, reader, context);
 
             if (lgi.getMode() == null) {
                 lgi.setMode(Mode.SINGLE);
@@ -2170,9 +2066,7 @@ public class XStreamPersister {
 
             MetadataMap metadata = lgi.getMetadata();
 
-            /**
-             * If we're upgrading from a 2.2.x server we have to read property 'title' from metadata
-             */
+            /** If we're upgrading from a 2.2.x server we have to read property 'title' from metadata */
             if (lgi.getTitle() == null && metadata != null) {
                 String title = metadata.get("title", String.class);
                 if (title != null) {
@@ -2181,10 +2075,7 @@ public class XStreamPersister {
                 }
             }
 
-            /**
-             * If we're upgrading from a 2.2.x server we have to read property 'abstract' from
-             * metadata
-             */
+            /** If we're upgrading from a 2.2.x server we have to read property 'abstract' from metadata */
             if (lgi.getAbstract() == null && metadata != null) {
                 String abstractTxt = metadata.get("abstract", String.class);
                 if (abstractTxt != null) {
@@ -2230,13 +2121,11 @@ public class XStreamPersister {
             }
         }
 
-        private void resolveLayerGroupStyleName(
-                List<PublishedInfo> assignedInfos, List<StyleInfo> styles) {
+        private void resolveLayerGroupStyleName(List<PublishedInfo> assignedInfos, List<StyleInfo> styles) {
             if (assignedInfos != null) {
                 for (int i = 0; i < assignedInfos.size(); i++) {
                     PublishedInfo publishedInfo = assignedInfos.get(i);
-                    if (publishedInfo instanceof LayerGroupInfo
-                            && CollectionUtils.isNotEmpty(styles)) {
+                    if (publishedInfo instanceof LayerGroupInfo && CollectionUtils.isNotEmpty(styles)) {
                         // if the styles is not null then this is
                         // a StyleInfo simply holding the style name
                         // of a LayerGroupStyle. We do not resolve it
@@ -2255,8 +2144,7 @@ public class XStreamPersister {
         }
 
         @Override
-        protected void doMarshal(
-                Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
+        protected void doMarshal(Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
 
             //            LayerGroupInfo l = (LayerGroupInfo) source;
             //
@@ -2282,11 +2170,10 @@ public class XStreamPersister {
         }
     }
 
-    class VirtualTableConverter implements Converter {
+    static class VirtualTableConverter implements Converter {
 
         @Override
-        public void marshal(
-                Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
+        public void marshal(Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
             VirtualTable vt = (VirtualTable) source;
             writer.startNode("name");
             writer.setValue(vt.getName());
@@ -2311,7 +2198,8 @@ public class XStreamPersister {
                     writer.setValue(geom);
                     writer.endNode();
                     writer.startNode("type");
-                    writer.setValue(Geometries.getForBinding(vt.getGeometryType(geom)).getName());
+                    writer.setValue(
+                            Geometries.getForBinding(vt.getGeometryType(geom)).getName());
                     writer.endNode();
                     writer.startNode("srid");
                     writer.setValue(String.valueOf(vt.getNativeSrid(geom)));
@@ -2319,7 +2207,7 @@ public class XStreamPersister {
                     writer.endNode();
                 }
             }
-            if (vt.getParameterNames().size() > 0) {
+            if (!vt.getParameterNames().isEmpty()) {
                 for (String name : vt.getParameterNames()) {
                     VirtualTableParameter param = vt.getParameter(name);
                     writer.startNode("parameter");
@@ -2334,16 +2222,14 @@ public class XStreamPersister {
                     if (param.getValidator() != null) {
                         if (param.getValidator() instanceof RegexpValidator) {
                             writer.startNode("regexpValidator");
-                            writer.setValue(
-                                    ((RegexpValidator) param.getValidator())
-                                            .getPattern()
-                                            .pattern());
+                            writer.setValue(((RegexpValidator) param.getValidator())
+                                    .getPattern()
+                                    .pattern());
                             writer.endNode();
                         } else {
-                            throw new RuntimeException(
-                                    "Cannot handle this type of validator,"
-                                            + " please extend the VirtualTableConverter "
-                                            + param.getValidator().getClass());
+                            throw new RuntimeException("Cannot handle this type of validator,"
+                                    + " please extend the VirtualTableConverter "
+                                    + param.getValidator().getClass());
                         }
                     }
                     writer.endNode();
@@ -2400,8 +2286,7 @@ public class XStreamPersister {
                         reader.moveUp();
                     }
                     if (pname == null) {
-                        throw new IllegalArgumentException(
-                                "Expect name but could not find it in property tag");
+                        throw new IllegalArgumentException("Expect name but could not find it in property tag");
                     }
                     params.add(new VirtualTableParameter(pname, defaultValue, validator));
                 } else if (reader.getNodeName().equals("escapeSql")) {
@@ -2443,8 +2328,7 @@ public class XStreamPersister {
     static class KeywordInfoConverter extends AbstractSingleValueConverter {
 
         static Pattern RE =
-                Pattern.compile(
-                        "([^\\\\]+)(?:\\\\@language=([^\\\\]+)\\\\;)?(?:\\\\@vocabulary=([^\\\\]+)\\\\;)?");
+                Pattern.compile("([^\\\\]+)(?:\\\\@language=([^\\\\]+)\\\\;)?(?:\\\\@vocabulary=([^\\\\]+)\\\\;)?");
 
         @Override
         public boolean canConvert(Class type) {
@@ -2455,8 +2339,7 @@ public class XStreamPersister {
         public Object fromString(String str) {
             Matcher m = RE.matcher(str);
             if (!m.matches()) {
-                throw new IllegalArgumentException(
-                        String.format("%s does not match regular expression: %s", str, RE));
+                throw new IllegalArgumentException("%s does not match regular expression: %s".formatted(str, RE));
             }
 
             KeywordInfo kw = new Keyword(m.group(1));
@@ -2523,14 +2406,12 @@ public class XStreamPersister {
         }
 
         @Override
-        protected Object readBareItem(
-                HierarchicalStreamReader reader, UnmarshallingContext context, Object current) {
+        protected Object readBareItem(HierarchicalStreamReader reader, UnmarshallingContext context, Object current) {
             return context.convertAnother(current, Keyword.class);
         }
 
         @Override
-        protected void writeCompleteItem(
-                Object item, MarshallingContext context, HierarchicalStreamWriter writer) {
+        protected void writeCompleteItem(Object item, MarshallingContext context, HierarchicalStreamWriter writer) {
             writer.startNode("string");
             context.convertAnother(item);
             writer.endNode();
@@ -2545,8 +2426,7 @@ public class XStreamPersister {
         }
 
         @Override
-        public Object doUnmarshal(
-                Object result, HierarchicalStreamReader reader, UnmarshallingContext context) {
+        public Object doUnmarshal(Object result, HierarchicalStreamReader reader, UnmarshallingContext context) {
             SettingsInfoImpl obj = (SettingsInfoImpl) super.doUnmarshal(result, reader, context);
             if (obj.getMetadata() == null) {
                 obj.setMetadata(new MetadataMap());
@@ -2570,28 +2450,23 @@ public class XStreamPersister {
 
         @Override
         @SuppressWarnings("deprecation")
-        protected void doMarshal(
-                Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
+        protected void doMarshal(Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
             GeoServerInfo geoServerInfo = (GeoServerInfo) source;
             SettingsInfo settings = geoServerInfo.getSettings();
             if (settings != null && settings.isUseHeadersProxyURL() == null) {
                 settings.setUseHeadersProxyURL(geoServerInfo.isUseHeadersProxyURL());
-                if (geoServerInfo instanceof GeoServerInfoImpl)
-                    ((GeoServerInfoImpl) geoServerInfo).setUseHeadersProxyURLRaw(null);
+                if (geoServerInfo instanceof GeoServerInfoImpl impl) impl.setUseHeadersProxyURLRaw(null);
             }
             super.doMarshal(source, writer, context);
         }
 
         @Override
         @SuppressWarnings("deprecation")
-        public Object doUnmarshal(
-                Object result, HierarchicalStreamReader reader, UnmarshallingContext context) {
+        public Object doUnmarshal(Object result, HierarchicalStreamReader reader, UnmarshallingContext context) {
             // migrate proxy headers to settings if needed
             GeoServerInfoImpl info = (GeoServerInfoImpl) super.doUnmarshal(result, reader, context);
             SettingsInfo settings = info.getSettings();
-            if (settings != null
-                    && settings.isUseHeadersProxyURL() == null
-                    && info.isUseHeadersProxyURL() != null) {
+            if (settings != null && settings.isUseHeadersProxyURL() == null && info.isUseHeadersProxyURL() != null) {
                 settings.setUseHeadersProxyURL(info.isUseHeadersProxyURL());
                 info.setUseHeadersProxyURLRaw(null);
             }
@@ -2601,14 +2476,8 @@ public class XStreamPersister {
 
     /**
      * Converter for all {@link ServiceInfo} resources. Obtains the appropriate service object in
-     * {@link #instantiateNewInstance(HierarchicalStreamReader, UnmarshallingContext)} prior to
-     * reading in the XStream request, so that primitive objects are appropriately initialized.
-     *
-     * <p>Supported implementations of {@link ServiceSettingsResource} must implement {@link
-     * XStreamPersister.Callback.getServiceObject()} and {@link
-     * XStreamPersister.Callback.getObjectClass()} when providing an instance of {@link
-     * XStreamPersister.Callback} to {@link XStreamPersister} in {@link
-     * ServiceSettingsResource.configurePersister(XStreamPersister, DataFormat)}
+     * {@link #instantiateNewInstance(HierarchicalStreamReader, UnmarshallingContext)} prior to reading in the XStream
+     * request, so that primitive objects are appropriately initialized.
      */
     public class ServiceInfoConverter extends AbstractReflectionConverter {
 
@@ -2621,16 +2490,14 @@ public class XStreamPersister {
         }
 
         @Override
-        public Object doUnmarshal(
-                Object result, HierarchicalStreamReader reader, UnmarshallingContext context) {
+        public Object doUnmarshal(Object result, HierarchicalStreamReader reader, UnmarshallingContext context) {
             ServiceInfoImpl obj = (ServiceInfoImpl) super.doUnmarshal(result, reader, context);
 
             return obj;
         }
 
         @Override
-        protected Object instantiateNewInstance(
-                HierarchicalStreamReader reader, UnmarshallingContext context) {
+        protected Object instantiateNewInstance(HierarchicalStreamReader reader, UnmarshallingContext context) {
             Object emptyObject = super.instantiateNewInstance(reader, context);
             // Acquire the current CatalogInfo being acted upon object before unmarshaling the
             // Xstream
@@ -2688,10 +2555,7 @@ public class XStreamPersister {
         }
     }
 
-    /**
-     * Converter for WMSLayerInfoImpl class ensure backwards compatibility with <= 2.16.2 data
-     * directories
-     */
+    /** Converter for WMSLayerInfoImpl class ensure backwards compatibility with <= 2.16.2 data directories */
     class WMSLayerInfoConverter extends AbstractCatalogInfoConverter {
 
         public WMSLayerInfoConverter() {
@@ -2699,9 +2563,11 @@ public class XStreamPersister {
         }
 
         @Override
-        public Object doUnmarshal(
-                Object result, HierarchicalStreamReader reader, UnmarshallingContext context) {
+        public Object doUnmarshal(Object result, HierarchicalStreamReader reader, UnmarshallingContext context) {
             WMSLayerInfoImpl obj = (WMSLayerInfoImpl) super.doUnmarshal(result, reader, context);
+            if (obj.getVendorParameters() == null) {
+                obj.setVendorParameters(new HashMap<>());
+            }
             // setting the minimal defaults and clean object with no NULL values
             if (obj.getPreferredFormat() == null) {
                 obj.setPreferredFormat(WMSLayerInfoImpl.DEFAULT_FORMAT);
@@ -2718,7 +2584,6 @@ public class XStreamPersister {
     class InternationalStringConverter extends AbstractReflectionConverter {
 
         @Override
-        @SuppressWarnings("unchecked")
         public boolean canConvert(Class aClass) {
             // REST config actually tries to de-serialize based on InternationalString only
             return InternationalString.class.isAssignableFrom(aClass);
@@ -2732,24 +2597,19 @@ public class XStreamPersister {
         }
 
         @Override
-        protected void doMarshal(
-                Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
+        protected void doMarshal(Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
             boolean isGrowable = source instanceof GrowableInternationalString;
             if (isGrowable) {
-                GrowableInternationalString internationalString =
-                        (GrowableInternationalString) source;
+                GrowableInternationalString internationalString = (GrowableInternationalString) source;
                 Set<Locale> locales = internationalString.getLocales();
                 int size = locales.size();
                 for (Locale l : locales) {
                     if (l != null) {
                         String elementName = l.toLanguageTag();
-                        if (elementName.contains(" "))
-                            elementName = elementName.replaceAll(" ", "__");
-                        writeInternationalString(
-                                writer, elementName, internationalString.toString(l));
+                        if (elementName.contains(" ")) elementName = elementName.replaceAll(" ", "__");
+                        writeInternationalString(writer, elementName, internationalString.toString(l));
                     } else if (size > 1) {
-                        writeInternationalString(
-                                writer, DEFAULT_LOCALE, internationalString.toString(l));
+                        writeInternationalString(writer, DEFAULT_LOCALE, internationalString.toString(l));
                     }
                 }
             } else {
@@ -2760,8 +2620,7 @@ public class XStreamPersister {
 
         @Override
         public Object unmarshal(HierarchicalStreamReader reader, UnmarshallingContext context) {
-            GrowableInternationalString growableInternationalString =
-                    new GrowableInternationalString();
+            GrowableInternationalString growableInternationalString = new GrowableInternationalString();
             if (!reader.hasMoreChildren()) return null;
             while (reader.hasMoreChildren()) {
                 reader.moveDown();
@@ -2790,8 +2649,7 @@ public class XStreamPersister {
         }
 
         @Override
-        public void marshal(
-                Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
+        public void marshal(Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
             @SuppressWarnings("unchecked")
             Collection<LayerGroupStyle> styles = (Collection<LayerGroupStyle>) source;
             for (LayerGroupStyle gs : styles) {
@@ -2802,22 +2660,19 @@ public class XStreamPersister {
         }
 
         @Override
-        protected Object readBareItem(
-                HierarchicalStreamReader reader, UnmarshallingContext context, Object current) {
+        protected Object readBareItem(HierarchicalStreamReader reader, UnmarshallingContext context, Object current) {
             return context.convertAnother(current, LayerGroupStyle.class);
         }
     }
 
     class LayerGroupStyleConverter extends AbstractReflectionConverter {
         @Override
-        @SuppressWarnings("unchecked")
         public boolean canConvert(Class type) {
             return LayerGroupStyle.class.isAssignableFrom(type);
         }
 
         @Override
-        protected Object instantiateNewInstance(
-                HierarchicalStreamReader reader, UnmarshallingContext context) {
+        protected Object instantiateNewInstance(HierarchicalStreamReader reader, UnmarshallingContext context) {
             Object object = context.currentObject();
             if (object == null) {
                 object = new LayerGroupStyleImpl();
@@ -2826,8 +2681,7 @@ public class XStreamPersister {
         }
 
         @Override
-        protected void doMarshal(
-                Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
+        protected void doMarshal(Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
             super.doMarshal(source, writer, context);
         }
 
@@ -2854,8 +2708,7 @@ public class XStreamPersister {
                     StyleInfo styleInfo = styles.get(i);
                     StyleInfo unproxied = null;
                     if (catalog != null) unproxied = ResolvingProxy.resolve(catalog, styleInfo);
-                    if (unproxied != null || ResolvingProxy.getRef(styleInfo) == null)
-                        styles.set(i, unproxied);
+                    if (unproxied != null || ResolvingProxy.getRef(styleInfo) == null) styles.set(i, unproxied);
                 }
             return result;
         }
@@ -2869,8 +2722,7 @@ public class XStreamPersister {
         }
 
         @Override
-        protected void doMarshal(
-                Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
+        protected void doMarshal(Object source, HierarchicalStreamWriter writer, MarshallingContext context) {
             StyleInfo styleInfo = (StyleInfo) source;
             writer.setValue(styleInfo.getName());
         }
@@ -2881,6 +2733,58 @@ public class XStreamPersister {
 
             groupStyleName.setName(reader.getValue());
             return groupStyleName;
+        }
+    }
+
+    static class AttributeTypeInfoConverter extends ReflectionConverter {
+
+        private final ConverterLookup converterLookup;
+
+        public AttributeTypeInfoConverter(
+                Mapper mapper, ReflectionProvider reflectionProvider, ConverterLookup converterLookup) {
+            super(mapper, reflectionProvider);
+            this.converterLookup = converterLookup;
+        }
+
+        @Override
+        public boolean canConvert(Class type) {
+            return AttributeTypeInfo.class.isAssignableFrom(type);
+        }
+
+        @Override
+        public void marshal(Object original, HierarchicalStreamWriter writer, MarshallingContext context) {
+
+            AttributeTypeInfo attributeTypeInfo = (AttributeTypeInfo) original;
+            List<Object> options = attributeTypeInfo.getOptions();
+
+            if (options != null && !options.isEmpty()) {
+                Class<?> binding = attributeTypeInfo.getBinding();
+                attributeTypeInfo.setOptions(convertOptionsToBinding(options, binding));
+            }
+
+            super.marshal(original, writer, context);
+        }
+
+        private List<Object> convertOptionsToBinding(List<Object> options, Class<?> binding) {
+            Converter typeConverter = converterLookup.lookupConverterForType(binding);
+            if (!(typeConverter instanceof SingleValueConverter)) {
+                throw new ConversionException("converter for " + binding.getSimpleName() + " not found");
+            }
+            SingleValueConverter singleValueConverter = (SingleValueConverter) typeConverter;
+
+            List<Object> typedOptions = new ArrayList<>();
+            for (Object option : options) {
+                try {
+                    Object convertedOption = singleValueConverter.fromString(String.valueOf(option));
+                    typedOptions.add(convertedOption);
+                } catch (Exception e) {
+                    throw new ConversionException(
+                            "option '%s' cannot be converted to attribute binding %s"
+                                    .formatted(option, binding.getSimpleName()),
+                            e);
+                }
+            }
+            return typedOptions;
         }
     }
 }
