@@ -5,13 +5,15 @@
  */
 package org.geoserver.ows;
 
+import static javax.xml.stream.XMLStreamConstants.END_ELEMENT;
 import static javax.xml.stream.XMLStreamConstants.START_ELEMENT;
 
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import java.io.BufferedInputStream;
 import java.io.BufferedReader;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
-import java.io.CharArrayReader;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
@@ -30,11 +32,10 @@ import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 import javax.xml.namespace.QName;
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
@@ -45,9 +46,10 @@ import javax.xml.stream.XMLStreamReader;
 import javax.xml.transform.TransformerFactory;
 import javax.xml.transform.dom.DOMSource;
 import javax.xml.transform.stream.StreamResult;
-import org.apache.commons.fileupload.FileItem;
-import org.apache.commons.fileupload.disk.DiskFileItemFactory;
-import org.apache.commons.fileupload.servlet.ServletFileUpload;
+import org.apache.commons.fileupload2.core.DiskFileItem;
+import org.apache.commons.fileupload2.core.DiskFileItemFactory;
+import org.apache.commons.fileupload2.core.FileItem;
+import org.apache.commons.fileupload2.jakarta.servlet6.JakartaServletFileUpload;
 import org.eclipse.emf.ecore.EObject;
 import org.geoserver.ows.util.CaseInsensitiveMap;
 import org.geoserver.ows.util.KvpMap;
@@ -60,6 +62,7 @@ import org.geoserver.platform.Operation;
 import org.geoserver.platform.Service;
 import org.geoserver.platform.ServiceException;
 import org.geotools.util.Version;
+import org.geotools.util.logging.Logging;
 import org.geotools.xml.transform.TransformerBase;
 import org.geotools.xsd.EMFUtils;
 import org.springframework.beans.factory.NoSuchBeanDefinitionException;
@@ -85,42 +88,49 @@ import org.xml.sax.SAXException;
  *   <li>The version of the service ( optional )
  * </ol>
  *
- * <p>Additional, an OWS request can contain an arbitray number of additional parameters.
+ * <p>Additionally, an OWS request can contain an arbitrary number of additional parameters.
  *
- * <p>An OWS request can be specified in two forms. The first form is known as "KVP" in which all
- * the parameters come in the form of a set of key-value pairs. Commonly this type of request is
- * made in an http "GET" request, the parameters being specified in the query string:
+ * <p>An OWS request can be specified in two forms. The first form is known as "KVP" in which all the parameters come in
+ * the form of a set of key-value pairs. Commonly this type of request is made in an http "GET" request, the parameters
+ * being specified in the query string:
  *
  * <pre>
- * <code>http://www.xyz.com/geoserver?service=someService&amp;request=someRequest&amp;version=X.Y.Z&amp;param1=...&amp;param2=...</code>
+ * {@code http://www.xyz.com/geoserver?service=someService&request=someRequest&version=X.Y.Z&param1=...&param2=...}
  * </pre>
  *
  * <p>This type of request can also be made in a "POST" request in with a mime-type of
  * "application/x-www-form-urlencoded".
  *
- * <p>The second form is known as "XML" in which all the parameters come in the form of an xml
- * document. This type of request is made in an http "POST" request.
+ * <p>The second form is known as "XML" in which all the parameters come in the form of an xml document. This type of
+ * request is made in an http "POST" request.
  *
- * <pre><code>
- *  &lt;?xml version="1.0" encoding="UTF-8"?&gt;
- *  &lt;SomeRequest service="someService" version="X.Y.Z"&gt;
- *    &lt;Param1&gt;...&lt;/Param1&gt;
- *    &lt;Param2&gt;...&lt;/Param2&gt;
- *    ...
- *  &lt;/SomeRequest&gt;
- * </code></pre>
+ * <pre>{@code
+ * <?xml version="1.0" encoding="UTF-8"?>
+ * <SomeRequest service="someService" version="X.Y.Z">
+ *   <Param1>...</Param1>
+ *   <Param2>...</Param2>
+ *   ...
+ * </SomeRequest>
+ * }</pre>
  *
- * <p>When a request is received, the <b>service</b> the <b>version</b> parameters are used to
- * locate a service desciptor, an instance of {@link Service} . With the service descriptor, the
- * <b>request</b> parameter is used to locate the operation of the service to call.
+ * <p>When a request is received, the <b>service</b> the <b>version</b> parameters are used to locate a service
+ * descriptor, an instance of {@link Service} . With the service descriptor, the <b>request</b> parameter is used to
+ * locate the operation of the service to call.
  *
  * @author Justin Deoliveira, The Open Planning Project, jdeolive@openplans.org
  */
 public class Dispatcher extends AbstractController {
-    /** Logging instance */
-    static Logger logger = org.geotools.util.logging.Logging.getLogger("org.geoserver.ows");
 
-    /** flag to control wether the dispatcher is cite compliant */
+    /**
+     * The KVP parameter used for version negotiation in OWS requests, enumerating the versions supported by the client,
+     * in order of preference.
+     */
+    public static final String ACCEPT_VERSIONS = "AcceptVersions";
+
+    /** Logging instance */
+    static Logger logger = Logging.getLogger("org.geoserver.ows");
+
+    /** flag to control whether the dispatcher is cite compliant */
     boolean citeCompliant = false;
 
     /** thread local variable for the request */
@@ -129,7 +139,7 @@ public class Dispatcher extends AbstractController {
     static final Charset UTF8 = StandardCharsets.UTF_8;
 
     /** The amount of bytes to be read to determine the proper xml reader in POST request */
-    int XML_LOOKAHEAD = 8192;
+    static int XML_LOOKAHEAD = 8192;
 
     /** list of callbacks */
     List<DispatcherCallback> callbacks = Collections.emptyList();
@@ -161,14 +171,13 @@ public class Dispatcher extends AbstractController {
     }
 
     /**
-     * Sets the flag to control wether the dispatcher is cite compliante.
+     * Sets the flag to control whether the dispatcher is cite compliant.
      *
-     * <p>If set to <code>true</code>, the dispatcher with throw exceptions when it encounters
-     * something that is not 100% compliant with CITE standards. An example would be a request which
-     * specifies the servce in the context path: '.../geoserver/wfs?request=...' and not with the
-     * kvp '&amp;service=wfs'.
+     * <p>If set to {@code true}, the dispatcher with throw exceptions when it encounters something that is not 100%
+     * compliant with CITE standards. An example would be a request which specifies the service in the context path:
+     * '.../geoserver/wfs?request=...' and not with the kvp '&amp;service=wfs'.
      *
-     * @param citeCompliant <code>true</code> to set compliance, <code>false</code> to unset it.
+     * @param citeCompliant {@code true} to set compliance, {@code false} to unset it.
      */
     public void setCiteCompliant(boolean citeCompliant) {
         this.citeCompliant = citeCompliant;
@@ -187,19 +196,13 @@ public class Dispatcher extends AbstractController {
         String lookahead = GeoServerExtensions.getProperty("XML_LOOKAHEAD", context);
         if (lookahead != null) {
             try {
-                int lookaheadValue = Integer.valueOf(lookahead);
+                int lookaheadValue = Integer.parseInt(lookahead);
                 if (lookaheadValue <= 0)
                     logger.log(
-                            Level.SEVERE,
-                            "Invalid XML_LOOKAHEAD value, "
-                                    + "will use "
-                                    + XML_LOOKAHEAD
-                                    + " instead");
+                            Level.SEVERE, "Invalid XML_LOOKAHEAD value, " + "will use " + XML_LOOKAHEAD + " instead");
                 XML_LOOKAHEAD = lookaheadValue;
             } catch (Exception e) {
-                logger.log(
-                        Level.SEVERE,
-                        "Invalid XML_LOOKAHEAD value, " + "will use " + XML_LOOKAHEAD + " instead");
+                logger.log(Level.SEVERE, "Invalid XML_LOOKAHEAD value, " + "will use " + XML_LOOKAHEAD + " instead");
             }
         }
     }
@@ -220,8 +223,8 @@ public class Dispatcher extends AbstractController {
     }
 
     @Override
-    protected ModelAndView handleRequestInternal(
-            HttpServletRequest httpRequest, HttpServletResponse httpResponse) throws Exception {
+    protected ModelAndView handleRequestInternal(HttpServletRequest httpRequest, HttpServletResponse httpResponse)
+            throws Exception {
         preprocessRequest(httpRequest);
 
         // create a new request instance
@@ -315,8 +318,17 @@ public class Dispatcher extends AbstractController {
         // figure out method
         request.setGet("GET".equalsIgnoreCase(httpRequest.getMethod()) || isForm(reqContentType));
 
-        // create the kvp map
-        parseKVP(request);
+        // parse workspace context first so version negotiation can use it
+        initRequestContext(request);
+
+        // so DisabledServiceCheck can read workspace context for version filtering
+        REQUEST.set(request);
+        try {
+            // create the kvp map
+            parseKVP(request);
+        } finally {
+            REQUEST.remove();
+        }
 
         if (!request.isGet()) { // && httpRequest.getInputStream().available() > 0) {
             // check for a SOAP request, if so we need to unwrap the SOAP stuff
@@ -324,16 +336,17 @@ public class Dispatcher extends AbstractController {
                     && httpRequest.getContentType().startsWith(SOAP_MIME)) {
                 request.setSOAP(true);
                 request.setInput(soapReader(httpRequest, request));
-            } else if (reqContentType != null
-                    && ServletFileUpload.isMultipartContent(httpRequest)) {
+            } else if (reqContentType != null && JakartaServletFileUpload.isMultipartContent(httpRequest)) {
                 // multipart form upload
-                ServletFileUpload up = new ServletFileUpload(new DiskFileItemFactory());
+                final DiskFileItemFactory factory =
+                        DiskFileItemFactory.builder().get();
+                final JakartaServletFileUpload<DiskFileItem, DiskFileItemFactory> up =
+                        new JakartaServletFileUpload<>(factory);
 
                 // treat regular form fields as additional kvp parameters
-                Map<String, FileItem> kvpFileItems =
-                        new CaseInsensitiveMap<>(new LinkedHashMap<>());
+                Map<String, FileItem> kvpFileItems = new CaseInsensitiveMap<>(new LinkedHashMap<>());
                 try {
-                    List<FileItem> items = up.parseRequest(httpRequest);
+                    final List<DiskFileItem> items = up.parseRequest(httpRequest);
                     FileItemCleanupCallback.setFileItems(items);
                     FileItem body = null;
                     for (FileItem item : items) {
@@ -355,8 +368,7 @@ public class Dispatcher extends AbstractController {
                     if (body == null) {
                         body = kvpFileItems.remove("body");
                         if (body == null) {
-                            throw new IllegalArgumentException(
-                                    "Unable to find input from multipart/form-data content");
+                            throw new IllegalArgumentException("Unable to find input from multipart/form-data content");
                         }
                     }
                     request.setInput(fileItemReader(body));
@@ -365,11 +377,12 @@ public class Dispatcher extends AbstractController {
                 }
 
                 Map<String, Object> kvpItems = new LinkedHashMap<>();
-                kvpFileItems.forEach(
-                        (key, value) -> {
-                            kvpItems.put(key, value.getString());
-                            value.delete(); // the temp file can be deleted at this point
-                        });
+                for (Map.Entry<String, FileItem> entry : kvpFileItems.entrySet()) {
+                    String key = entry.getKey();
+                    FileItem value = entry.getValue();
+                    kvpItems.put(key, value.getString());
+                    value.delete(); // the temp file can be deleted at this point
+                }
 
                 request.setOrAppendKvp(parseKVP(request, kvpItems));
             } else {
@@ -384,6 +397,117 @@ public class Dispatcher extends AbstractController {
                 request.getInput().reset();
             }
         }
+
+        return fireInitCallback(request);
+    }
+
+    /**
+     * Figures out the service from the kvp (or the context path if kvp is missing, and not cite compliant) and then
+     * performs version negotiation based on "version" or "acceptVersions"
+     */
+    private void negotiateServiceAndVersionKvp(Request req) {
+        Map<String, Object> kvp = req.getKvp();
+
+        // if the service is not explicitly set, some parsers will not be found
+        String service = KvpUtils.getSingleValue(kvp, "service");
+        if (service == null && !citeCompliant) {
+            try {
+                service = getServiceFromRequest(req);
+                if (!"OWS".equalsIgnoreCase(service)) { // OWS is too generic for the parser lookup
+                    kvp.put("service", service);
+                }
+                logger.log(Level.FINER, "service kvp parameter not found, setting to " + service);
+            } catch (Exception e) {
+                logger.log(Level.WARNING, "Unable to determine service from kvp or context");
+            }
+        }
+
+        // do not bother with version negotiation if the request is just a GWC proxy (see GwcServiceDispatcherCallback)
+        // GWC has the actual tile service implementation and will handle version negotiation itself
+        if ("/gwc".equals(req.getHttpRequest().getServletPath())) {
+            return;
+        }
+
+        // figure out the target version before we parse the kvp
+        // as some kvp parsers are version specific (e.g. AcceptVersions has 3 different implementations in EMF)
+        String request = KvpUtils.getSingleValue(kvp, "request");
+        String version = KvpUtils.getSingleValue(kvp, "version");
+        String wmtver = KvpUtils.getSingleValue(kvp, "wmtver");
+        if (service != null && "GetCapabilities".equalsIgnoreCase(request)) {
+            if (version != null) {
+                // pre-OWS negotiation if version is available - use ALL versions, not filtered
+                List<String> allVersions = RequestUtils.getSupportedVersions(service);
+                version = RequestUtils.getVersionPreOws(allVersions, List.of(version));
+            } else if (wmtver != null && "WMS".equalsIgnoreCase(service)) {
+                // this case is specific to WMS for backwards compatibility - use ALL versions
+                List<String> allVersions = RequestUtils.getSupportedVersions(service);
+                version = RequestUtils.getVersionPreOws(allVersions, List.of(wmtver));
+            } else {
+                // filter to enabled versions only
+                List<String> supportedVersions = getEnabledVersions(service);
+
+                // OWS negotiation, using acceptVersions
+                String acceptVersionsList = Optional.ofNullable(kvp)
+                        .map(map -> map.get(ACCEPT_VERSIONS))
+                        .filter(v -> v instanceof String)
+                        .map(v -> (String) v)
+                        .orElse(null);
+                if (acceptVersionsList != null) {
+                    List<String> acceptVersions = KvpUtils.readFlat(acceptVersionsList, KvpUtils.INNER_DELIMETER);
+                    req.setAcceptVersions(acceptVersions);
+                    version = RequestUtils.getVersionOWS(supportedVersions, acceptVersions, citeCompliant);
+                    if (version == null) versionNegotiationFailed();
+                } else if (supportedVersions != null && !supportedVersions.isEmpty()) {
+                    // No version or acceptVersions specified, default to highest enabled version
+                    version = supportedVersions.get(0);
+                } else {
+                    // if no enabled versions found (shouldn't normally happen),
+                    // use highest supported version to prevent returning null
+                    logger.warning("No enabled versions found for service " + service
+                            + ", falling back to highest supported version");
+                    List<String> allVersions = RequestUtils.getSupportedVersions(service);
+                    if (allVersions != null && !allVersions.isEmpty()) {
+                        version = allVersions.get(allVersions.size() - 1);
+                    }
+                }
+            }
+
+            // set in negotiated version to control the parsing
+            if (version != null) {
+                kvp.put("version", version);
+            }
+        }
+    }
+
+    private static void versionNegotiationFailed() {
+        throw new ServiceException(
+                "Could not determine version", ServiceException.VERSION_NEGOTIATION_FAILED, "acceptVersions");
+    }
+
+    /**
+     * Initializes the request context by parsing the request path into two components: the 'context' and the 'path'.
+     * The 'context' is the part of the URI before the last '/' and the 'path' is the part after the last '/'.
+     *
+     * <p>This method processes the given {@link Request} object to extract and set the context and path based on the
+     * HTTP request URI. Leading and trailing slashes are stripped from the request path before the context and path are
+     * determined.
+     *
+     * <p>Example:
+     *
+     * <pre>
+     * If the request URI is "/app/resource/item", then:
+     * - context: "app/resource"
+     * - path: "item"
+     *
+     * If the request URI is "/geoserver/ne/countries/gwc/service/wmts", then:
+     * - context: "ne/countries/gwc/service"
+     * - path: "wmts"
+     * </pre>
+     *
+     * @param request the {@link Request} object whose context and path need to be initialized.
+     * @throws NullPointerException if the {@link Request} or its HTTP request is null.
+     */
+    public static void initRequestContext(Request request) {
         // parse the request path into two components. (1) the 'path' which
         // is the string after the last '/', and the 'context' which is the
         // string before the last '/'
@@ -413,8 +537,6 @@ public class Dispatcher extends AbstractController {
 
         request.setContext(context);
         request.setPath(path);
-
-        return fireInitCallback(request);
     }
 
     private boolean isForm(String contentType) {
@@ -469,8 +591,8 @@ public class Dispatcher extends AbstractController {
         Element payload = null;
         for (int i = 0; payload == null && i < body.getChildNodes().getLength(); i++) {
             Node n = body.getChildNodes().item(i);
-            if (n instanceof Element) {
-                payload = (Element) n;
+            if (n instanceof Element element) {
+                payload = element;
             }
         }
 
@@ -481,15 +603,12 @@ public class Dispatcher extends AbstractController {
         // transform the payload back into an input stream so we can parse it as usual
         ByteArrayOutputStream bout = new ByteArrayOutputStream();
         try {
-            TransformerFactory.newInstance()
-                    .newTransformer()
-                    .transform(new DOMSource(payload), new StreamResult(bout));
+            TransformerFactory.newInstance().newTransformer().transform(new DOMSource(payload), new StreamResult(bout));
         } catch (Exception e) {
             throw new IOException("Error encoding payload of SOAP request", e);
         }
 
-        return RequestUtils.getBufferedXMLReader(
-                new ByteArrayInputStream(bout.toByteArray()), XML_LOOKAHEAD);
+        return RequestUtils.getBufferedXMLReader(new ByteArrayInputStream(bout.toByteArray()), XML_LOOKAHEAD);
     }
 
     BufferedReader reader(HttpServletRequest httpRequest) throws IOException {
@@ -501,56 +620,16 @@ public class Dispatcher extends AbstractController {
     }
 
     Service service(Request req) throws Exception {
-        // check kvp
-        if (req.getKvp() != null) {
-
-            req.setService(normalize(KvpUtils.getSingleValue(req.getKvp(), "service")));
-            req.setVersion(
-                    normalizeVersion(normalize(KvpUtils.getSingleValue(req.getKvp(), "version"))));
-            req.setRequest(normalize(KvpUtils.getSingleValue(req.getKvp(), "request")));
-            req.setOutputFormat(normalize(KvpUtils.getSingleValue(req.getKvp(), "outputFormat")));
-        }
-        // check the body
-        if (req.getInput() != null && "POST".equalsIgnoreCase(req.getHttpRequest().getMethod())) {
-            req = readOpPost(req);
-        }
-
-        // try to infer from context
-        // JD: for cite compliance, a service *must* be specified explicitley by
-        // either a kvp, or an xml attribute, however in reality the context
-        // is often a good way to infer the service or request
-        String service = req.getService();
-
-        if ((service == null) || (req.getRequest() == null)) {
-            Map map = readOpContext(req);
-
-            if (service == null) {
-                service = normalize((String) map.get("service"));
-
-                if ((service != null) && !citeCompliant) {
-                    req.setService(service);
-                }
-            }
-
-            if (req.getRequest() == null) {
-                req.setRequest(normalize((String) map.get("request")));
-            }
-        }
-
-        if (service == null) {
-            // give up
-            throw new ServiceException(
-                    "Could not determine service", "MissingParameterValue", "service");
-        }
+        String service = getServiceFromRequest(req);
+        String version = req.getVersion();
 
         // load from teh context
-        Service serviceDescriptor = findService(service, req.getVersion(), req.getNamespace());
+        Service serviceDescriptor = findService(service, version, req.getNamespace());
         if (serviceDescriptor == null) {
             // hack for backwards compatability, try finding the service with the context instead
             // of the service
             if (req.getContext() != null) {
-                serviceDescriptor =
-                        findService(req.getContext(), req.getVersion(), req.getNamespace());
+                serviceDescriptor = findService(req.getContext(), version, req.getNamespace());
                 if (serviceDescriptor != null) {
                     // found, assume that the client is using <service>/<request>
                     if (req.getRequest() == null) {
@@ -567,6 +646,63 @@ public class Dispatcher extends AbstractController {
         }
         req.setServiceDescriptor(serviceDescriptor);
         return fireServiceDispatchedCallback(req, serviceDescriptor);
+    }
+
+    /**
+     * Retrieves the service name from the given request object, which may contain key-value pairs (KVP) or a request
+     * body. If the service name is not explicitly provided in the request, attempts to infer it from the request
+     * context.
+     *
+     * @param req The request object containing information about the service and request.
+     * @return The name of the service extracted from the request.
+     * @throws ServiceException If the service name cannot be determined from the request.
+     * @throws Exception If an unexpected error occurs during the extraction process.
+     */
+    public String getServiceFromRequest(Request req) throws Exception {
+        // check kvp
+        if (req.getKvp() != null) {
+
+            req.setService(normalize(KvpUtils.getSingleValue(req.getKvp(), "service")));
+            req.setVersion(normalizeVersion(normalize(KvpUtils.getSingleValue(req.getKvp(), "version"))));
+            req.setRequest(normalize(KvpUtils.getSingleValue(req.getKvp(), "request")));
+            req.setOutputFormat(normalize(KvpUtils.getSingleValue(req.getKvp(), "outputFormat")));
+        }
+        // check the body
+        if (req.getInput() != null
+                && "POST".equalsIgnoreCase(req.getHttpRequest().getMethod())) {
+            readOpPost(req, citeCompliant);
+        }
+
+        // try to infer from context
+        // JD: for cite compliance, a service *must* be specified explicitly by
+        // either a kvp, or a xml attribute, however in reality the context
+        // is often a good way to infer the service or request
+        String service = req.getService();
+
+        if ((service == null) || (req.getRequest() == null)) {
+            Map map = readOpContext(req);
+
+            if (service == null) {
+                service = normalize((String) map.get("service"));
+                if (service != null) {
+                    service = service.toUpperCase();
+                }
+
+                if ((service != null) && !citeCompliant) {
+                    req.setService(service);
+                }
+            }
+
+            if (req.getRequest() == null) {
+                req.setRequest(normalize((String) map.get("request")));
+            }
+        }
+
+        if (service == null) {
+            // give up
+            throw new ServiceException("Could not determine service", "MissingParameterValue", "service");
+        }
+        return service;
     }
 
     Service fireServiceDispatchedCallback(Request req, Service service) {
@@ -610,13 +746,11 @@ public class Dispatcher extends AbstractController {
         }
 
         if (v.getMinor() == null) {
-            return String.format("%d.0.0", ((Number) v.getMajor()).intValue());
+            return "%d.0.0".formatted(((Number) v.getMajor()).intValue());
         }
 
         if (v.getRevision() == null) {
-            return String.format(
-                    "%d.%d.0",
-                    ((Number) v.getMajor()).intValue(), ((Number) v.getMinor()).intValue());
+            return "%d.%d.0".formatted(((Number) v.getMajor()).intValue(), ((Number) v.getMinor()).intValue());
         }
 
         // version ok
@@ -625,9 +759,7 @@ public class Dispatcher extends AbstractController {
 
     Operation dispatch(Request req, Service serviceDescriptor) throws Throwable {
         if (req.getRequest() == null) {
-            String msg =
-                    "Could not determine geoserver request from http request "
-                            + req.getHttpRequest();
+            String msg = "Could not determine geoserver request from http request " + req.getHttpRequest();
             throw new ServiceException(msg, "MissingParameterValue", "request");
         }
 
@@ -648,7 +780,7 @@ public class Dispatcher extends AbstractController {
             throw new ServiceException(msg, "OperationNotSupported", req.getRequest());
         }
 
-        // step 4: setup the paramters
+        // step 4: setup the parameters
         Object[] parameters = new Object[operation.getParameterTypes().length];
 
         for (int i = 0; i < parameters.length; i++) {
@@ -676,13 +808,15 @@ public class Dispatcher extends AbstractController {
                 boolean kvpParsed = false;
                 boolean xmlParsed = false;
 
-                if (req.getKvp() != null && req.getKvp().size() > 0) {
-                    // use the kvp reader mechanism
+                if (req.getKvp() != null
+                        && !req.getKvp().isEmpty()
+                        && (!(req.getKvp().size() == 1 && req.getKvp().containsKey("service")))) {
+                    // use the kvp reader mechanism, but not if the only kvp is the service
                     try {
                         requestBean = parseRequestKVP(parameterType, req);
                         kvpParsed = true;
                     } catch (Exception e) {
-                        // dont die now, there might be a body to parse
+                        // don't die now, there might be a body to parse
                         t = e;
                     }
                 }
@@ -702,27 +836,21 @@ public class Dispatcher extends AbstractController {
                         throw t;
                     }
                     if (kvpParsed && xmlParsed || (!kvpParsed && !xmlParsed)) {
-                        throw new ServiceException(
-                                "Could not find request reader (either kvp or xml) for: "
-                                        + parameterType.getName()
-                                        + ", it might be that some request parameters are missing, "
-                                        + "please check the documentation");
+                        throw new ServiceException("Could not find request reader (either kvp or xml) for: "
+                                + parameterType.getName()
+                                + ", it might be that some request parameters are missing, "
+                                + "please check the documentation");
                     } else if (kvpParsed) {
-                        throw new ServiceException(
-                                "Could not parse the KVP for: " + parameterType.getName());
+                        throw new ServiceException("Could not parse the KVP for: " + parameterType.getName());
                     } else {
-                        throw new ServiceException(
-                                "Could not parse the XML for: " + parameterType.getName());
+                        throw new ServiceException("Could not parse the XML for: " + parameterType.getName());
                     }
                 }
 
                 // GEOS-934  and GEOS-1288
-                Method setBaseUrl =
-                        OwsUtils.setter(requestBean.getClass(), "baseUrl", String.class);
+                Method setBaseUrl = OwsUtils.setter(requestBean.getClass(), "baseUrl", String.class);
                 if (setBaseUrl != null) {
-                    setBaseUrl.invoke(
-                            requestBean,
-                            new String[] {ResponseUtils.baseURL(req.getHttpRequest())});
+                    setBaseUrl.invoke(requestBean, ResponseUtils.baseURL(req.getHttpRequest()));
                 }
 
                 // another couple of thos of those lovley cite things, version+service has to
@@ -731,20 +859,17 @@ public class Dispatcher extends AbstractController {
                 // objects to try and find one
                 // TODO: should make this configurable
                 if (requestBean != null) {
-                    // if we dont have a version thus far, check the request object
+                    // if we don't have a version thus far, check the request object
                     if (req.getService() == null) {
                         req.setService(lookupRequestBeanProperty(requestBean, "service", false));
                     }
 
                     if (req.getVersion() == null) {
-                        req.setVersion(
-                                normalizeVersion(
-                                        lookupRequestBeanProperty(requestBean, "version", false)));
+                        req.setVersion(normalizeVersion(lookupRequestBeanProperty(requestBean, "version", false)));
                     }
 
                     if (req.getOutputFormat() == null) {
-                        req.setOutputFormat(
-                                lookupRequestBeanProperty(requestBean, "outputFormat", true));
+                        req.setOutputFormat(lookupRequestBeanProperty(requestBean, "outputFormat", true));
                     }
 
                     parameters[i] = requestBean;
@@ -754,28 +879,25 @@ public class Dispatcher extends AbstractController {
 
         // if we are in cite compliant mode, do some additional checks to make
         // sure the "mandatory" parameters are specified, even though we
-        // succesfully dispatched the request.
+        // successfully dispatched the request.
         if (citeCompliant) {
             // the version is mandatory for all requests but GetCapabilities
             if (!"GetCapabilities".equalsIgnoreCase(req.getRequest())) {
                 if (req.getVersion() == null) {
                     // must be a version on non-capabilities requests
-                    throw new ServiceException(
-                            "Could not determine version", "MissingParameterValue", "version");
+                    throw new ServiceException("Could not determine version", "MissingParameterValue", "version");
                 } else {
                     // version must be valid
                     if (!req.getVersion().matches("[0-99].[0-99].[0-99]")) {
                         throw new ServiceException(
-                                "Invalid version: " + req.getVersion(),
-                                "InvalidParameterValue",
-                                "version");
+                                "Invalid version: " + req.getVersion(), "InvalidParameterValue", "version");
                     }
 
                     // make sure the versoin actually exists
                     boolean found = false;
                     Version version = new Version(req.getVersion());
 
-                    for (Service service : loadServices()) {
+                    for (Service service : RequestUtils.loadServices()) {
                         if (version.equals(service.getVersion())) {
                             found = true;
 
@@ -785,9 +907,7 @@ public class Dispatcher extends AbstractController {
 
                     if (!found) {
                         throw new ServiceException(
-                                "Invalid version: " + req.getVersion(),
-                                "InvalidParameterValue",
-                                "version");
+                                "Invalid version: " + req.getVersion(), "InvalidParameterValue", "version");
                     }
                 }
             }
@@ -795,8 +915,7 @@ public class Dispatcher extends AbstractController {
             // the service is mandatory for all requests instead
             if (req.getService() == null) {
                 // give up
-                throw new ServiceException(
-                        "Could not determine service", "MissingParameterValue", "service");
+                throw new ServiceException("Could not determine service", "MissingParameterValue", "service");
             }
         }
 
@@ -823,13 +942,10 @@ public class Dispatcher extends AbstractController {
         return op;
     }
 
-    String lookupRequestBeanProperty(
-            Object requestBean, String property, boolean allowDefaultValues) {
-        if (requestBean instanceof EObject && EMFUtils.has((EObject) requestBean, property)) {
+    String lookupRequestBeanProperty(Object requestBean, String property, boolean allowDefaultValues) {
+        if (requestBean instanceof EObject eObject && EMFUtils.has(eObject, property)) {
             // special case hack for eObject, we should move
-            // this out into an extension ppint
-            EObject eObject = (EObject) requestBean;
-
+            // this out into an extension point
             if (allowDefaultValues || EMFUtils.isSet(eObject, property)) {
                 return normalize((String) EMFUtils.get(eObject, property));
             }
@@ -854,14 +970,12 @@ public class Dispatcher extends AbstractController {
         Object result = null;
 
         try {
-            if (serviceBean instanceof DirectInvocationService) {
+            if (serviceBean instanceof DirectInvocationService service) {
                 // invokeDirect expects the operation to be called as declared in the operation
                 // descriptor, although it used to match a method name, lets use the declared
                 // operation name for contract compliance.
                 String operationName = opDescriptor.getId();
-                result =
-                        ((DirectInvocationService) serviceBean)
-                                .invokeDirect(operationName, parameters);
+                result = service.invokeDirect(operationName, parameters);
             } else {
                 Method operation = opDescriptor.getMethod();
                 result = operation.invoke(serviceBean, parameters);
@@ -897,8 +1011,7 @@ public class Dispatcher extends AbstractController {
 
                 Class<?> binding = response.getBinding();
 
-                if (!binding.isAssignableFrom(result.getClass())
-                        || !response.canHandle(opDescriptor)) {
+                if (!binding.isAssignableFrom(result.getClass()) || !response.canHandle(opDescriptor)) {
                     itr.remove();
 
                     continue;
@@ -911,7 +1024,7 @@ public class Dispatcher extends AbstractController {
                         && (!outputFormats.isEmpty())
                         && !outputFormats.contains(req.getOutputFormat())) {
 
-                    // must do a case insensitive check
+                    // must do a case-insensitive check
                     for (Object format : outputFormats) {
                         String outputFormat = (String) format;
                         if (req.getOutputFormat().equalsIgnoreCase(outputFormat)) {
@@ -944,30 +1057,27 @@ public class Dispatcher extends AbstractController {
 
             if (responses.size() > 1) {
                 // sort by class hierarchy
-                Collections.sort(
-                        responses,
-                        (o1, o2) -> {
-                            Class<?> c1 = o1.getBinding();
-                            Class<?> c2 = o2.getBinding();
+                Collections.sort(responses, (o1, o2) -> {
+                    Class<?> c1 = o1.getBinding();
+                    Class<?> c2 = o2.getBinding();
 
-                            if (c1.equals(c2)) {
-                                return 0;
-                            }
+                    if (c1.equals(c2)) {
+                        return 0;
+                    }
 
-                            if (c1.isAssignableFrom(c2)) {
-                                return 1;
-                            }
+                    if (c1.isAssignableFrom(c2)) {
+                        return 1;
+                    }
 
-                            return -1;
-                        });
+                    return -1;
+                });
 
                 // check first two and make sure bindings are not equal
                 Response r1 = responses.get(0);
                 Response r2 = responses.get(1);
 
                 if (r1.getBinding().equals(r2.getBinding())) {
-                    String msg =
-                            "Multiple responses: (" + result.getClass() + "): " + r1 + ", " + r2;
+                    String msg = "Multiple responses: (" + result.getClass() + "): " + r1 + ", " + r2;
                     throw new RuntimeException(msg);
                 }
             }
@@ -1010,8 +1120,8 @@ public class Dispatcher extends AbstractController {
                 }
 
                 // special check for transformer
-                if (req.isSOAP() && result instanceof TransformerBase) {
-                    ((TransformerBase) result).setOmitXMLDeclaration(true);
+                if (req.isSOAP() && result instanceof TransformerBase base) {
+                    base.setOmitXMLDeclaration(true);
                 }
 
                 // actually write out the response
@@ -1094,14 +1204,11 @@ public class Dispatcher extends AbstractController {
         }
     }
 
-    void startSOAPEnvelope(OutputStream output, Request request, Response response)
-            throws IOException {
-        output.write(
-                ("<soap:Envelope xmlns:soap='" + request.getSOAPNamespace() + "'><soap:Header/>")
-                        .getBytes());
+    void startSOAPEnvelope(OutputStream output, Request request, Response response) throws IOException {
+        output.write(("<soap:Envelope xmlns:soap='" + request.getSOAPNamespace() + "'><soap:Header/>").getBytes());
         output.write("<soap:Body".getBytes());
-        if (response != null && response instanceof SOAPAwareResponse) {
-            String type = ((SOAPAwareResponse) response).getBodyType();
+        if (response != null && response instanceof SOAPAwareResponse awareResponse) {
+            String type = awareResponse.getBodyType();
             if (type != null) {
                 output.write((" type='" + type + "'").getBytes());
             }
@@ -1113,8 +1220,7 @@ public class Dispatcher extends AbstractController {
         output.write(("</soap:Body></soap:Envelope>").getBytes());
     }
 
-    Response fireResponseDispatchedCallback(
-            Request req, Operation op, Object result, Response response) {
+    Response fireResponseDispatchedCallback(Request req, Operation op, Object result, Response response) {
         for (DispatcherCallback cb : callbacks) {
             Response r = cb.responseDispatched(req, op, result, response);
             response = r != null ? r : response;
@@ -1122,20 +1228,9 @@ public class Dispatcher extends AbstractController {
         return response;
     }
 
-    Collection<Service> loadServices() {
-        Collection<Service> services = GeoServerExtensions.extensions(Service.class);
-
-        if (!(new HashSet<>(services).size() == services.size())) {
-            String msg = "Two identical service descriptors found";
-            throw new IllegalStateException(msg);
-        }
-
-        return services;
-    }
-
     Service findService(String id, String ver, String namespace) throws ServiceException {
         Version version = (ver != null) ? new Version(ver) : null;
-        Collection<Service> services = loadServices();
+        Collection<Service> services = RequestUtils.loadServices();
 
         // the id is actually the pathinfo, in case workspace specific services
         // are active we want to skip the workspace part in the path and go directly to the
@@ -1202,9 +1297,8 @@ public class Dispatcher extends AbstractController {
 
             // multiple services found, sort by version
             if (vmatches.size() > 1) {
-                // use highest version
-                Comparator<Service> comparator =
-                        (s1, s2) -> s1.getVersion().compareTo(s2.getVersion());
+                // use the highest version
+                Comparator<Service> comparator = (s1, s2) -> s1.getVersion().compareTo(s2.getVersion());
 
                 Collections.sort(vmatches, comparator);
             }
@@ -1219,8 +1313,7 @@ public class Dispatcher extends AbstractController {
     }
 
     public static Collection<KvpRequestReader> loadKvpRequestReaders() {
-        Collection<KvpRequestReader> kvpReaders =
-                GeoServerExtensions.extensions(KvpRequestReader.class);
+        Collection<KvpRequestReader> kvpReaders = GeoServerExtensions.extensions(KvpRequestReader.class);
 
         if (!(new HashSet<>(kvpReaders).size() == kvpReaders.size())) {
             String msg = "Two identical kvp readers found";
@@ -1247,14 +1340,13 @@ public class Dispatcher extends AbstractController {
 
         if (matches.size() > 1) {
             // sort by class hierarchy
-            Comparator<KvpRequestReader> comparator =
-                    (kvp1, kvp2) -> {
-                        if (kvp2.getRequestBean().isAssignableFrom(kvp1.getRequestBean())) {
-                            return -1;
-                        }
+            Comparator<KvpRequestReader> comparator = (kvp1, kvp2) -> {
+                if (kvp2.getRequestBean().isAssignableFrom(kvp1.getRequestBean())) {
+                    return -1;
+                }
 
-                        return 1;
-                    };
+                return 1;
+            };
 
             Collections.sort(matches, comparator);
         }
@@ -1286,8 +1378,7 @@ public class Dispatcher extends AbstractController {
     }
 
     /**
-     * Finds a registered {@link XmlRequestReader} bean able to read a request, given the request
-     * details
+     * Finds a registered {@link XmlRequestReader} bean able to read a request, given the request details
      *
      * @param namespace The XML namespace of the request body
      * @param element The OWS request, e.g. "GetMap"
@@ -1295,8 +1386,7 @@ public class Dispatcher extends AbstractController {
      * @param ver The OWS service version, e.g "1.1.1"
      * @return An {@link XmlRequestReader} capable of reading the request body
      */
-    public static XmlRequestReader findXmlReader(
-            String namespace, String element, String serviceId, String ver) {
+    public static XmlRequestReader findXmlReader(String namespace, String element, String serviceId, String ver) {
         Collection<XmlRequestReader> xmlReaders = loadXmlReaders();
 
         // first just match on namespace, element
@@ -1315,10 +1405,8 @@ public class Dispatcher extends AbstractController {
         if (matches.isEmpty()) {
             // do a more lax serach, search only on the element name if the
             // namespace was unspecified
-            if (namespace == null || namespace.equals("")) {
-                String msg =
-                        "No namespace specified in request, searching for "
-                                + " xml reader by element name only";
+            if (namespace == null || namespace.isEmpty()) {
+                String msg = "No namespace specified in request, searching for " + " xml reader by element name only";
                 logger.info(msg);
 
                 for (XmlRequestReader xmlReader : xmlReaders) {
@@ -1398,47 +1486,46 @@ public class Dispatcher extends AbstractController {
 
             // multiple readers found, sort by version and by service match
             if (vmatches.size() > 1) {
-                // use highest version
-                Comparator<XmlRequestReader> comparator =
-                        (r1, r2) -> {
-                            Version v1 = r1.getVersion();
-                            Version v2 = r2.getVersion();
+                // use the highest version
+                Comparator<XmlRequestReader> comparator = (r1, r2) -> {
+                    Version v1 = r1.getVersion();
+                    Version v2 = r2.getVersion();
 
-                            if ((v1 == null) && (v2 == null)) {
-                                return 0;
-                            }
+                    if ((v1 == null) && (v2 == null)) {
+                        return 0;
+                    }
 
-                            if ((v1 != null) && (v2 == null)) {
-                                return 1;
-                            }
+                    if ((v1 != null) && (v2 == null)) {
+                        return 1;
+                    }
 
-                            if ((v1 == null) && (v2 != null)) {
-                                return -1;
-                            }
+                    if ((v1 == null) && (v2 != null)) {
+                        return -1;
+                    }
 
-                            int versionCompare = v1.compareTo(v2);
+                    int versionCompare = v1.compareTo(v2);
 
-                            if (versionCompare != 0) {
-                                return versionCompare;
-                            }
+                    if (versionCompare != 0) {
+                        return versionCompare;
+                    }
 
-                            String sid1 = r1.getServiceId();
-                            String sid2 = r2.getServiceId();
+                    String sid1 = r1.getServiceId();
+                    String sid2 = r2.getServiceId();
 
-                            if ((sid1 == null) && (sid2 == null)) {
-                                return 0;
-                            }
+                    if ((sid1 == null) && (sid2 == null)) {
+                        return 0;
+                    }
 
-                            if ((sid1 != null) && (sid2 == null)) {
-                                return 1;
-                            }
+                    if ((sid1 != null) && (sid2 == null)) {
+                        return 1;
+                    }
 
-                            if ((sid1 == null) && (sid2 != null)) {
-                                return -1;
-                            }
+                    if ((sid1 == null) && (sid2 != null)) {
+                        return -1;
+                    }
 
-                            return sid1.compareTo(sid2);
-                        };
+                    return sid1.compareTo(sid2);
+                };
 
                 Collections.sort(vmatches, comparator);
             }
@@ -1488,6 +1575,7 @@ public class Dispatcher extends AbstractController {
 
     void parseKVP(Request req) throws ServiceException {
         preParseKVP(req);
+        negotiateServiceAndVersionKvp(req);
         parseKVP(req, req.getKvp());
     }
 
@@ -1505,7 +1593,7 @@ public class Dispatcher extends AbstractController {
         if (kvpReader != null) {
             Object requestBean = kvpReader.createRequest();
 
-            if (requestBean != null) {
+            if (requestBean != null && request.getKvp() != null && request.getRawKvp() != null) {
                 requestBean = kvpReader.read(requestBean, request.getKvp(), request.getRawKvp());
             }
 
@@ -1516,15 +1604,14 @@ public class Dispatcher extends AbstractController {
     }
 
     /**
-     * To be called once it was determined the request is a POST request with an XML request body;
-     * uses {@link XmlRequestReader} to parse the {@link Request#getInput() request input}.
+     * To be called once it was determined the request is a POST request with an XML request body; uses
+     * {@link XmlRequestReader} to parse the {@link Request#getInput() request input}.
      *
-     * <p>This method expects {@code request.} {@link Request#getNamespace() namespace}, {@link
-     * Request#getPostRequestElementName() postRequestElementName}, {@link Request#getVersion()
-     * version}, and {@link Request#getService() service} to be set already.
+     * <p>This method expects {@code request.} {@link Request#getNamespace() namespace},
+     * {@link Request#getPostRequestElementName() postRequestElementName}, {@link Request#getVersion() version}, and
+     * {@link Request#getService() service} to be set already.
      */
-    Object parseRequestXML(Object requestBean, BufferedReader input, Request request)
-            throws Exception {
+    Object parseRequestXML(Object requestBean, BufferedReader input, Request request) throws Exception {
         // check for an empty input stream
         if (!input.ready()) {
             return null;
@@ -1557,47 +1644,77 @@ public class Dispatcher extends AbstractController {
         Map<String, String> map = new HashMap<>();
         if (request.getPath() != null) {
             map.put("service", request.getPath());
+        } else if (request.getHttpRequest() != null && request.getHttpRequest().getServletPath() != null) {
+            // Path not found so try to fall back on HTTPRequest Servlet Path
+            String service =
+                    extractServiceFromHttpRequest(request.getHttpRequest().getRequestURI());
+            if (!service.trim().isEmpty()) {
+                map.put("service", service.trim().toUpperCase());
+            }
         }
 
         return map;
     }
 
+    private static String extractServiceFromHttpRequest(String servletPath) {
+        // Find the last "/"
+        int lastSlashIndex = servletPath.lastIndexOf('/');
+        if (lastSlashIndex == -1) {
+            // If there is no "/", return a blank string
+            return "";
+        }
+        // If there are at least two "/"
+        int secondLastSlashIndex = servletPath.lastIndexOf('/', lastSlashIndex - 1);
+        // second slash is the last character
+        if (secondLastSlashIndex != -1 && lastSlashIndex == servletPath.length() - 1) {
+            // Extract the characters between the second-to-last and the last "/"
+            return servletPath.substring(secondLastSlashIndex + 1, lastSlashIndex);
+        } else {
+            // Does not end with a "/", return everything after the last "/"
+            return servletPath.substring(lastSlashIndex + 1);
+        }
+    }
+
     /**
-     * To be called once determined the incoming request is an HTTP POST request
-     * with a request body, and the request's {@link Request#getInput() input
-     * reader} has been set; in order to pre-parse the XML request body root element
-     * and establish the following request properties:
+     * To be called once determined the incoming request is an HTTP POST request with a request body, and the request's
+     * {@link Request#getInput() input reader} has been set; in order to pre-parse the XML request body root element and
+     * establish the following request properties:
+     *
      * <p>
+     *
      * <ul>
-     * <li>{@link Request#setNamespace namespace}: The xml root element's namespace,
-     * or {@code ""} (empty string) if {@code null}
-     * <li>{@link Request#setPostRequestElementName PostRequestElementName}: The xml
-     * root element name (e.g. {@code GetMap}, {@code GetFeature},
-     * {@code StyledLayerDescriptor}, etc.)
-     * <li>{@link Request#setRequest: The xml root element name, assuming it matches
-     * the request name, might be overriten later while parting the request's query
-     * string key-value pairs
-     * <li>{@link Request#setService service}: matching the xml root element's
-     * {@code service} attribute, or {@code null}
-     * <li>{@link Request#setVersion version}: matching the xml root element's
-     * {@code version} attribute, or {@code null}
-     * <li>{@link Request#setOutputFormat outputFormat}: matching the xml root
-     * element's {@code outputFormat} attribute, or {@code null}
+     *   <li>{@link Request#setNamespace namespace}: The xml root element's namespace, or {@code ""} (empty string) if
+     *       {@code null}
+     *   <li>{@link Request#setPostRequestElementName PostRequestElementName}: The xml root element name (e.g.
+     *       {@code GetMap}, {@code GetFeature}, {@code StyledLayerDescriptor}, etc.)
+     *   <li>{@link Request#setRequest}: The xml root element name, assuming it matches the request name, might be
+     *       overridden later while parting the request's query string key-value pairs
+     *   <li>{@link Request#setService service}: matching the xml root element's {@code service} attribute, or
+     *       {@code null}
+     *   <li>{@link Request#setVersion version}: matching the xml root element's {@code version} attribute, or
+     *       {@code null}
+     *   <li>{@link Request#setOutputFormat outputFormat}: matching the xml root element's {@code outputFormat}
+     *       attribute, or {@code null}
      * </ul>
      *
-     * @param req The request to set properties to based on the xml request body's
-     *            root element
+     * @param req The request to set properties to based on the xml request body's root element
+     * @param citeCompliant Whether to perform version negotiation for OWS requests
      * @return a {@link Map} containing the parsed parameters.
      * @throws Exception if there was an error reading the input.
      */
-    public Request readOpPost(Request req) throws Exception {
+    public static Request readOpPost(Request req, boolean citeCompliant) throws Exception {
         String namespace;
         String elementName;
         String request;
         String service;
         String version;
         String outputFormat;
-
+        List<String> acceptVersions = new ArrayList<>();
+        // We parse the root element to determine the metadata, then rewind the input stream and start parsing again.
+        // See GEOS-10509 .  req.getInput must be a BufferedReader, so we wrap it.
+        @SuppressWarnings("PMD.CloseResource")
+        RewindableReader rewindableReader = new RewindableReader(req.getInput());
+        req.setInput(new BufferedReader(rewindableReader));
         XMLStreamReader parser = createParserForRootElement(req);
         try {
             // position at root element
@@ -1612,22 +1729,75 @@ public class Dispatcher extends AbstractController {
             service = parser.getAttributeValue(null, "service");
             version = parser.getAttributeValue(null, "version");
             outputFormat = parser.getAttributeValue(null, "outputFormat");
+
+            // GetCapabilities request may have AcceptVersions, needed for version negotiation in OWS
+            boolean done = false;
+            int lastEvent = -1;
+            if ("GetCapabilities".equals(request)) {
+                acceptVersions = new ArrayList<>();
+                while (parser.hasNext()) {
+                    lastEvent = parser.next();
+                    if (START_ELEMENT == lastEvent
+                            && parser.getName().getLocalPart().equals("AcceptVersions")) break;
+                    else if (END_ELEMENT == lastEvent
+                            && parser.getName().getLocalPart().equals("GetCapabilities")) {
+                        done = true;
+                        break;
+                    }
+                }
+
+                while (!done && parser.hasNext()) {
+                    int next = parser.next();
+                    if (START_ELEMENT == next && parser.getName().getLocalPart().equals("Version")) {
+                        String v = parser.getElementText();
+                        acceptVersions.add(v);
+                    } else if (END_ELEMENT == next) {
+                        String localPart = parser.getName().getLocalPart();
+                        if (localPart.equals("AcceptVersions") || localPart.equals("GetCapabilities")) break;
+                    }
+                }
+            }
         } finally {
             parser.close();
         }
 
+        // Done getting metadata from the root element.  Rewind and do a real parse.  We need a fresh
+        // BufferedReader as we can't fully reset it.
+        rewindableReader.rewind();
+        req.setInput(new BufferedReader(rewindableReader));
+
         req.setNamespace(normalize(namespace));
         req.setPostRequestElementName(normalize(elementName));
         // These may already be given by the request query string KVP's, override only if non-null
+        boolean isCapabilitiesRequest = "GetCapabilities".equals(request);
         if (request != null) {
             req.setRequest(normalize(request));
         }
+
         if (service != null) {
             req.setService(normalize(service));
         }
+
+        if (acceptVersions != null) req.setAcceptVersions(acceptVersions);
+
+        // normally the service is implied by the namespace of the request, but we might have negotiation (odd case)
         if (version != null) {
-            req.setVersion(normalizeVersion(normalize(version)));
+            req.setVersion(normalizeVersion(version));
+        } else if (isCapabilitiesRequest && acceptVersions != null && !acceptVersions.isEmpty()) {
+            // negotiation with accept version
+            List<String> supportedVersions = null;
+            if (service != null) {
+                req.setService(normalize(service));
+                supportedVersions = getEnabledVersions(service);
+            }
+            version = RequestUtils.getVersionOWS(supportedVersions, acceptVersions, citeCompliant);
+            if (version == null) versionNegotiationFailed();
         }
+        // set the final version after negotiation
+        if (version != null) {
+            req.setVersion(version);
+        }
+
         if (outputFormat != null) {
             req.setOutputFormat(normalize(outputFormat));
         }
@@ -1635,26 +1805,15 @@ public class Dispatcher extends AbstractController {
         return req;
     }
 
-    private XMLStreamReader createParserForRootElement(Request req)
+    private static XMLStreamReader createParserForRootElement(Request req)
             throws IOException, FactoryConfigurationError, XMLStreamException {
-        char[] buff = new char[XML_LOOKAHEAD];
-        {
-            // Read into buff and use that for the XML stream reader, using req.getInput() directly
-            // can mess up the BufferedReader's state depending on the implementation
-            @SuppressWarnings("PMD.CloseResource")
-            BufferedReader input = req.getInput();
-            input.mark(XML_LOOKAHEAD);
-            input.read(buff);
-            input.reset();
-        }
         // create stream parser
         XMLInputFactory factory = XMLInputFactory.newFactory();
         // disable DTDs
         factory.setProperty(XMLInputFactory.SUPPORT_DTD, false);
         // disable external entities
         factory.setProperty(XMLInputFactory.IS_SUPPORTING_EXTERNAL_ENTITIES, false);
-        XMLStreamReader parser = factory.createXMLStreamReader(new CharArrayReader(buff));
-        return parser;
+        return factory.createXMLStreamReader(req.getInput());
     }
 
     void exception(Throwable t, Service service, Request request) {
@@ -1663,8 +1822,11 @@ public class Dispatcher extends AbstractController {
                 && !(current instanceof ClientStreamAbortedException)
                 && !isSecurityException(current)
                 && !(current instanceof HttpErrorCodeException)) {
-            if (current instanceof SAXException) current = ((SAXException) current).getException();
-            else current = current.getCause();
+            if (current instanceof SAXException exception) {
+                current = exception.getException();
+            } else {
+                current = current.getCause();
+            }
         }
         if (current instanceof ClientStreamAbortedException) {
             logger.log(Level.FINER, "Client has closed stream", t);
@@ -1674,8 +1836,7 @@ public class Dispatcher extends AbstractController {
             throw (RuntimeException) current;
         }
 
-        if (current instanceof HttpErrorCodeException) {
-            HttpErrorCodeException ece = (HttpErrorCodeException) current;
+        if (current instanceof HttpErrorCodeException ece) {
             int errorCode = ece.getErrorCode();
             if (errorCode < 199 || errorCode > 299) {
                 logger.log(Level.FINE, "", t);
@@ -1720,8 +1881,8 @@ public class Dispatcher extends AbstractController {
             // unwind the exception stack until we find one we know about
             Throwable cause = t;
             while (cause != null) {
-                if (cause instanceof ServiceException) {
-                    errorCode = ((ServiceException) cause).getCode();
+                if (cause instanceof ServiceException exception) {
+                    errorCode = exception.getCode();
                     break;
                 }
                 cause = cause.getCause();
@@ -1763,24 +1924,23 @@ public class Dispatcher extends AbstractController {
         // find an exception handler
         ServiceExceptionHandler handler = null;
 
-        if (service != null) {
-            // look up the service exception handler
-            Collection handlers = GeoServerExtensions.extensions(ServiceExceptionHandler.class);
-            for (Object o : handlers) {
-                ServiceExceptionHandler seh = (ServiceExceptionHandler) o;
-
-                if (seh.getServices().contains(service)) {
-                    // found one,
-                    handler = seh;
-
-                    break;
-                }
+        // look up the service exception handler
+        List<ServiceExceptionHandler> handlers = GeoServerExtensions.extensions(ServiceExceptionHandler.class);
+        for (ServiceExceptionHandler seh : handlers) {
+            if (seh.canHandle(service, request)) {
+                handler = seh;
+                break;
             }
         }
 
         if (handler == null) {
-            // none found, fall back on default
-            handler = new OWS10ServiceExceptionHandler();
+            // none found, make a guess... if there is an "acceptVersions" it cannot be 1.0, default to 1.1 althought it
+            // could also be 2.0 (hey... that's why it's a guess)
+            if (request.getAcceptVersions() != null) {
+                handler = new OWS11ServiceExceptionHandler();
+            } else {
+                handler = new OWS10ServiceExceptionHandler();
+            }
         }
 
         // if SOAP request use special SOAP exception handler, but only for OWS requests because
@@ -1816,7 +1976,40 @@ public class Dispatcher extends AbstractController {
      * @return true if t is a security exception
      */
     public static boolean isSecurityException(Throwable t) {
-        return t != null
-                && t.getClass().getPackage().getName().startsWith("org.springframework.security");
+        return t != null && t.getClass().getPackage().getName().startsWith("org.springframework.security");
+    }
+
+    /**
+     * Gets supported versions for a service, filtering out any disabled versions using registered ServiceVersionFilter
+     * extensions.
+     *
+     * @param serviceId The service identifier (e.g., "WMS", "WFS")
+     * @return List of enabled versions for the service
+     */
+    private static List<String> getEnabledVersions(String serviceId) {
+        List<String> versions = RequestUtils.getSupportedVersions(serviceId);
+        logger.info("Dispatcher.getEnabledVersions for " + serviceId + ", all versions: " + versions);
+
+        Collection<ServiceVersionFilter> filters = GeoServerExtensions.extensions(ServiceVersionFilter.class);
+        logger.info("Found " + filters.size() + " ServiceVersionFilter(s)");
+        if (!filters.isEmpty()) {
+            Collection<Service> services = GeoServerExtensions.extensions(Service.class);
+            Service service = services.stream()
+                    .filter(s -> s.getId().equalsIgnoreCase(serviceId))
+                    .findFirst()
+                    .orElse(null);
+
+            if (service != null) {
+                for (ServiceVersionFilter filter : filters) {
+                    versions = filter.filterVersions(service, versions);
+                }
+            }
+        }
+
+        if (versions != null) {
+            versions.sort(Comparator.comparing(Version::new, Comparator.reverseOrder()));
+        }
+
+        return versions;
     }
 }
