@@ -5,28 +5,29 @@
  */
 package org.geoserver.wcs.responses;
 
-import com.sun.media.imageio.plugins.tiff.BaselineTIFFTagSet;
+import static java.util.Map.entry;
+
+import it.geosolutions.imageio.plugins.tiff.BaselineTIFFTagSet;
 import it.geosolutions.imageioimpl.plugins.tiff.TIFFLZWCompressor;
 import java.awt.Dimension;
 import java.awt.image.RenderedImage;
 import java.awt.image.SampleModel;
 import java.io.IOException;
 import java.io.OutputStream;
-import java.util.Arrays;
-import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.logging.Logger;
 import org.geoserver.config.GeoServer;
 import org.geoserver.platform.OWS20Exception;
 import org.geoserver.wcs.WCSInfo;
+import org.geotools.api.coverage.grid.GridEnvelope;
+import org.geotools.api.parameter.ParameterValueGroup;
 import org.geotools.coverage.grid.GridCoverage2D;
 import org.geotools.coverage.grid.io.imageio.GeoToolsWriteParams;
 import org.geotools.gce.geotiff.GeoTiffFormat;
 import org.geotools.gce.geotiff.GeoTiffWriteParams;
 import org.geotools.util.Utilities;
 import org.geotools.util.logging.Logging;
-import org.opengis.coverage.grid.GridEnvelope;
-import org.opengis.parameter.ParameterValueGroup;
 import org.vfny.geoserver.wcs.WcsException;
 import org.vfny.geoserver.wcs.WcsException.WcsExceptionCode;
 
@@ -36,11 +37,9 @@ import org.vfny.geoserver.wcs.WcsException.WcsExceptionCode;
  * @author $Author: Alessio Fabiani (alessio.fabiani@gmail.com) $ (last modification)
  * @author Simone Giannecchini, GeoSolutions SAS
  */
-public class GeoTIFFCoverageResponseDelegate extends BaseCoverageResponseDelegate
-        implements CoverageResponseDelegate {
+public class GeoTIFFCoverageResponseDelegate extends BaseCoverageResponseDelegate implements CoverageResponseDelegate {
 
-    private static final Logger LOGGER =
-            Logging.getLogger(GeoTIFFCoverageResponseDelegate.class.toString());
+    private static final Logger LOGGER = Logging.getLogger(GeoTIFFCoverageResponseDelegate.class.toString());
 
     /** DEFAULT_JPEG_COMPRESSION_QUALITY */
     private static final float DEFAULT_JPEG_COMPRESSION_QUALITY = 0.75f;
@@ -55,11 +54,10 @@ public class GeoTIFFCoverageResponseDelegate extends BaseCoverageResponseDelegat
     /** Parameter controlling the compression type */
     public static final String COMPRESSION = "compression";
 
-    @SuppressWarnings("serial")
     public GeoTIFFCoverageResponseDelegate(GeoServer geoserver) {
         super(
                 geoserver,
-                Arrays.asList(
+                List.of(
                         "tif",
                         "tiff",
                         "geotiff",
@@ -68,31 +66,25 @@ public class GeoTIFFCoverageResponseDelegate extends BaseCoverageResponseDelegat
                         "GeoTIFF",
                         "image/geotiff",
                         "image/tiff;application=geotiff"), // output formats
-                new HashMap<String, String>() { // file extensions
-                    {
-                        put("tiff", "tif");
-                        put("tiff", "tif");
-                        put("geotiff", "tif");
-                        put("TIFF", "tif");
-                        put("GEOTIFF", "tif");
-                        put("GeoTIFF", "tif");
-                        put("image/geotiff", "tif");
-                        put("image/tiff", "tif");
-                        put("image/tiff;application=geotiff", "tif");
-                    }
-                },
-                new HashMap<String, String>() { // mime types
-                    {
-                        put("tiff", "image/tiff");
-                        put("tif", "image/tiff");
-                        put("geotiff", "image/tiff");
-                        put("TIFF", "image/tiff");
-                        put("GEOTIFF", "image/tiff");
-                        put("GeoTIFF", "image/tiff");
-                        put("image/geotiff", "image/tiff");
-                        put("image/tiff;application=geotiff", "image/tiff;application=geotiff");
-                    }
-                });
+                Map.ofEntries( // file extensions
+                        entry("tif", "tif"),
+                        entry("tiff", "tif"),
+                        entry("geotiff", "tif"),
+                        entry("TIFF", "tif"),
+                        entry("GEOTIFF", "tif"),
+                        entry("GeoTIFF", "tif"),
+                        entry("image/geotiff", "tif"),
+                        entry("image/tiff", "tif"),
+                        entry("image/tiff;application=geotiff", "tif")),
+                Map.ofEntries( // mime types
+                        entry("tiff", "image/tiff"),
+                        entry("tif", "image/tiff"),
+                        entry("geotiff", "image/tiff"),
+                        entry("TIFF", "image/tiff"),
+                        entry("GEOTIFF", "image/tiff"),
+                        entry("GeoTIFF", "image/tiff"),
+                        entry("image/geotiff", "image/tiff"),
+                        entry("image/tiff;application=geotiff", "image/tiff;application=geotiff")));
     }
 
     @Override
@@ -132,16 +124,14 @@ public class GeoTIFFCoverageResponseDelegate extends BaseCoverageResponseDelegat
      *
      * <p>Notice that the Tiff ImageWriter supports only pixel interleaving.
      *
-     * @param encondingParameters a {@link Map} of {@link String} keys with {@link String} values to
-     *     hold the encoding parameters.
-     * @param sourceCoverage an instance of {@link GeoTiffWriteParams} to be massaged as per the
-     *     provided encoding parameters.
+     * @param encondingParameters a {@link Map} of {@link String} keys with {@link String} values to hold the encoding
+     *     parameters.
+     * @param sourceCoverage an instance of {@link GeoTiffWriteParams} to be massaged as per the provided encoding
+     *     parameters.
      * @throws WcsException in case there are invalid or unsupported options.
      */
     private void handleInterleaving(
-            Map<String, String> encondingParameters,
-            GridCoverage2D sourceCoverage,
-            GeoTiffWriterHelper writerHelper)
+            Map<String, String> encondingParameters, GridCoverage2D sourceCoverage, GeoTiffWriterHelper writerHelper)
             throws WcsException {
         // interleaving is optional
         if (encondingParameters.containsKey("interleave")) {
@@ -173,15 +163,13 @@ public class GeoTIFFCoverageResponseDelegate extends BaseCoverageResponseDelegat
      *
      * <p>Notice that tile width and height must be positive and multiple of 16.
      *
-     * @param encodingParameters a {@link Map} of {@link String} keys with {@link String} values to
-     *     hold the encoding parameters.
+     * @param encodingParameters a {@link Map} of {@link String} keys with {@link String} values to hold the encoding
+     *     parameters.
      * @param sourceCoverage the source {@link GridCoverage2D} to encode.
      * @throws WcsException in case there are invalid or unsupported options.
      */
     private void handleTiling(
-            Map<String, String> encodingParameters,
-            GridCoverage2D sourceCoverage,
-            GeoTiffWriterHelper helper)
+            Map<String, String> encodingParameters, GridCoverage2D sourceCoverage, GeoTiffWriterHelper helper)
             throws WcsException {
 
         // start with default dimension, since tileW and tileH are optional
@@ -199,11 +187,7 @@ public class GeoTIFFCoverageResponseDelegate extends BaseCoverageResponseDelegat
         if (gr.getSpan(1) < tileDimensions.height) {
             tileDimensions.height = gr.getSpan(1);
         }
-        LOGGER.fine(
-                "Source tiling reviewed to save space:"
-                        + tileDimensions.width
-                        + "x"
-                        + tileDimensions.height);
+        LOGGER.fine("Source tiling reviewed to save space:" + tileDimensions.width + "x" + tileDimensions.height);
 
         //
         // tiling
@@ -280,12 +264,11 @@ public class GeoTIFFCoverageResponseDelegate extends BaseCoverageResponseDelegat
      *   <li>Huffman is supported only for 1 bit images
      * </ol>
      *
-     * @param encodingParameters a {@link Map} of {@link String} keys with {@link String} values to
-     *     hold the encoding parameters.
+     * @param encodingParameters a {@link Map} of {@link String} keys with {@link String} values to hold the encoding
+     *     parameters.
      * @throws WcsException in case there are invalid or unsupported options.
      */
-    private void handleCompression(
-            Map<String, String> encodingParameters, GeoTiffWriterHelper helper)
+    private void handleCompression(Map<String, String> encodingParameters, GeoTiffWriterHelper helper)
             throws WcsException {
         // compression
         if (encodingParameters.containsKey(COMPRESSION)) {
@@ -303,8 +286,7 @@ public class GeoTIFFCoverageResponseDelegate extends BaseCoverageResponseDelegat
                     if (predictorS != null) {
                         if (predictorS.equals("Horizontal")) {
                             wp.setTIFFCompressor(
-                                    new TIFFLZWCompressor(
-                                            BaselineTIFFTagSet.PREDICTOR_HORIZONTAL_DIFFERENCING));
+                                    new TIFFLZWCompressor(BaselineTIFFTagSet.PREDICTOR_HORIZONTAL_DIFFERENCING));
                         } else if (predictorS.equals("Floatingpoint")) {
                             // NOT SUPPORTED YET
                             throw new OWS20Exception(
