@@ -5,6 +5,10 @@
  */
 package org.geoserver.web.data.workspace;
 
+import static org.geoserver.web.services.BaseServiceAdminPage.WORKSPACE_ADMIN_SERVICE_ACCESS;
+import static org.geoserver.web.util.WebUtils.IsWicketCssFileEmpty;
+
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
@@ -20,6 +24,7 @@ import org.apache.wicket.ajax.markup.html.form.AjaxSubmitLink;
 import org.apache.wicket.extensions.markup.html.tabs.AbstractTab;
 import org.apache.wicket.extensions.markup.html.tabs.ITab;
 import org.apache.wicket.extensions.markup.html.tabs.TabbedPanel;
+import org.apache.wicket.markup.html.WebComponent;
 import org.apache.wicket.markup.html.WebMarkupContainer;
 import org.apache.wicket.markup.html.basic.Label;
 import org.apache.wicket.markup.html.form.CheckBox;
@@ -28,8 +33,7 @@ import org.apache.wicket.markup.html.form.Form;
 import org.apache.wicket.markup.html.form.FormComponentPanel;
 import org.apache.wicket.markup.html.form.SubmitLink;
 import org.apache.wicket.markup.html.form.TextField;
-import org.apache.wicket.markup.html.image.Image;
-import org.apache.wicket.markup.html.link.BookmarkablePageLink;
+import org.apache.wicket.markup.html.image.ContextImage;
 import org.apache.wicket.markup.html.link.Link;
 import org.apache.wicket.markup.html.list.ListItem;
 import org.apache.wicket.markup.html.list.ListView;
@@ -53,9 +57,9 @@ import org.geoserver.config.ServiceInfo;
 import org.geoserver.config.SettingsInfo;
 import org.geoserver.config.impl.ServiceInfoImpl;
 import org.geoserver.ows.util.OwsUtils;
+import org.geoserver.platform.GeoServerExtensions;
 import org.geoserver.web.ComponentAuthorizer;
 import org.geoserver.web.GeoServerApplication;
-import org.geoserver.web.GeoServerBasePage;
 import org.geoserver.web.GeoServerSecuredPage;
 import org.geoserver.web.GeoserverAjaxSubmitLink;
 import org.geoserver.web.admin.ContactPanel;
@@ -67,7 +71,9 @@ import org.geoserver.web.security.AccessDataRulePanel;
 import org.geoserver.web.security.DataAccessRuleInfo;
 import org.geoserver.web.services.BaseServiceAdminPage;
 import org.geoserver.web.services.ServiceMenuPageInfo;
+import org.geoserver.web.wicket.CachingImage;
 import org.geoserver.web.wicket.GeoServerDialog;
+import org.geoserver.web.wicket.GsIcon;
 import org.geoserver.web.wicket.HelpLink;
 import org.geoserver.web.wicket.ParamResourceModel;
 import org.geoserver.web.wicket.URIValidator;
@@ -75,8 +81,10 @@ import org.geoserver.web.wicket.XMLNameValidator;
 import org.geotools.util.logging.Logging;
 
 /** Allows editing a specific workspace */
+// TODO WICKET8 - Verify this page works OK
 public class WorkspaceEditPage extends GeoServerSecuredPage {
 
+    @Serial
     private static final long serialVersionUID = 4341324830412716976L;
 
     private static final Logger LOGGER = Logging.getLogger("org.geoserver.web.data.workspace");
@@ -90,16 +98,16 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
     GeoServerDialog dialog;
     TabbedPanel<ITab> tabbedPanel;
 
-    /** Uses a "name" parameter to locate the workspace */
+    /** Uses a "name" or "workspace" parameter to locate the workspace */
     public WorkspaceEditPage(PageParameters parameters) {
-        String wsName = parameters.get("name").toString();
+        String wsName = parameters.get("name").toString(null);
+        if (wsName == null || wsName.isEmpty()) {
+            wsName = parameters.get("workspace").toString(null);
+        }
         WorkspaceInfo wsi = getCatalog().getWorkspaceByName(wsName);
 
         if (wsi == null) {
-            getSession()
-                    .error(
-                            new ParamResourceModel("WorkspaceEditPage.notFound", this, wsName)
-                                    .getString());
+            getSession().error(new ParamResourceModel("WorkspaceEditPage.notFound", this, wsName).getString());
             doReturn(WorkspacePage.class);
             return;
         }
@@ -121,82 +129,87 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
         if (ns == null) {
             // unfortunately this may happen if the namespace associated to the workspace was
             // deleted or never created
-            throw new RuntimeException(
-                    String.format(
-                            "Workspace '%s' associated namespace doesn't exists.", ws.getName()));
+            throw new RuntimeException("Workspace '%s' associated namespace doesn't exists.".formatted(ws.getName()));
         }
 
         nsModel = new NamespaceDetachableModel(ns);
 
         Form form = new Form<>("form", new CompoundPropertyModel<>(nsModel));
         List<ITab> tabs = new ArrayList<>();
-        tabs.add(
-                new AbstractTab(new Model<>("Basic Info")) {
+        tabs.add(new AbstractTab(new Model<>("Basic Info")) {
 
-                    private static final long serialVersionUID = 5216769765556937554L;
+            @Serial
+            private static final long serialVersionUID = 5216769765556937554L;
 
-                    @Override
-                    public WebMarkupContainer getPanel(String panelId) {
-                        try {
-                            basicInfoPanel =
-                                    new WsEditInfoPanel(panelId, wsModel, nsModel, defaultWs);
-                            return basicInfoPanel;
-                        } catch (Exception e) {
-                            throw new WicketRuntimeException(e);
-                        }
-                    }
-                });
+            @Override
+            public WebMarkupContainer getPanel(String panelId) {
+                try {
+                    basicInfoPanel = new WsEditInfoPanel(panelId, wsModel, nsModel, defaultWs);
+                    return basicInfoPanel;
+                } catch (Exception e) {
+                    throw new WicketRuntimeException(e);
+                }
+            }
+        });
         if (AccessDataRuleInfoManager.canAccess()) {
-            tabs.add(
-                    new AbstractTab(new Model<>("Security")) {
+            tabs.add(new AbstractTab(new Model<>("Security")) {
 
-                        private static final long serialVersionUID = 5216769765556937554L;
+                @Serial
+                private static final long serialVersionUID = 5216769765556937554L;
 
-                        @Override
-                        public WebMarkupContainer getPanel(String panelId) {
-                            try {
-                                AccessDataRuleInfoManager manager = new AccessDataRuleInfoManager();
-                                ListModel<DataAccessRuleInfo> ownModel =
-                                        new ListModel<>(
-                                                manager.getDataAccessRuleInfo(wsModel.getObject()));
-                                accessDataPanel =
-                                        new AccessDataRulePanel(panelId, wsModel, ownModel);
-                                return accessDataPanel;
-                            } catch (Exception e) {
-                                throw new WicketRuntimeException(e);
-                            }
-                        }
-                    });
+                @Override
+                public WebMarkupContainer getPanel(String panelId) {
+                    try {
+                        AccessDataRuleInfoManager manager = new AccessDataRuleInfoManager();
+                        ListModel<DataAccessRuleInfo> ownModel =
+                                new ListModel<>(manager.getDataAccessRuleInfo(wsModel.getObject()));
+                        accessDataPanel = new AccessDataRulePanel(panelId, wsModel, ownModel);
+                        return accessDataPanel;
+                    } catch (Exception e) {
+                        throw new WicketRuntimeException(e);
+                    }
+                }
+            });
         }
 
-        tabbedPanel =
-                new TabbedPanel<ITab>("tabs", tabs) {
+        tabbedPanel = new TabbedPanel<>("tabs", tabs) {
 
+            @Serial
+            private static final long serialVersionUID = 1L;
+
+            @Override
+            protected WebMarkupContainer newLink(String linkId, final int index) {
+                return new SubmitLink(linkId) {
+                    @Serial
                     private static final long serialVersionUID = 1L;
 
                     @Override
-                    protected WebMarkupContainer newLink(String linkId, final int index) {
-                        return new SubmitLink(linkId) {
-                            private static final long serialVersionUID = 1L;
-
-                            @Override
-                            public void onSubmit() {
-                                setSelectedTab(index);
-                            }
-                        };
+                    public void onSubmit() {
+                        setSelectedTab(index);
                     }
                 };
+            }
+        };
         tabbedPanel.setOutputMarkupId(true);
         form.add(tabbedPanel);
         form.add(submitLink());
         form.add(applyLink());
-        form.add(new BookmarkablePageLink<WorkspacePage>("cancel", WorkspacePage.class));
+        form.add(new Link<Void>("cancel") {
+            @Serial
+            private static final long serialVersionUID = 1L;
+
+            @Override
+            public void onClick() {
+                doReturn(WorkspacePage.class);
+            }
+        });
         add(form);
     }
 
     private SubmitLink submitLink() {
         return new SubmitLink("save") {
 
+            @Serial
             private static final long serialVersionUID = -3462848930497720229L;
 
             @Override
@@ -210,7 +223,7 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
         return new GeoserverAjaxSubmitLink("apply", this) {
 
             @Override
-            protected void onSubmitInternal(AjaxRequestTarget target, Form<?> form) {
+            protected void onSubmitInternal(AjaxRequestTarget target) {
                 saveWorkspace(false);
             }
         };
@@ -280,10 +293,7 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
                 }
             } catch (Exception e) {
                 LOGGER.log(
-                        Level.INFO,
-                        "Error saving access rules associated to workspace "
-                                + workspaceInfo.getName(),
-                        e);
+                        Level.INFO, "Error saving access rules associated to workspace " + workspaceInfo.getName(), e);
                 error(e.getMessage() == null ? e.toString() : e.getMessage());
             }
         } catch (RuntimeException e) {
@@ -304,6 +314,7 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
      * Data object to hold onto transient settings, and maintain state of enabled for the workspace.
      */
     static class Settings implements Serializable {
+        @Serial
         private static final long serialVersionUID = -5855608735160516252L;
 
         /** track selection */
@@ -315,7 +326,9 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
 
     static class ExistingSettingsModel extends LoadableDetachableModel<SettingsInfo> {
 
+        @Serial
         private static final long serialVersionUID = -8203239697623788188L;
+
         IModel<WorkspaceInfo> wsModel;
 
         ExistingSettingsModel(IModel<WorkspaceInfo> wsModel) {
@@ -331,7 +344,9 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
 
     static class NewSettingsModel extends Model<SettingsInfo> {
 
+        @Serial
         private static final long serialVersionUID = -4365626821652771933L;
+
         IModel<WorkspaceInfo> wsModel;
         SettingsInfo info;
 
@@ -364,15 +379,26 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
 
     class WsEditInfoPanel extends Panel {
 
+        private static final boolean isCssEmpty = IsWicketCssFileEmpty(WorkspaceEditPage.WsEditInfoPanel.class);
+
+        @Override
+        public void renderHead(org.apache.wicket.markup.head.IHeaderResponse response) {
+            super.renderHead(response);
+            // if the panel-specific CSS file contains actual css then have the browser load the css
+            if (!isCssEmpty) {
+                response.render(org.apache.wicket.markup.head.CssHeaderItem.forReference(
+                        new org.apache.wicket.request.resource.PackageResourceReference(
+                                getClass(), getClass().getSimpleName() + ".css")));
+            }
+        }
+
+        @Serial
         private static final long serialVersionUID = -8487041433764733692L;
 
         boolean defaultWs;
 
         public WsEditInfoPanel(
-                String id,
-                IModel<WorkspaceInfo> wsModel,
-                IModel<NamespaceInfo> nsModel,
-                boolean defaultWs) {
+                String id, IModel<WorkspaceInfo> wsModel, IModel<NamespaceInfo> nsModel, boolean defaultWs) {
             super(id, wsModel);
             this.defaultWs = defaultWs;
 
@@ -385,8 +411,7 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
 
             name.add(new XMLNameValidator());
             add(name);
-            TextField<String> uri =
-                    new TextField<>("uri", new PropertyModel<>(nsModel, "uRI"), String.class);
+            TextField<String> uri = new TextField<>("uri", new PropertyModel<>(nsModel, "uRI"), String.class);
             uri.setRequired(true);
             uri.add(new URIValidator());
             add(uri);
@@ -394,8 +419,7 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
             add(defaultChk);
             defaultChk.setEnabled(isFullAdmin);
 
-            CheckBox isolatedChk =
-                    new CheckBox("isolated", new PropertyModel<>(wsModel, "isolated"));
+            CheckBox isolatedChk = new CheckBox("isolated", new PropertyModel<>(wsModel, "isolated"));
             add(isolatedChk);
             defaultChk.setEnabled(isFullAdmin);
 
@@ -411,6 +435,20 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
 
     class SettingsPanel extends FormComponentPanel<Serializable> {
 
+        private static final boolean isCssEmpty = IsWicketCssFileEmpty(WorkspaceEditPage.SettingsPanel.class);
+
+        @Override
+        public void renderHead(org.apache.wicket.markup.head.IHeaderResponse response) {
+            super.renderHead(response);
+            // if the panel-specific CSS file contains actual css then have the browser load the css
+            if (!isCssEmpty) {
+                response.render(org.apache.wicket.markup.head.CssHeaderItem.forReference(
+                        new org.apache.wicket.request.resource.PackageResourceReference(
+                                getClass(), getClass().getSimpleName() + ".css")));
+            }
+        }
+
+        @Serial
         private static final long serialVersionUID = -1580928887379954134L;
 
         WebMarkupContainer settingsContainer;
@@ -431,74 +469,57 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
 
             set = new Settings();
             set.enabled = settings != null;
-            set.model =
-                    settings != null
-                            ? new ExistingSettingsModel(wsModel)
-                            : new NewSettingsModel(wsModel);
+            set.model = settings != null ? new ExistingSettingsModel(wsModel) : new NewSettingsModel(wsModel);
 
-            add(
-                    new CheckBox("enabled", new PropertyModel<>(set, "enabled"))
-                            .add(
-                                    new AjaxFormComponentUpdatingBehavior("click") {
-                                        private static final long serialVersionUID =
-                                                -7851699665702753119L;
+            add(new CheckBox("enabled", new PropertyModel<>(set, "enabled"))
+                    .add(new AjaxFormComponentUpdatingBehavior("click") {
+                        @Serial
+                        private static final long serialVersionUID = -7851699665702753119L;
 
-                                        @Override
-                                        protected void onUpdate(AjaxRequestTarget target) {
-                                            contactHeading.setVisible(set.enabled);
-                                            contactPanel.setVisible(set.enabled);
-                                            otherHeading.setVisible(set.enabled);
-                                            otherSettingsPanel.setVisible(set.enabled);
-                                            target.add(settingsContainer);
-                                        }
-                                    }));
+                        @Override
+                        protected void onUpdate(AjaxRequestTarget target) {
+                            contactHeading.setVisible(set.enabled);
+                            contactPanel.setVisible(set.enabled);
+                            otherHeading.setVisible(set.enabled);
+                            otherSettingsPanel.setVisible(set.enabled);
+                            target.add(settingsContainer);
+                        }
+                    }));
 
             settingsContainer = new WebMarkupContainer("settingsContainer");
             settingsContainer.setOutputMarkupId(true);
             add(settingsContainer);
 
-            contactHeading =
-                    new Label(
-                            "contactHeading",
-                            new StringResourceModel("ContactPage.title", null, null));
+            contactHeading = new Label("contactHeading", new StringResourceModel("ContactPage.title", null, null));
             contactHeading.setVisible(set.enabled);
             settingsContainer.add(contactHeading);
 
             contactPanel =
-                    new ContactPanel(
-                            "contact",
-                            new CompoundPropertyModel<>(new PropertyModel<>(set.model, "contact")));
+                    new ContactPanel("contact", new CompoundPropertyModel<>(new PropertyModel<>(set.model, "contact")));
             contactPanel.setOutputMarkupId(true);
             contactPanel.setVisible(set.enabled);
             settingsContainer.add(contactPanel);
 
-            otherHeading =
-                    new Label(
-                            "otherHeading",
-                            new StringResourceModel(
-                                    "GlobalSettingsPage.serviceSettings", null, null));
+            otherHeading = new Label(
+                    "otherHeading", new StringResourceModel("GlobalSettingsPage.serviceSettings", null, null));
             otherHeading.setVisible(set.enabled);
             settingsContainer.add(otherHeading);
 
-            otherSettingsPanel =
-                    new WebMarkupContainer("otherSettings", new CompoundPropertyModel<>(set.model));
+            otherSettingsPanel = new WebMarkupContainer("otherSettings", new CompoundPropertyModel<>(set.model));
             otherSettingsPanel.setOutputMarkupId(true);
             otherSettingsPanel.setVisible(set.enabled);
             otherSettingsPanel.add(new CheckBox("verbose"));
             otherSettingsPanel.add(new CheckBox("verboseExceptions"));
             otherSettingsPanel.add(new CheckBox("localWorkspaceIncludesPrefix"));
-            otherSettingsPanel.add(
-                    new TextField<Integer>("numDecimals").add(RangeValidator.minimum(0)));
-            otherSettingsPanel.add(
-                    new DropDownChoice<>("charset", GlobalSettingsPage.AVAILABLE_CHARSETS));
+            otherSettingsPanel.add(new TextField<Integer>("numDecimals").add(RangeValidator.minimum(0)));
+            otherSettingsPanel.add(new DropDownChoice<>("charset", GlobalSettingsPage.AVAILABLE_CHARSETS));
             // Formerly provided a new UrlValidator(), but removed with placeholder compatibility
-            otherSettingsPanel.add(new TextField<String>("proxyBaseUrl"));
+            otherSettingsPanel.add(new TextField<>("proxyBaseUrl"));
             otherSettingsPanel.add(new CheckBox("useHeadersProxyURL"));
 
             // Addition of pluggable extension points
             ListView<SettingsPluginPanelInfo> extensions =
-                    SettingsPluginPanelInfo.createExtensions(
-                            "extensions", set.model, getGeoServerApplication());
+                    SettingsPluginPanelInfo.createExtensions("extensions", set.model, getGeoServerApplication());
             otherSettingsPanel.add(extensions);
 
             settingsContainer.add(otherSettingsPanel);
@@ -510,6 +531,7 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
      * the workspace.
      */
     static class Service implements Serializable {
+        @Serial
         private static final long serialVersionUID = 3283857206025172687L;
 
         /** track selection */
@@ -524,7 +546,9 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
 
     static class NewServiceModel extends Model<ServiceInfo> {
 
+        @Serial
         private static final long serialVersionUID = -3467556623909292282L;
+
         IModel<WorkspaceInfo> wsModel;
         Class<ServiceInfo> serviceClass;
         ServiceInfo service;
@@ -551,6 +575,11 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
             // initialize from global service
             ServiceInfo global = gs.getService(serviceClass);
             OwsUtils.copy(global, newService, serviceClass);
+            // deep-copy disabledVersions so workspace service has its own independent list
+            ServiceInfoImpl newServiceImpl = (ServiceInfoImpl) newService;
+            if (newServiceImpl.getDisabledVersions() != null) {
+                newServiceImpl.setDisabledVersions(new ArrayList<>(newServiceImpl.getDisabledVersions()));
+            }
             newService.setWorkspace(wsModel.getObject());
 
             // hack, but need id to be null so its considered unattached
@@ -562,7 +591,9 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
 
     static class ExistingServiceModel extends LoadableDetachableModel<ServiceInfo> {
 
+        @Serial
         private static final long serialVersionUID = -2170117760214309321L;
+
         IModel<WorkspaceInfo> wsModel;
         Class<ServiceInfo> serviceClass;
 
@@ -573,15 +604,28 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
 
         @Override
         protected ServiceInfo load() {
-            return GeoServerApplication.get()
-                    .getGeoServer()
-                    .getService(wsModel.getObject(), serviceClass);
+            return GeoServerApplication.get().getGeoServer().getService(wsModel.getObject(), serviceClass);
         }
     }
 
     class ServicesPanel extends FormComponentPanel<Serializable> {
 
+        private static final boolean isCssEmpty = IsWicketCssFileEmpty(WorkspaceEditPage.ServicesPanel.class);
+
+        @Override
+        public void renderHead(org.apache.wicket.markup.head.IHeaderResponse response) {
+            super.renderHead(response);
+            // if the panel-specific CSS file contains actual css then have the browser load the css
+            if (!isCssEmpty) {
+                response.render(org.apache.wicket.markup.head.CssHeaderItem.forReference(
+                        new org.apache.wicket.request.resource.PackageResourceReference(
+                                getClass(), getClass().getSimpleName() + ".css")));
+            }
+        }
+
+        @Serial
         private static final long serialVersionUID = 7375904545106343626L;
+
         List<Service> services;
 
         public ServicesPanel(String id, final IModel<WorkspaceInfo> wsModel) {
@@ -590,77 +634,70 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
             add(new HelpLink("servicesHelp").setDialog(dialog));
 
             services = services(wsModel);
-            ListView<Service> serviceList =
-                    new ListView<Service>("services", services) {
+            ListView<Service> serviceList = new ListView<>("services", services) {
 
-                        private static final long serialVersionUID = -4142739871430618450L;
+                @Serial
+                private static final long serialVersionUID = -4142739871430618450L;
+
+                @Override
+                protected void populateItem(ListItem<Service> item) {
+                    Service service = item.getModelObject();
+
+                    // Enable the link if;
+                    //    1. the service is enabled
+                    //    2. We are a global admin or the WORKSPACE_ADMIN_SERVICE_ACCESS is set
+                    boolean workspaceAdminOverride =
+                            Boolean.parseBoolean(GeoServerExtensions.getProperty(WORKSPACE_ADMIN_SERVICE_ACCESS));
+                    boolean isEnabled = (isAuthenticatedAsAdmin() || workspaceAdminOverride);
+
+                    final Link<Service> link = new ServiceLink(service, wsModel);
+                    link.setOutputMarkupId(true);
+                    link.setEnabled(isEnabled);
+
+                    AjaxCheckBox enabled = new AjaxCheckBox("enabled", new PropertyModel<>(service, "enabled")) {
+                        @Serial
+                        private static final long serialVersionUID = 6369730006169869310L;
 
                         @Override
-                        protected void populateItem(ListItem<Service> item) {
-                            Service service = item.getModelObject();
-
-                            final Link<Service> link = new ServiceLink(service, wsModel);
-                            link.setOutputMarkupId(true);
-                            link.setEnabled(service.enabled);
-
-                            AjaxCheckBox enabled =
-                                    new AjaxCheckBox(
-                                            "enabled", new PropertyModel<>(service, "enabled")) {
-                                        private static final long serialVersionUID =
-                                                6369730006169869310L;
-
-                                        @Override
-                                        protected void onUpdate(AjaxRequestTarget target) {
-                                            link.setEnabled(getModelObject());
-                                            target.add(link);
-                                        }
-                                    };
-                            item.add(enabled);
-
-                            ServiceMenuPageInfo info = service.adminPage;
-
-                            link.add(
-                                    new AttributeModifier(
-                                            "title",
-                                            new StringResourceModel(
-                                                    info.getDescriptionKey(), null, null)));
-                            link.add(
-                                    new Label(
-                                            "link.label",
-                                            new StringResourceModel(
-                                                    info.getTitleKey(), null, null)));
-
-                            Image image;
-                            if (info.getIcon() != null) {
-                                image =
-                                        new Image(
-                                                "link.icon",
-                                                new PackageResourceReference(
-                                                        info.getComponentClass(), info.getIcon()));
-                            } else {
-                                image =
-                                        new Image(
-                                                "link.icon",
-                                                new PackageResourceReference(
-                                                        GeoServerBasePage.class,
-                                                        "img/icons/silk/wrench.png"));
-                            }
-                            image.add(
-                                    new AttributeModifier(
-                                            "alt",
-                                            new ParamResourceModel(info.getTitleKey(), null)));
-                            link.add(image);
-                            item.add(link);
+                        protected void onUpdate(AjaxRequestTarget target) {
+                            link.setEnabled(getModelObject());
+                            target.add(link);
                         }
                     };
+                    item.add(enabled);
+
+                    ServiceMenuPageInfo info = service.adminPage;
+
+                    link.add(new AttributeModifier(
+                            "title", new StringResourceModel(info.getDescriptionKey(), null, null)));
+                    link.add(new Label("link.label", new StringResourceModel(info.getTitleKey(), null, null)));
+
+                    WebComponent image;
+                    String iconValue = info.getIcon();
+                    if (iconValue != null && !iconValue.isEmpty()) {
+                        if (iconValue.startsWith("gs-icon")) {
+                            image = new GsIcon("link.icon", iconValue);
+                        } else if (iconValue.startsWith("/")) {
+                            image = new ContextImage("link.icon", iconValue.substring(1));
+                        } else {
+                            image = new CachingImage(
+                                    "link.icon", new PackageResourceReference(info.getComponentClass(), iconValue));
+                        }
+                    } else {
+                        image = new GsIcon("link.icon", "gs-icon-wrench");
+                    }
+                    link.add(image);
+                    item.add(link);
+                    item.setEnabled(isEnabled);
+                }
+            };
             add(serviceList);
         }
 
         List<Service> services(IModel<WorkspaceInfo> wsModel) {
             List<Service> services = new ArrayList<>();
 
-            for (ServiceMenuPageInfo page :
-                    getGeoServerApplication().getBeansOfType(ServiceMenuPageInfo.class)) {
+            for (ServiceMenuPageInfo page : getGeoServerApplication().getBeansOfType(ServiceMenuPageInfo.class)) {
                 Service service = new Service();
                 service.adminPage = page;
                 service.enabled = isEnabled(wsModel, page);
@@ -669,10 +706,9 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
                 // otherwise create a live model to the existing service
                 @SuppressWarnings("unchecked")
                 Class<ServiceInfo> serviceClass = (Class<ServiceInfo>) page.getServiceClass();
-                service.model =
-                        !service.enabled
-                                ? new NewServiceModel(wsModel, serviceClass)
-                                : new ExistingServiceModel(wsModel, serviceClass);
+                service.model = !service.enabled
+                        ? new NewServiceModel(wsModel, serviceClass)
+                        : new ExistingServiceModel(wsModel, serviceClass);
                 services.add(service);
             }
 
@@ -685,7 +721,9 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
         }
 
         private class ServiceLink extends Link<Service> {
+            @Serial
             private static final long serialVersionUID = 1111536301891090436L;
+
             private final IModel<WorkspaceInfo> wsModel;
 
             public ServiceLink(Service service, IModel<WorkspaceInfo> wsModel) {
@@ -700,25 +738,23 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
 
                 if (s.model instanceof ExistingServiceModel) {
                     // service that has already been added,
-                    PageParameters pp =
-                            new PageParameters().add("workspace", wsModel.getObject().getName());
+                    PageParameters pp = new PageParameters()
+                            .add("workspace", wsModel.getObject().getName());
                     try {
-                        page =
-                                s.adminPage
-                                        .getComponentClass()
-                                        .getConstructor(PageParameters.class)
-                                        .newInstance(pp);
+                        page = s.adminPage
+                                .getComponentClass()
+                                .getConstructor(PageParameters.class)
+                                .newInstance(pp);
                     } catch (Exception e) {
                         throw new WicketRuntimeException(e);
                     }
                 } else {
                     // service that has yet to be added
                     try {
-                        page =
-                                s.adminPage
-                                        .getComponentClass()
-                                        .getConstructor(s.adminPage.getServiceClass())
-                                        .newInstance(s.model.getObject());
+                        page = s.adminPage
+                                .getComponentClass()
+                                .getConstructor(s.adminPage.getServiceClass())
+                                .newInstance(s.model.getObject());
                     } catch (Exception e) {
                         throw new WicketRuntimeException(e);
                     }
